--- a/docs/试验大纲1.md
+++ b/docs/试验大纲1.md
@@ -1,339 +1,293 @@
-## 实验 1：MPS 键维 vs Hankel 秩（验证定理 4.1 & 4.4）
+## 实验 1：MPS 键维 vs Hankel 秩
 
-### 目标 & 假设
+（验证定理 4.1、4.4 与 §7.2 的结构反例）
 
-**目标：**
+### 1. 理论对应与实验目标
 
-1. 数值验证
+**对应理论：**
+
+- **定理 4.1（秩上界）**：
+   $\operatorname{rank}(H_a)\le D,\quad \operatorname{rank}(H_p)\le D^2$。
+- **定理 4.4（D² 上界近紧 & 典型满秩）**：
+   对绝对连续分布的 MPS 参数，若 $|P|,|S|\ge D^2$，则 $\operatorname{rank}(H_p(P,S))=D^2$ 几乎处处成立。
+- **§7.2 结构化反例**：
+  - 7.2A：对角 MPS ⇒ $\operatorname{rank}(H_p)=1$；
+  - 7.2B：特殊构造 ⇒ $\operatorname{rank}(H_p)\le 3$，且第三奇异值随 $L$ 指数衰减。试验大纲1
+
+**实验主目标：**
+
+1. **验证上界正确性：**
+    对所有配置与样本，数值上观察
    $$
-   \mathrm{rank}(H_a)\le D,\quad \mathrm{rank}(H_p)\le D^2
+   \operatorname{rank}_\tau(H_a)\le\min(D,|P|,|S|),\quad
+   \operatorname{rank}_\tau(H_p)\le\min(D^2,|P|,|S|)。
    $$
-   并紧密靠近理论上界（定理 4.1）。
 
-2. 验证“典型满秩”现象（定理 4.4）：在随机 MPS 情况下，Hankel 秩几乎总是达到上界（在数值阈值意义下）。
+2. **验证“典型满秩”现象：**
+    在随机 MPS 下，当前缀/后缀不限制秩时，$\operatorname{rank}_\tau(H_p)$ **以极高频率等于** $\min(D^2,|P|,|S|)$，并对容差变化保持稳定。
 
-**假设（要验证）：**
+3. **验证结构化低秩反例：**
 
-- 对于**随机 MPS**（参数分布对 Lebesgue 测度绝对连续）：
-
-  - 当前缀/后缀集合满足 $|P|,|S|\ge D^2$ 时，
-    $$
-    \mathrm{rank}(H_p(P,S)) \approx \min(D^2,\ |P|,\ |S|)
-    $$
-
-  - 绝大多数样本达到 $D^2$（数值上接近满秩）。
-
-- 对于**结构化 MPS**（例如 7.2A 的对角构造）：
-
-  - Hankel 秩显著低于 $D^2$，例如 rank=1 或 3。
+   - rank‑1 构造始终给出 $\operatorname{rank}_\tau(H_p)=1$；
+   - rank‑3 构造满足 $\operatorname{rank}_\tau(H_p)\le 3$，并在奇异值谱上直接看到“第三奇异值指数衰减 → 近奇异”的现象。
 
 ------
 
-### 实验设置（参数选择）
+### 2. 实验问题与假设
 
-1. **字母表大小**
+**Q1：在给定键维 $D$ 下，Hankel 秩是否确实被 $D,D^2$ 限制？**
 
-   - 取 $\Sigma = {0,1}$ （$|\Sigma|=2$）为主；可选扩展到 $|\Sigma|=4$ 看 scaling。
+- **H1.1（上界假设）：**
+   对所有随机与结构化 MPS，
+  $$
+  \operatorname{rank}_\tau(H_a)\le D,\quad \operatorname{rank}_\tau(H_p)\le D^2,
+  $$
+  在考虑网格上限 $|P|,|S|$ 后应当观察到
+   $\operatorname{rank}_\tau(H_a)\le\min(D,|P|,|S|)$，
+   $\operatorname{rank}_\tau(H_p)\le\min(D^2,|P|,|S|)$。
 
-2. **序列长度 $L$**
+**Q2：随机 MPS 是否“典型满秩”？**
 
-   - $L \in {8,10,12}$。
+- **H2.1（典型满秩）：**
+   在 $|P|,|S|\ge D^2$ 的配置上，对绝对连续分布的随机 MPS，
+  $$
+  \Pr\big[\operatorname{rank}_\tau(H_p)=D^2\big]\approx 1,
+  $$
+  且随样本数增加，满秩频率趋近 1。
 
-   - 为了让 Theorem 4.4 真正“可见”，需要确保前缀/后缀数目不限制秩：
+**Q3：结构化例子是否能稳定地产生严格低秩或近奇异 Hankel？**
 
-     - 用切分点 $t_*=\lfloor L/2\rfloor$，
-     - 前缀数 $|P| = |\Sigma|^{t_*}$，后缀数 $|S| = |\Sigma|^{L-t_*}$，
-     - 希望 $|P|,|S| \ge D^2$。
-
-   - 因此，对于给定 $(|\Sigma|,D)$，只保留那些满足
-     $$
-     |\Sigma|^{\lfloor L/2\rfloor} \ge D^2,\quad
-     |\Sigma|^{L-\lfloor L/2\rfloor}\ge D^2
-     $$
-     的 $(L,D)$ 组合。否则理论上也只能看到 rank$\le\min(D^2,|P|,|S|)$。
-
-3. **键维 $D$**
-
-   - $D\in{2,3,4}$。
-   - 对每个 $(|\Sigma|,L,D)$ 组合，生成足够多随机样本（例如 50–100 个 MPS）。
-
-4. **MPS 类型**
-
-   - **随机 MPS：**
-     - 目标是“高纠缠、无显式结构”，满足绝对连续分布的假设。
-   - **结构化 MPS：**
-     - 用于构造 rank-deficient 的反例，如：
-       - 7.2A 的对角 MPS（理论秩=1）；
-       - 7.2B 式的 rank-3 构造。
+- **H3.1（rank‑1）：** rank‑1 对角构造始终 $\operatorname{rank}_\tau(H_p)=1$，与 $L,D$ 无关。
+- **H3.2（rank‑3）：** rank‑3 构造始终 $\operatorname{rank}_\tau(H_p)\le 3$，且第三奇异值 $\sigma_3(H_p)$ 随 $L$ 指数衰减，导致条件数 $\kappa(H_p)$ 随 $L$ 快速增大。
 
 ------
 
-### 关键实现细节
+### 3. 实验设置
 
-#### 1. 随机 MPS 的生成（建议方案）
+#### 3.1 参数空间
 
-以 $\Sigma={0,1}$ 为例，本地物理维度 $d=2$：
+- **字母表大小 $d=|\Sigma|$**
 
-对每个位置 $t=1,\dots,L$：
+  - 主设定：$\Sigma=\{0,1\}$（$d=2$）。
+  - 扩展：$d=4$（例如 $\{0,1,2,3\}$），用于观察 alphabet 变大时的 scaling，与当前脚本保持一致。exp1_mps_rank
 
-1. 对每个符号 $\sigma\in\Sigma$ 生成一个随机复矩阵
-   $$
-   A_t(\sigma)\in\mathbb C^{D\times D}
-   $$
+- **序列长度 $L$**
 
-   - 元素可取 i.i.d. 复高斯（real/imag ~ $\mathcal N(0,1)$）。
+  - 取 $L\in\{8,10,12\}$。
+  - 切分点 $t_\star=\lfloor L/2\rfloor$。
+  - 前缀集 $P=\Sigma^{t_\star}$，后缀集 $S=\Sigma^{L-t_\star}$，
+     $|P|=d^{t_\star},\ |S|=d^{L-t_\star}$。
 
-2. 对该位置做一次**左规范化**（可选但推荐）：
+- **键维 $D$**
 
-   - 计算：
-     $$
-     M_t = \sum_{\sigma\in\Sigma} A_t(\sigma) A_t(\sigma)^\dagger
-     $$
+  - 取 $D\in\{2,3,4\}$。
 
-   - 令 $M_t^{-1/2}$ 为 $M_t$ 的 Hermitian 逆平方根（通过特征分解或 SVD）。
-
-   - 更新：
-     $$
-     A_t(\sigma) \leftarrow M_t^{-1/2} A_t(\sigma)
-     $$
-
-   - 这样就满足 $\sum_\sigma A_t(\sigma)A_t(\sigma)^\dagger = I$（近似），有助于数值稳定。
-
-**边界向量**
-
-- 取 $\alpha,\beta\in\mathbb C^D$ 为随机复向量，然后归一化为 $|\alpha|_2=|\beta|_2=1$。
-
-**归一化整态**
-
-- 直接利用 MPS 表达计算所有 $x\in\Sigma^L$ 的振幅 $\psi(x)$，设置归一化因子：
+- **可见上界条件（避免网格限制）**
+   只保留满足
   $$
-  Z = \sum_{x} |\psi(x)|^2,\quad \psi(x)\leftarrow \psi(x)/\sqrt Z.
+  |P|\ge D^2,\quad |S|\ge D^2
   $$
+  的 $(d,L,D)$ 组合，否则直接跳过，因为此时 Hankel 秩上限由 $|P|,|S|$ 决定，无法真正看到 $D^2$ 上界。脚本中已经实现了这一步过滤。
 
-> 说明：
->  也可以从随机量子电路（Haar 随机单比特+有限深度纠缠）构造 MPS，但对“键维 vs Hankel 秩”的验证来说，直接在 MPS 空间采样更简单直接。
+- **样本数**（比现有实现稍微加大一档）
 
-#### 2. 结构化 MPS 的生成
+  - 随机 MPS：每个配置至少 $N_\text{rand}=50$ 个样本（现有脚本默认 10，可在大规模跑时调到 50–100）exp1_mps_rank；
+  - 结构化 MPS：每配置 rank‑1 / rank‑3 各 $N_\text{struct}=5$ 个样本足够（因为理论是确定性的，多个样本主要用于数值鲁棒性检查）。
 
-- **rank-1 例子（7.2A）**：
-  - 设置 $D=2$,
-  - $A(0) = \mathrm{diag}(1,\eta)$, $A(1)=\mathrm{diag}(\eta,1)$，$0<\eta<1$，
-  - $\alpha = \beta = e_1$（第一标准基）。
-  - 该构造理论上保证 $\mathrm{rank}(H_p)=1$。
-- **rank-3 例子（7.2B）**：
-  - 基于 7.2B 中的描述构造边界 $\alpha=\beta=[1,c]^\top$ 等参数。
-  - 该构造理论上 $\mathrm{rank}(H_p)\le 3$，且通过调整 $(c,\eta)$ 可观察近奇异行为。
+#### 3.2 MPS 类型与生成方式
 
-#### 3. Hankel 矩阵的构造
+实验包含三类 MPS（已经在 `exp1_mps_rank.py` 中实现）：exp1_mps_rank
 
-**(a) 生成全部字符串与振幅/概率**
+1. **随机 MPS（Random）**
+   - 每个位置 $t$ 和符号 $\sigma$ 生成随机复矩阵
+      $A_t(\sigma)\in\mathbb C^{D\times D}$，元素为 i.i.d. 复高斯；
+   - 进行**左规范化**：计算
+      $G_t=\sum_{\sigma} A_t(\sigma)A_t(\sigma)^\dagger$，
+      通过自写特征分解 `eig_hermitian` 得到 $G_t^{-1/2}$，更新
+      $A_t(\sigma)\leftarrow G_t^{-1/2}A_t(\sigma)$。
+   - 边界向量 $\alpha,\beta$ 为随机复向量后归一化：$\|\alpha\|_2=\|\beta\|_2=1$。
+   - 这一过程保证了每层近似满足左规范，并使参数分布对 Lebesgue 测度绝对连续。exp1_mps_rank
+2. **结构化 rank‑1 MPS（Structured rank‑1）**
+   - 对应 §7.2A，对角构造：
+     - $D\ge 2$，
+     - $A(0)=\mathrm{diag}(1,\eta,\dots)$，
+     - $A(1)$ 在第一对角元素处用 $\eta$ 与 1 交换（代码中对任意 $d$ 做了自然延拓）；
+     - $\alpha=\beta=e_1$。
+   - 实现见 `build_structured_mps_rank1`，理论上 $\operatorname{rank}(H_p)=1$。
+3. **结构化 rank‑3 MPS（Structured rank‑3）**
+   - 对应 §7.2B 的“两个对角块 + 参数 $c,\eta$”构造：
+     - 先在 $2\times2$ 子空间构造
+        $\mathrm{diag}(1,\eta)$、$\mathrm{diag}(\eta,1)$，再对高维 $D>2$ 做对角填充；
+     - 其他字母使用单位矩阵；
+     - 边界向量 $\alpha=\beta\propto [1,c,0,\dots,0]^\top$。
+   - 实现见 `build_structured_mps_rank3`，保证 $\operatorname{rank}(H_p)\le 3$，且第三奇异值随 $L$ 衰减。
 
-- 枚举 $x\in\Sigma^L$（例如通过二进制计数）。
+#### 3.3 Hankel 矩阵与嵌入构造
 
-- 对每个 $x=(x_1,\dots,x_L)$：
-  $$
-  \psi(x) = \alpha^\top\Big(\prod_{t=1}^L A_t(x_t)\Big)\beta,\qquad
-  p(x) = |\psi(x)|^2
-  $$
+为与理论的 MPS–WFA–Hankel 结构统一，实验采用**前缀/后缀嵌入**而不是显式构造完整 Hankel：
 
-- 可以顺便检查 $\sum_x p(x)\approx 1$，做归一化校验。
+1. **前缀嵌入**
+   - 从左向右传播：
+      $\ell(u)=\big(\prod_{t=1}^{|u|}A_t(u_t)\big)^\top\alpha$。
+   - 在实现中，通过 `compute_prefix_embeddings` 从 $\alpha$ 递推，生成所有 $|u|=t_\star$ 的 $\ell(u)$。
+2. **后缀嵌入**
+   - 从右向左传播：
+      $r(v)=\big(\prod_{t=L-|v|+1}^{L}A_t(v_{t'})\big)\beta$。
+   - 实现中通过 `compute_suffix_embeddings` 从 $\beta$ 递推，生成所有 $|v|=L-t_\star$ 的 $r(v)$。
+3. **振幅 Hankel 因子**
+   - 用 $L_\text{amp}=[\ell(u)]_{u\in P}$，$R_\text{amp}=[r(v)]_{v\in S}$，
+      则 $H_a=L_\text{amp}R_\text{amp}^\top$。
+4. **概率 Hankel 因子**
+   - 执行 Kronecker 嵌入：$\ell_p(u)=\ell(u)\otimes\overline{\ell(u)}$， $r_p(v)=r(v)\otimes\overline{r(v)}$；
+   - 用 `kron` 函数生成嵌入，得到
+      $L_\text{prob}=[\ell_p(u)]_{u\in P}, R_\text{prob}=[r_p(v)]_{v\in S}$，
+      则 $H_p=L_\text{prob}R_\text{prob}^\top$。
+5. **秩计算（不显式构造大矩阵）**
+   - 采用 `matrix_rank_from_factor(L,R,tol)`，先在 $R$ 列空间上做 Gram–Schmidt，再对 $L\cdot B$ 做 Gram–Schmidt，得到数值秩。exp1_mps_rank
 
-**(b) 选择前缀/后缀集合 $P,S$**
-
-- 采用**固定切分点** $t_*=\lfloor L/2\rfloor$：
-  - 前缀集合 $P = \Sigma^{t_*}$；
-  - 后缀集合 $S = \Sigma^{L-t_*}$。
-- 对于任意 $u\in P, v\in S$，它们拼成长度 $L$ 的字符串 $x=uv$。
-
-**(c) 振幅 Hankel 矩阵 $H_a$**
-
-- 定义：
-  $$
-  H_a(u,v) = \psi(uv).
-  $$
-
-**(d) 概率 Hankel 矩阵 $H_p$**
-
-- 定义：
-  $$
-  H_p(u,v) = p(uv) = |\psi(uv)|^2.
-  $$
-
-> 注意：
->  这里的 Hankel 是**长度固定、按 $(u,v)$ 索引的矩阵**，而不是“每个长度-$L$ 串只出现一次”的向量结构。
->  这意味着理论上 rank$\le \min(D^2,|P|,|S|)$，在实验统计中要记得做这个剪裁（见指标部分）。
+**额外 sanity check（推荐）**：
+ 对最小规模配置（如 $d=2,L=8,D=2$），显式构造完整 $H_p$（使用之前大纲里的 `build_hankel`），用 NumPy SVD 计算秩，并与因子法结果逐一对比，确认二者完全一致（在容差内）。
 
 ------
 
-### 数值 rank 的计算与指标
+### 4. 数值 rank 与指标设计
 
-#### 数值 rank 定义
+#### 4.1 数值 rank 与容差扫描
 
-实际计算中要选一个相对阈值 $\tau$（例如 $10^{-10}$）：
+**数值 rank 定义**
 
-- 对矩阵 $M$ 做 SVD：$M=U\Sigma V^\dagger$，
+- 对任意矩阵 $M$（振幅或概率 Hankel），做 SVD：
+   $M=U\Sigma V^\dagger$，$\Sigma=\mathrm{diag}(\sigma_1\ge\dots\ge\sigma_r)$。
 
-- 令 $\sigma_{\max}=\Sigma_{11}$，
-
-- 定义
+- 设 $\sigma_{\max}=\sigma_1$，选相对阈值 $\tau$，定义
   $$
-  \mathrm{rank}_\tau(M) = \#\{i:\sigma_i \ge \tau\,\sigma_{\max}\}.
+  \operatorname{rank}_\tau(M)=\#\{i:\sigma_i\ge \tau\sigma_{\max}\}.
   $$
 
-通常取 $\tau\in[10^{-8},10^{-12}]$。可以在附录里说明这个选取。
+**容差网格**
 
-#### 主要指标
+- 为了避免“结果高度依赖某个魔法阈值”，我们对每个配置、每个样本都在一组阈值上计算秩：
+  $$
+  \tau\in\{10^{-6},10^{-8},10^{-10}\}。
+  $$
 
-对每个 $(|\Sigma|,L,D)$ 和 MPS 类型（随机/结构化），统计：
+- 这样可以展示：在合理范围内改变 $\tau$，结论（如“典型满秩”）是否保持稳定。
 
-1. **秩分布**
+> 实现上：
+>  `exp1_mps_rank.py` 当前使用 `tol` 作为 Gram–Schmidt 的相对阈值，可通过多次运行脚本（或扩展 CLI 支持 tol-grid）来实现容差扫描。
 
-   - 振幅 Hankel：$\mathrm{rank}_\tau(H_a)$ 的直方图；
-   - 概率 Hankel：$\mathrm{rank}_\tau(H_p)$ 的直方图。
+#### 4.2 主指标
+
+对每个配置 $(d,L,D)$，对每种 MPS 类型（random, structured_rank1, structured_rank3），对每个容差 $\tau$，统计：
+
+1. **秩上界是否被尊重**
+
+   - 验证
+     $$
+     \operatorname{rank}_\tau(H_a)\le\min(D,|P|,|S|),\quad
+     \operatorname{rank}_\tau(H_p)\le\min(D^2,|P|,|S|)。
+     $$
+
+   - 若发现少数样本违反（通常是数值噪声），记录其发生频率与具体奇异值谱，用于在附录中解释。
 
 2. **归一化秩比例**
 
-   - 振幅：$\mathrm{rank}_\tau(H_a)/\min(D,|P|,|S|)$；
-   - 概率：$\mathrm{rank}_\tau(H_p)/\min(D^2,|P|,|S|)$。
+   - 振幅：
+      $\rho_a=\operatorname{rank}_\tau(H_a)/\min(D,|P|,|S|)$。
+   - 概率：
+      $\rho_p=\operatorname{rank}_\tau(H_p)/\min(D^2,|P|,|S|)$。
+   - 展示 $\rho_p$ 的箱型图 / 直方图，随机 MPS 情况应高度集中在 1 附近。
 
-3. **“典型满秩”频率**
+3. **满秩频率**
 
-   - 对随机 MPS，看
+   - 对随机 MPS 统计
      $$
-     \Pr\big[\mathrm{rank}_\tau(H_p)=\min(D^2,|P|,|S|)\big]
+     f_\text{full}(d,L,D,\tau)
+     =\frac{1}{N_\text{rand}}\sum_{i=1}^{N_\text{rand}}
+     \mathbf 1\{\operatorname{rank}_\tau(H_p^{(i)})=\min(D^2,|P|,|S|)\}.
      $$
-     随样本数的统计频率（例如 100 次试验中有多少次达到最大秩）。
 
-4. **结构化对照**
+   - 给出均值和 95% Clopper–Pearson 置信区间，展示“典型满秩”现象。
 
-   - 对 7.2A 构造，验证 $\mathrm{rank}_\tau(H_p)=1$（在数值容差内）。
-   - 对 7.2B 构造，验证 $\mathrm{rank}_\tau(H_p)\le 3$，并可进一步观察第三奇异值随 $L$ 的衰减趋势（与你理论中的 $(\sqrt2\eta)^L$ 讨论呼应）。
+4. **奇异值谱与条件数（尤其针对结构化例子）**
 
-可选附加指标（如果你有精力）：
-
-- 记录 $\kappa(H_p)=\sigma_{\max}(H_p)/\sigma_{\min}(H_p)$ 的分布，和 7.2B 中的劣条件分析对应起来。
+   - 对结构化 rank‑1 和 rank‑3：
+     - 绘制前 3 个奇异值 $\sigma_1,\sigma_2,\sigma_3$ 随 $L$ 的变化；
+     - 记录条件数 $\kappa(H_p)=\sigma_1/\sigma_r$ 的分布。
+   - 期待：rank‑3 例子中 $\sigma_3$ 随 $L$ 近似指数衰减，$\kappa(H_p)$ 急剧增大，呼应 §7.2B 的理论分析。
 
 ------
 
-### 预期结果（如何“验证”理论）
+### 5. 统计设计与鲁棒性分析
 
-1. **定理 4.1：秩上界**
-
-   对所有实验设置和所有样本，应当观测到：
-   $$
-   \mathrm{rank}_\tau(H_a) \le \min(D,|P|,|S|),\qquad
-   \mathrm{rank}_\tau(H_p) \le \min(D^2,|P|,|S|),
-   $$
-   且在数值上几乎不会超出这个范围（如果超出，九成是阈值/数值误差问题，要检查代码）。
-
-2. **定理 4.4：典型满秩**
-
-   在随机 MPS 的条件下：
-
-   - 在满足 $|P|,|S|\ge D^2$ 的组合上，期望看到
-     $$
-     \Pr\big[\mathrm{rank}_\tau(H_p)=D^2\big] \approx 1
-     $$
-     即大多数随机样本的 Hankel 都“数值满秩”；
-
-   - 直方图中，$\mathrm{rank}_\tau(H_p)$ 高度集中在 $D^2$ 附近。
-
-3. **结构化反例**
-
-   - 对 7.2A 构造，$\mathrm{rank}_\tau(H_p)$ 始终为 1，不随 $D$ 和 $L$ 增长，这说明“低纠缠/强结构”确实可以把 Hankel 秩压得很低；
-   - 对 7.2B 构造，可以数值验证 $\mathrm{rank}_\tau(H_p)\le 3$，并通过第三奇异值随 $L$ 增大而迅速变小，看见“近奇异但不完全奇异”的情形。
-
-这些现象将直接支撑你在正文中关于：
-
-- “$D^2$ 上界是紧的”
-- “随机参数化 MPS 典型地给出满秩 Hankel”
-- “低纠缠/结构化模型才真正对应低秩 Hankel 假设”
-
-这些关键论点。
+1. **样本量选择**
+   - 目标不是估计精细概率，而是验证“满秩几乎处处”。
+   - $N_\text{rand}=50$ 足以让置信区间宽度 $\sim O(1/\sqrt{50})$，可展示满秩频率 >0.9 时的明显偏向。
+   - 若需要更严谨，可在关键配置上增加到 $N_\text{rand}=100$。
+2. **容差敏感性**
+   - 对每个配置，比较 $\tau=10^{-6},10^{-8},10^{-10}$ 三种情况下的
+      $f_\text{full}$ 与 $\rho_p$ 分布。
+   - 若“典型满秩”现象在三个阈值下都保持 → 结论非常稳固；
+   - 若只有在极端小 $\tau$ 时才出现低秩 → 可归因于数值噪声，并在正文中解释。
+3. **随机种子鲁棒性**
+   - 使用多个 seed（例如 7, 17, 23）重复关键配置；
+   - 观察 $f_\text{full}$ 和秩分布在不同 seed 下的一致性，确认不是某个特定随机样本的偶然现象。
 
 ------
 
-### 建议的实验流程（Step-by-step）
+### 6. 结果呈现与理论验证点
 
-可以写成伪代码（Python 实现会很直观）：
+**6.1 验证定理 4.1（秩上界）**
 
-1. 固定一组全局参数：
-   - 字母表 $\Sigma$, 长度集合 $\mathcal L$, 键维集合 $\mathcal D$, 样本数 $N_{\text{MPS}}$。
-2. 对每个 $(|\Sigma|,L,D)$：
-   1. 检查 $|\Sigma|^{\lfloor L/2\rfloor}, |\Sigma|^{L-\lfloor L/2\rfloor} \ge D^2$，否则跳过。
-   2. 循环 $N_{\text{MPS}}$ 次：
-      1. 生成随机 MPS（按上面规范化过程）。
-      2. 枚举 $x\in\Sigma^L$，计算 $\psi(x)$ & $p(x)$，并归一化。
-      3. 构造 $H_a, H_p$（用固定切分点 $t_*$）。
-      4. 对它们做 SVD，计算数值秩。
-   3. 统计 rank 分布和归一化比例，并画直方图/箱型图或散点图。
-3. 对结构化 MPS 重复上述过程，但不需要多样本，只要几组参数就足够展示 rank-deficient 行为。
+- 表格：列出所有 $(d,L,D)$ 配置上，
+   $\max \operatorname{rank}_\tau(H_a)$、$\max \operatorname{rank}_\tau(H_p)$ 与对应上界 $\min(D,|P|,|S|)$、$\min(D^2,|P|,|S|)$，显示“从未超界”。
+- 这直接给出“上界在所有数值实验中被尊重”的证据。
+
+**6.2 验证定理 4.4（典型满秩）**
+
+- 图 1：对每个 $(d,L,D)$，画出随机 MPS 的 $\rho_p$ 分布（箱型图）；大多集中在 1。
+- 图 2：对每个 $(d,L,D,\tau)$，画出 $f_\text{full}$ 的条形图（带误差棒）。
+  - 若大多数条形图在 0.9 以上，并且三个 $\tau$ 下都类似，则强力支持“典型满秩”理论。
+
+**6.3 验证 §7.2 结构化反例**
+
+- rank‑1：
+  - 表 2：所有配置中 $\operatorname{rank}_\tau(H_p)$ 恒为 1。
+- rank‑3：
+  - 图 3：$\sigma_1,\sigma_2,\sigma_3$ vs $L$ 的 log–linear 图；
+  - 图 4：$\kappa(H_p)$ vs $L$ 的 log–linear 图。
+  - 可以在图中拟合 $\log\sigma_3$ 的斜率与理论预测 $(\sqrt2\,\eta)^L$ 对照，说明“近奇异但非真奇异”的行为。
+
+这些结果合起来，给出一个完备的 story：
+
+- 上界正确；
+- 对随机 MPS，秩几乎总是达到 $D^2$；
+- 唯有结构化/低纠缠模型才展现出低秩或劣条件 Hankel。
 
 ------
 
-### （可选）简单代码骨架示意（Python / NumPy）
+### 7. 实现注意事项与 sanity check
 
-不一定要真的跑，只是方便你 later implement：
+1. **与现有脚本对齐**
+   - `exp1_mps_rank.py` 已经实现了随机 + rank‑1 + rank‑3 MPS，左规范化、前缀/后缀嵌入和 Gram–Schmidt 秩估计。
+   - 本大纲主要是在现有脚本基础上：
+     - 加大随机样本数（CLI `--random-samples`）；
+     - 多次运行扫 `--tol`；
+     - 将 `rank_Hp` 之外的奇异值和条件数记录下来（可在脚本中额外写一版“小规模 full SVD”用于谱分析）。
+2. **复杂度控制**
+   - 当前嵌入 + Gram–Schmidt 复杂度是 $O(D^2\,|P||S|)$，在 $d\in\{2,4\},L\le 12,D\le4$ 范围内完全可行；
+   - 显式构造 Hankel（用于 sanity check）只在最小配置上进行一次即可。
+3. **数值稳定性**
+   - 左规范化步骤已经显著降低了病态风险；
+   - 再用相对容差 + 容差扫描 + 多 seed，可以把“数值 artefact”和“真实结构”区分开。
 
-```
-import numpy as np
-from itertools import product
+------
 
-def random_mps(L, D, Sigma):
-    # 生成随机 A_t(σ)、alpha、beta，并做左规范化
-    A = []
-    for t in range(L):
-        A_t = {}
-        mats = []
-        for sigma in Sigma:
-            M = np.random.randn(D, D) + 1j * np.random.randn(D, D)
-            A_t[sigma] = M
-            mats.append(M @ M.conj().T)
-        Mt = sum(mats)
-        # 逆平方根
-        evals, evecs = np.linalg.eigh(Mt)
-        inv_sqrt = evecs @ np.diag(1.0 / np.sqrt(evals + 1e-12)) @ evecs.conj().T
-        for sigma in Sigma:
-            A_t[sigma] = inv_sqrt @ A_t[sigma]
-        A.append(A_t)
-    alpha = np.random.randn(D) + 1j * np.random.randn(D)
-    beta  = np.random.randn(D) + 1j * np.random.randn(D)
-    alpha /= np.linalg.norm(alpha)
-    beta  /= np.linalg.norm(beta)
-    return A, alpha, beta
+### 8. 可选扩展（提高亮点用）
 
-def psi_from_mps(A, alpha, beta, x):
-    D = alpha.shape[0]
-    M = np.eye(D, dtype=complex)
-    for t, sigma in enumerate(x):
-        M = M @ A[t][sigma]
-    return alpha.conj().T @ M @ beta
+如果你想把这个实验进一步“卷到 99 分”，可以加两条 optional 扩展：
 
-def build_hankel(A, alpha, beta, Sigma, L):
-    t_star = L // 2
-    P = list(product(Sigma, repeat=t_star))
-    S = list(product(Sigma, repeat=L - t_star))
-    Hp = np.zeros((len(P), len(S)))
-    Ha = np.zeros_like(Hp, dtype=complex)
-    # 预先缓存所有 ψ(x)
-    amp_cache = {}
-    for u_idx, u in enumerate(P):
-        for v_idx, v in enumerate(S):
-            x = u + v
-            if x not in amp_cache:
-                amp_cache[x] = psi_from_mps(A, alpha, beta, x)
-            psi = amp_cache[x]
-            Ha[u_idx, v_idx] = psi
-            Hp[u_idx, v_idx] = abs(psi) ** 2
-    # 归一化（可选，严格上 Hp 的每个元素就是 p(x)，总和=1）
-    return Ha, Hp
-
-def numerical_rank(M, tau=1e-10):
-    s = np.linalg.svd(M, compute_uv=False)
-    return np.sum(s >= tau * s[0])
-```
-
-> 实际跑的时候要注意：
->
-> - 复杂度 $O(|\Sigma|^L)$ 很快会爆；但你当前选的 $L\le 12$，$|\Sigma|=2$，总共 $4096$ 个字符串，构造 Hankel 也还在可承受范围内。
-> - 复杂度更高的组合（比如 $|\Sigma|=4,L=12$）就要谨慎一点，但仍然是可以的。
+1. **不同 MPS 生成方式对“典型满秩”的影响**
+   - 对比“直接 MPS 随机采样”和“随机量子电路 → MPS 拟合”两种方式，观察 Hankel 秩分布是否一致，用来支持“典型满秩是广义现象而非某个参数化 artefact”。
+2. **高维 alphabet 扩展**
+   - 加一组 $d=4,L=10,D=3$ 的实验，展示在 alphabet 增大时，只要 $|P|,|S|$ 足够大，“典型满秩”和“结构化低秩”的对比依然成立。
