--- a/docs/试验大纲2.md
+++ b/docs/试验大纲2.md
@@ -1,292 +1,520 @@
-## 实验 2：截断误差与 Hankel 有效秩
+# 实验 2：截断误差 vs Hankel 有效秩
 
-（验证定理 4.2 & 推论 4.3）
-
-### 1. 目标与理论回顾
-
-**理论要点：**
-
-- 对原始 MPS 态 $\psi$ 和截断后态 $\tilde\psi$：
-  $$
-  \|\psi-\tilde\psi\|_2 \;\le\; \Big(\sum_{t}\epsilon_t^2\Big)^{1/2},
-  $$
-  其中 $\epsilon_t^2$ 是第 $t$ 个 Schmidt 切分的尾能量。
-
-- 概率 Hankel 的误差满足（忽略“每个串出现多少次”的常数因子）：
-  $$
-  \|H_p-\tilde H_p\|_2 \;\lesssim\; 2\Big(\sum_t\epsilon_t^2\Big)^{1/2} =: \Delta_H.
-  $$
-
-- 推论 4.3：对于任意 $\varepsilon\ge \Delta_H$，有效秩满足
-  $$
-  \operatorname{rank}_\varepsilon(H_p)\;\le\; D_{\rm eff}^2.
-  $$
-
-**实验目标：**
-
-1. 数值验证：$\|H_p-\tilde H_p\|_2$ 与 $\big(\sum_t\epsilon_t^2\big)^{1/2}$ 呈近似线性关系，并被 $2\big(\sum_t\epsilon_t^2\big)^{1/2}$ 这条理论上界牢牢“罩住”。
-2. 验证：当容差 $\varepsilon \ge \|H_p-\tilde H_p\|_2$ 时，$H_p$ 的有效秩 $\operatorname{rank}_\varepsilon(H_p)$ 约束在 $D_{\rm eff}^2$ 附近。
+> **主线目标：**
+>  从 *MPS 截断的纠缠尾能量* 出发，定量验证：
+>
+> 1. 概率 Hankel 矩阵的误差 $|H_p-\tilde H_p|_2$ 被截断误差上界控制（定理 4.2）；
+> 2. Hankel 的有效秩在误差容差 $\varepsilon\ge\Delta_H$ 下被 $D_{\rm eff}^2$ 控制（推论 4.3）；
+> 3. 中间“rounding 引理” $|\psi-\tilde\psi|_2 \lesssim (\sum_t \epsilon_t^2)^{1/2}$ 的**常数因子**在真实数值中有多大。
 
 ------
 
-### 2. 实验设置（整体结构）
+## 0. 实验对象与总体设定
 
-#### 2.1 全局参数
+- **对象：**
 
-- 字母表：$\Sigma=\{0,1\}$，$|\Sigma|=2$。
+  - 纯态 MPS，由 **brickwork Haar 随机两比特电路**生成；
+  - 观测为 **计算基测量**，产生离散分布 $p(x)=|\psi(x)|^2$。
 
-- 序列长度：$L\in\{8,10,12\}$。
+- **操作：**
 
-- 初始最大键维：$D_{\max}\in\{8,16\}$（根据算力选一个即可）。
+  1. 将 full state $\psi$ 转为**规范形 MPS**；
+  2. 对每个 bond 做 **Schmidt 截断** 到 bond 维 $D_{\rm eff}$，得到截断态 $\tilde\psi$；
+  3. 记录每个 cut 的 tail 能量 $\epsilon_t^2$，形成全局 $E_{\rm tail}$；
+  4. 以 mid‑cut 构造概率 Hankel $H_p,\tilde H_p$，逐项计算误差与有效秩。
 
-- 截断后的有效键维集合：
+- **理论要验证的两条主结论：**
+
+  1. **截断误差 → Hankel 误差上界（定理 4.2）：**
+     $$
+     \|H_p-\tilde H_p\|_2\ \le\ 2\Big(\sum_t\epsilon_t^2\Big)^{1/2} =: \Delta_H.
+     $$
+
+  2. **有效秩收缩（推论 4.3）：**
+      若 $\operatorname{rank}(\tilde H_p)\le D_{\rm eff}^2$，则
+     $$
+     \forall\,\varepsilon\ge \Delta_H,\quad
+     \operatorname{rank}_\varepsilon(H_p)\le D_{\rm eff}^2.
+     $$
+
+------
+
+## 1. 理论检查点（带“常数因子”版本）
+
+我们把真正要 check 的数学链条写清楚，并**区分“未归一化截断态”和“归一化截断态”**两种误差：
+
+### 1.1 MPS 截断与 tail 能量
+
+- 对第 $t$ 个 cut：
   $$
+  |\psi\rangle = \sum_i \lambda_i^{(t)}\,|i_L^{(t)}\rangle\otimes|i_R^{(t)}\rangle.
+  $$
+
+- 截断到 bond 维 $D_{\rm eff}$：保留前 $D_{\rm eff}$ 个 Schmidt 系数。
+
+- 定义 tail 能量：
+  $$
+  \epsilon_t^2 := \sum_{i>D_{\rm eff}} (\lambda_i^{(t)})^2.
+  $$
+
+- 全局 tail：
+  $$
+  E_{\rm tail} := \Big(\sum_t\epsilon_t^2\Big)^{1/2}.
+  $$
+
+### 1.2 两种“状态误差”：raw vs norm
+
+- 设 $|\tilde\psi_{\rm raw}\rangle$ 为 **未归一化**的截断态（按 TT‑SVD 直接拼出来），$|\tilde\psi_{\rm norm}\rangle$ 为其归一化版本。
+
+- 定义两类误差：
+  $$
+  \delta_\psi^{\rm raw} := \|\psi-\tilde\psi_{\rm raw}\|_2,\qquad
+  \delta_\psi^{\rm norm} := \|\psi-\tilde\psi_{\rm norm}\|_2.
+  $$
+
+- 理论 rounding 引理预期（在严格规范形 + 最优截断下）：
+  $$
+  \delta_\psi^{\rm raw} \le E_{\rm tail},
+  $$
+  而 $\delta_\psi^{\rm norm}$ 可能会多一个有限常数因子（归一化引入的微小放大）。
+
+> **数值目标 A：**
+>  统计 $\delta_\psi^{\rm raw}/E_{\rm tail}$ 和 $\delta_\psi^{\rm norm}/E_{\rm tail}$ 的分布，估计经验常数
+> $$
+> c_{\rm raw} := \sup \frac{\delta_\psi^{\rm raw}}{E_{\rm tail}},\quad
+> c_{\rm norm} := \sup \frac{\delta_\psi^{\rm norm}}{E_{\rm tail}}.
+> $$
+> 期望 $c_{\rm raw}\approx 1$，$c_{\rm norm}$ 在 1–1.3 左右（上一次实验结果大概是 1.29）。
+
+### 1.3 概率与 Hankel 误差链
+
+在 mid‑cut Hankel 下，理想的误差链为：
+
+1. **mid‑cut 等式：**
+   $$
+   \Delta_{H,F} := \|H_p-\tilde H_p\|_F
+   = \|p-\tilde p\|_2 =: \Delta_p.
+   $$
+
+2. **谱范数 vs Frobenius：**
+   $$
+   \Delta_{H,2} := \|H_p-\tilde H_p\|_2 \le \Delta_{H,F} = \Delta_p.
+   $$
+
+3. **概率 vs 振幅（归一化态）**：
+   $$
+   \Delta_p \le 2\delta_\psi^{\rm norm}.
+   $$
+
+4. **振幅 vs tail**（理论上对 raw 慢版本成立；对 norm 版本我们测常数）：
+   $$
+   \delta_\psi^{\rm raw} \le E_{\rm tail},\quad
+   \delta_\psi^{\rm norm} \le c_{\rm norm}\,E_{\rm tail}.
+   $$
+
+综合得到两个版本的理论上界：
+
+- **raw 理论版（最紧）：**
+  $$
+  \Delta_{H,2} \le 2 E_{\rm tail} =: \Delta_H.
+  $$
+
+- **norm+经验常数版：**
+  $$
+  \Delta_{H,2}
+  \le 2\delta_\psi^{\rm norm}
+  \le 2c_{\rm norm} E_{\rm tail}.
+  $$
+
+> **数值目标 B：**
+>  重点检验两件事：
+>
+> 1. **强版本：** $\Delta_{H,2}\le 2E_{\rm tail}$ 是否在所有样本上成立；
+> 2. **相对紧度：** 比值 $\rho_H := \Delta_{H,2}/(2E_{\rm tail})$ 的分布与随 $L,D_{\rm eff}$ 的变化趋势。
+
+------
+
+## 2. 数据生成：参数扫描与电路族
+
+### 2.1 参数网格（更“宽一点”）
+
+- 字母表：$\Sigma={0,1}$（qubit）。
+
+- 序列长度：
+  $$
+  L \in \{8, 10, 12, 14, 16\}
+  $$
+
+- brickwork 电路深度：
+  $$
+  d_{\rm depth} = \lceil c_{\rm depth} \cdot L\rceil,\quad
+  c_{\rm depth} \in \{1.0,\ 2.0\}
+  $$
+  （一档“浅”一档“中等深度”，可以看深度是否影响常数因子）。
+
+- 每个长度 L、每个深度，生成
+  $$
+  N_{\rm base} \in \{10, 20\}
+  $$
+  个随机基态（视算力选 10 或 20）。
+
+- 截断 bond 维：
+  $$
+  D_{\max}\in\{8,16\},\quad
   D_{\rm eff}\in\{D_{\max},\ D_{\max}/2,\ D_{\max}/4\}.
   $$
 
-- 随机基态数量：$N_{\text{base}}\approx 20$。对每个 base MPS 都做一串不同的 $D_{\rm eff}$ 截断，形成多个数据点。
+> **说明：**
+>  现有脚本已经支持 `--lengths 8,10,12 --bond-max 8 --bases 5` 的组合，我们只需扩展这几个参数并重复运行即可。exp2_truncation
 
-#### 2.2 基态 MPS 的生成与规范化
+### 2.2 brickwork 随机态生成（保持现有实现）
 
-建议使用“物理一点”的方式（便于跟 12 章的量子通道故事对齐）：
+延用当前 `random_brickwork_state`：exp2_truncation
 
-1. 选定物理比特数 $n=L$，初态 $|0\rangle^{\otimes n}$。
-2. 构造一个深度足够的随机量子电路：
-   - 每层用 Haar 随机的双比特门作用在相邻比特上（1-2, 3-4, …）；
-   - 交替偶数/奇数层，形成 brickwork 结构；
-   - 总深度例如取 $O(L)$，保证“纠缠够泛”。
-3. 用标准 MPS 工具把最终态写成 MPS，并做一次**canonical 化**（左或右规范形式），此时每个切分处都能读出 Schmidt 奇异值。
-4. 如有必要，把 MPS 再提升到统一的最大键维 $D_{\max}$（例如补零），以便后续统一截断。
+1. 初态 $|0\rangle^{\otimes L}$；
+2. 交替在偶层/奇层上施加 Haar 随机 $4\times4$ 两比特门；
+3. 每层在 $(1,2)(3,4)…$ 和 $(2,3)(4,5)…$ 上交替；
+4. 最后做 L2 归一化。
 
-> 备注：
->  如果实现上嫌麻烦，也可以直接采样随机 MPS（和实验 1 的方式类似），关键是要有“足够丰富的纠缠谱”，能看见不同的 tail energy。
-
-#### 2.3 截断策略与尾能量记录
-
-对每个 base MPS，依次处理不同的 $D_{\rm eff}$：
-
-1. 把 base MPS 放到**规范形**（例如左规范），在每个 bond 处都有 Schmidt 奇异值向量 $\lambda^{(t)}$。
-
-2. 对每个切分 $t$：
-
-   - 保留前 $D_{\rm eff}$ 个 Schmidt 系数，定义：
-     $$
-     \epsilon_t^2 := \sum_{i>D_{\rm eff}} (\lambda^{(t)}_i)^2,
-     $$
-
-   - 使用标准 MPS rounding：把“截断后的 Schmidt”重新吸回邻近张量，得到新的 MPS $\tilde\psi^{(D_{\rm eff})}$（即 rank-$D_{\rm eff}$ 的近似）。
-
-3. 对每个 $D_{\rm eff}$：
-
-   - 记录总 tail energy：
-     $$
-     E_{\text{tail}} := \Big(\sum_t \epsilon_t^2\Big)^{1/2};
-     $$
-
-   - 用内积 contraction 计算状态差：
-     $$
-     \delta_\psi := \|\psi-\tilde\psi\|_2.
-     $$
-
-**理论对照：**
-
-- 检查 $\delta_\psi \le E_{\text{tail}}$ 是否成立（MPS rounding 引理）。
-- 后续 Hankel 误差要和 $E_{\text{tail}}$ 以及 $2E_{\text{tail}}$ 对比。
+这部分实现已经比较干净、合理，不需要大改。
 
 ------
 
-### 3. Hankel 矩阵构造与误差度量
+## 3. MPS/TT-SVD 截断与 tail 误差
 
-#### 3.1 统一的 Hankel 视角（避免“重复计数”）
+### 3.1 从 full state 到 TT-SVD
 
-为了和定理 4.2 的推导更干净地对应，我们采用**固定切分点的长度-$L$ Hankel**：
+我们沿用 `tt_svd` 作为核心：exp2_truncation
 
-- 固定 $t_*=\lfloor L/2\rfloor$。
+- 输入：full state 向量（长度 $2^L$）。
+- 每步 reshape 成 $(r_{\rm left} \cdot d) \times (\text{rest})$ 矩阵，做精确 SVD：
+  - 全部奇异值 $S$，
+  - 截取前 $k=\min(\text{bond\_max},|S|)$，作为 $S_k$，
+  - tail 能量 $\epsilon_t^2 = \sum_{i>k} S_i^2$。
+- 左奇异向量 reshape 成 core $(r_{\rm left}, d, r_{\rm right})$，右边乘 $S_k V_h$ 继续向右传播。
+- 记录：
+  - `tail_energies[t] = eps_t^2`；
+  - `singulars[t] = S_k`（保留的奇异值谱，用于额外分析）。
 
-- 定义前缀集合 $P=\Sigma^{t_*}$，后缀集合 $S=\Sigma^{L-t_*}$。
+### 3.2 规范形与 rounding 假设
 
-- 每个 $(u,v)\in P\times S$ 唯一对应一个长度为 $L$ 的串：
+为了让理论上的 rounding 引理适用，我们要求：
+
+- 在做 TT‑SVD 之前/之后，把 MPS 显式 canonicalize 到**左规范形**（或右规范形）；
+- 可直接使用 TN 库的函数（比如 `mps.canonicalize('left')`），而不是只靠 TT‑SVD 的结构假设。
+
+> 备注：如果完全依赖 `tt_svd` 的结构，也可以，但为了理论和实现对齐，最好在 pipeline 里显式写上 “canonicalize” 这一步（哪怕数值上几乎是 no-op），并在大纲中声明这一点。
+
+### 3.3 定义和记录两类状态误差
+
+#### (1) raw 截断态
+
+- 直接通过 cores contraction 得到 $\tilde\psi_{\rm raw}$：
+   用 `amplitudes_from_cores(tt_res.cores, length=L, d=2)` 得到 state。exp2_truncation
+
+- 定义：
   $$
-  x = uv.
+  \delta_\psi^{\rm raw} = \|\psi-\tilde\psi_{\rm raw}\|_2.
   $$
-  不再考虑“所有 $|u|+|v|=L$ 的组合”，避免一个字符串重复多次导致 Frobenius 范数多出 $\sqrt{L+1}$ 的因子，直接做到“一一对应”。
 
-在这个定义下，如果你把 $H_p$ 的条目按行优先 flatten 成向量，它和概率向量 $p(x)$ 只是一个重排；因此：
+#### (2) 归一化截断态
+
+- 在 raw 的基础上归一化：
+  $$
+  \tilde\psi_{\rm norm}
+  := \frac{\tilde\psi_{\rm raw}}{\|\tilde\psi_{\rm raw}\|_2}.
+  $$
+
+- 定义：
+  $$
+  \delta_\psi^{\rm norm} = \|\psi-\tilde\psi_{\rm norm}\|_2.
+  $$
+
+> **与现有代码的差异：**
+>  当前版本只记录了 `delta_psi = ||psi - normalize(trunc_state)||_2`，相当于只观测了 $\delta_\psi^{\rm norm}$，没有显式区分 raw/norm。新大纲要求在实验中**同时记录**这两种误差，以对齐 rounding 理论。exp2_truncation
+
+#### (3) 需要记录的比值
+
+- `delta_psi_raw_over_tail = delta_psi_raw / E_tail`；
+- `delta_psi_norm_over_tail = delta_psi_norm / E_tail`。
+
+目标：大多数样本中
+
+- `delta_psi_raw_over_tail ≲ 1`（允许浮点误差 1.02 左右）；
+- `delta_psi_norm_over_tail` 通常在 [1,1.3]，验证你之前看到的 1.29 上界。
+
+------
+
+## 4. Hankel 矩阵构造与误差指标
+
+### 4.1 mid‑cut Hankel：保证 Frobenius = L2
+
+仍然采用现有的 mid‑cut 构造：exp2_truncation
+
+- 切分点：
+  $$
+  t_\* = \lfloor L/2\rfloor.
+  $$
+
+- 前缀集合 $P=\Sigma^{t_*}$，后缀集合 $S=\Sigma^{L-t_*}$。
+
+- 利用二进制索引：
+
+  - 对每个前缀整数 $u\in[0,2^{t_*}-1]$，
+  - 对应 base index 区间 $\text{base}=u\cdot 2^{L-t_*}$ 到 $\text{base}+2^{L-t_*}-1$。
+
+- 定义 Hankel：
+  $$
+  H_p(u,v) = p(uv),\quad
+  \tilde H_p(u,v) = \tilde p(uv).
+  $$
+
+在这种 indexing 下，flatten 后与 $p,\tilde p$ 一一对应，故
 $$
-\|H_p-\tilde H_p\|_F = \|p-\tilde p\|_2,
+\|H_p-\tilde H_p\|_F = \|p-\tilde p\|_2.
 $$
-这和 4.2 中的“$\||\psi|^2-|\tilde\psi|^2\|_2$”是完全一致的。
 
-#### 3.2 概率与 Hankel 的实际计算
+### 4.2 概率与 Hankel 误差的定义
 
-对每个 base MPS 及每个 $D_{\rm eff}$：
-
-1. 枚举所有 $x\in\Sigma^L$：
-
-   - 对原始态：
-     $$
-     \psi(x)=\alpha^\top\Big(\prod_{t=1}^L A_t(x_t)\Big)\beta,\quad p(x)=|\psi(x)|^2;
-     $$
-
-   - 对截断态：
-     $$
-     \tilde\psi(x),\quad \tilde p(x)=|\tilde\psi(x)|^2.
-     $$
-
-2. 构造 Hankel：
-
-   - 对每个 $u\in P, v\in S$，令 $x=uv$，
-     $$
-     H_p(u,v)=p(x),\quad \tilde H_p(u,v)=\tilde p(x).
-     $$
-
-矩阵大小仅为 $|P|\times|S|=2^{t_*}\times 2^{L-t_*}$：
-
-- 例如 $L=12\Rightarrow t_*=6$，Hankel 为 $64\times 64$，非常轻量。
-
-#### 3.3 误差度量
-
-对每个 base MPS、每个 $D_{\rm eff}$：
-
-1. **Hankel 差的谱范数 & Frobenius 范数**：
-   $$
-   \Delta_{H,2} := \|H_p-\tilde H_p\|_2,\quad
-   \Delta_{H,F} := \|H_p-\tilde H_p\|_F.
-   $$
-
-2. **理论上界：**
-   $$
-   \Delta_{\text{th}} := 2E_{\text{tail}} = 2\Big(\sum_t\epsilon_t^2\Big)^{1/2}.
-   $$
-
-3. **状态差：**
-   $$
-   \delta_\psi = \|\psi-\tilde\psi\|_2.
-   $$
-
-**预期关系：**
-
-- 有
+- 概率向量（基于归一化截断态）：
   $$
-  \Delta_{H,2} \le \Delta_{H,F} = \|p-\tilde p\|_2 \le (\|\psi\|_2+\|\tilde\psi\|_2)\|\psi-\tilde\psi\|_2\approx 2\delta_\psi,
-  $$
-  且 $\delta_\psi\le E_{\text{tail}}$，所以
-  $$
-  \Delta_{H,2}\ \lesssim\ 2E_{\text{tail}} = \Delta_{\text{th}}.
+  p(x) = |\psi(x)|^2,\quad
+  \tilde p(x) = |\tilde\psi_{\rm norm}(x)|^2.
   $$
 
-- 在随机样本下，$\Delta_{H,2}$ vs $E_{\text{tail}}$ 之间很可能呈现近似线性关系（斜率 < 2）。
+- 定义误差：
+  $$
+  \Delta_p = \|p-\tilde p\|_2,\quad
+  \Delta_{H,F} = \|H_p-\tilde H_p\|_F,\quad
+  \Delta_{H,2} = \|H_p-\tilde H_p\|_2.
+  $$
+
+### 4.3 要检验的关系与可视化指标
+
+**每个样本**检查并记录：
+
+1. `fro_vs_prob`：
+
+   - 数值上验证 `abs(Delta_p - Delta_H_F)` 是否在 $10^{-12}$ 级别内；
+   - 若两者偏差明显，则说明 mid‑cut 构造有 bug。
+
+2. `spec_vs_fro`：
+
+   - 检查 `Delta_H_2 <= Delta_H_F` 是否成立；
+   - 记录比值 `Delta_H_2 / Delta_H_F`，看是否集中在 [0.5, 1] 的某个范围。
+
+3. `prob_vs_state`（归一化版）：
+
+   - 检查 `Delta_p <= 2 * delta_psi_norm` 是否成立；
+   - 记录比值 `Delta_p / (2 * delta_psi_norm)`。
+
+4. `hankel_vs_tail`：
+
+   - 定义理论上界：
+     $$
+     \Delta_{\rm th} := 2 E_{\rm tail}.
+     $$
+
+   - 检查 `Delta_H_2 <= Delta_th` 是否在所有样本上成立；
+
+   - 记录比值：
+     $$
+     \rho_H := \frac{\Delta_{H,2}}{\Delta_{\rm th}}.
+     $$
+
+> **推荐画图：**
+>
+> - 图 1：横轴 $E_{\rm tail}$，纵轴 $\Delta_{H,2}$，叠加 $y=x$、$y=2x$；
+> - 图 2：横轴 $L$，纵轴 $\rho_H$，按 $D_{\rm eff}$ 分颜色，看是否随长度上升或趋于稳定。
 
 ------
 
-### 4. 有效秩（验证推论 4.3）
+## 5. 有效秩与推论 4.3 的强化验证
 
-#### 4.1 数值 rank 的定义
+### 5.1 base Hankel 的奇异值与有效秩
 
-和实验 1 保持一致：
+对基 Hankel $H_p$ 做 SVD：
+$$
+H_p = U\Sigma V^\dagger,\ \Sigma=\mathrm{diag}(\sigma_1\ge\cdots\ge0).
+$$
 
-- 对 $H_p$ 做 SVD：$H_p=U\Sigma V^\dagger$，奇异值 $\sigma_1\ge\cdots$；
+- 用函数 `singular_values_real(base_hankel)` 获取 $\sigma_i$。exp2_truncation
 
-- 对给定容差 $\varepsilon$，定义有效秩：
+- 对任意阈值 $\varepsilon$ 定义有效秩：
   $$
-  \operatorname{rank}_\varepsilon(H_p) := \#\{i:\sigma_i\ge \varepsilon\}.
+  \operatorname{rank}_\varepsilon(H_p) = \#\{i:\sigma_i\ge\varepsilon\}.
   $$
 
-- 实验中重点考察两类容差：
+### 5.2 理论驱动阈值：eps = Delta_th, eps = Delta_H2
 
-  1. 与截断误差关联的容差：
-     $$
-     \varepsilon = \Delta_{\text{th}} = 2E_{\text{tail}};\quad
-     \varepsilon = \Delta_{H,2}.
-     $$
+我们关心两类阈值：
 
-  2. 若想画曲线，可以扫描一串值（例如 $\varepsilon$ 在 $[10^{-6},10^{-1}]$ 的 log-scale 网格）。
-
-#### 4.2 验证方式
-
-对每个 base MPS、每个 $D_{\rm eff}$：
-
-1. 计算：
-
-   - $\operatorname{rank}_{\Delta_{\text{th}}}(H_p)$；
-   - $\operatorname{rank}_{\Delta_{H,2}}(H_p)$。
-
-2. 检查是否满足：
+1. **理论阈值：**
    $$
-   \operatorname{rank}_{\Delta_{\text{th}}}(H_p)\le D_{\rm eff}^2,\qquad
-   \operatorname{rank}_{\Delta_{H,2}}(H_p)\le D_{\rm eff}^2
+   \varepsilon_{\rm th} := \Delta_{\rm th} = 2E_{\rm tail}.
    $$
-   （允许极少数由于数值噪声略微超出的点，例如超出 1–2 维）。
 
-3. 统计在所有实验点上的“成功率”（即满足 $\le D_{\rm eff}^2$ 的样本比例）。
+   - 理论要求：
+     $$
+     r_{\rm th} := \operatorname{rank}_{\varepsilon_{\rm th}}(H_p)
+     \le D_{\rm eff}^2.
+     $$
 
-**预期：**
+   - 在实践中，如果 $\varepsilon_{\rm th}$ 远大于所有奇异值，则 $r_{\rm th}=0$，这是符合推论但略 trivial，我们仍然记录。
 
-- 对于大多数样本，在 $\varepsilon\ge \Delta_{\text{th}}$（尤其是 $\varepsilon = \Delta_{H,2}$）时，都能观察到：
+2. **真实误差阈值（更严格）：**
+   $$
+   \varepsilon_{\rm spec} := \Delta_{H,2}.
+   $$
+
+   - 虽然推论 4.3 只保证 $\varepsilon\ge\Delta_H$ 时的有效秩上界，但实验上可以 check 更强的：
+     $$
+     r_{\rm spec} := \operatorname{rank}_{\varepsilon_{\rm spec}}(H_p) \le D_{\rm eff}^2.
+     $$
+
+> **推荐指标：**
+>
+> - `rank_delta_th`, `rank_delta_spec`;
+> - `rank_success_delta_th = 1[r_th <= D_eff^2]`;
+> - `rank_success_delta_spec = 1[r_spec <= D_eff^2]`;
+> - 统计成功率（目前 45/45 全 1，是非常好的信号）。
+
+### 5.3 直接验证 rank(tilde H_p) ≤ D_eff²
+
+对截断后的 Hankel $\tilde H_p$：
+
+- 做 SVD，获得奇异值 $\tilde\sigma_i$；
+
+- 定义数值秩：
   $$
-  \operatorname{rank}_\varepsilon(H_p) \approx D_{\rm eff}^2,
+  \operatorname{rank}^{\rm num}(\tilde H_p)
+  := \#\{i:\tilde\sigma_i\ge 10^{-10}\}.
   $$
-  即“有效秩”明显从 $D_{\max}^2$ 降到 $D_{\rm eff}^2$ 附近。
 
-- 这会非常直观地展示：**低纠缠截断 ⇒ Hankel 有效秩降低**。
+**理论预期：**
+$$
+\operatorname{rank}^{\rm num}(\tilde H_p) \approx \min(D_{\rm eff}^2, 2^{\lfloor L/2\rfloor}).
+$$
 
-------
+> 你之前的结果就是
+>
+> - L=8：D_eff=2→rank=4，D_eff=4,8→rank=16；
+> - L=10：2→4，4→16，8→32；
+> - L=12：2→4，4→16，8→64；
+>    非常漂亮地匹配了这一点，这个 sanity check 一定要保留。
 
-### 5. 指标与可视化（你在提纲中那两张图的完整版）
+### 5.4 更丰富的 eps 网格（可选增强）
 
-#### 5.1 图 1：$\|H_p-\tilde H_p\|_2$ vs $(\sum_t\epsilon_t^2)^{1/2}$
+为了更全面地展示 effective rank 结构，可以在一组固定 eps 网格上记录：
 
-- 横轴：$x = E_{\text{tail}} = \big(\sum_t\epsilon_t^2\big)^{1/2}$（log 或线性坐标均可）；
-- 纵轴：$y = \Delta_{H,2} = \|H_p-\tilde H_p\|_2$；
-- 每个点代表一个 (base MPS, $D_{\rm eff}$) 组合；
-- 再画上参考直线：
-  - $y=E_{\text{tail}}$；
-  - $y=2E_{\text{tail}}$。
+- eps 网格：$\varepsilon\in{10^{-12},10^{-10},10^{-8},10^{-6},10^{-4},10^{-2}}$；
+- 对 base 与 trunc Hankel 分别计算 `rank_eps`。
 
-**预期：**
+可视化：
 
-- 所有点都落在 $y=2x$ 之下，验证定理 4.2 的上界；
-- 整体呈近似线性趋势，说明这个上界在数量级上是紧的。
-
-#### 5.2 图 2：有效秩 vs $D_{\rm eff}^2$
-
-- 对每个 base MPS、每个 $D_{\rm eff}$：
-  - 计算 $r_{\text{eff}} := \operatorname{rank}_{\Delta_{H,2}}(H_p)$；
-- 作图方式 1：
-  - 横轴：$D_{\rm eff}^2$；
-  - 纵轴：$r_{\text{eff}}$；
-  - 每个点一个样本，可以加一条 $y=x$ 参考线。
-- 作图方式 2（更统计一点）：
-  - 对每个 $D_{\rm eff}$，画 $r_{\text{eff}}/D_{\rm eff}^2$ 的箱型图或直方图。
-
-**预期：**
-
-- 大多数据点位于或略低于 $y=x$ 附近；
-- 随着 $D_{\rm eff}$ 降低，$r_{\text{eff}}$ 也同步下降，说明“只要把 MPS 截到低纠缠，Hankel 自动变成低有效秩”。
+- 图 3：以 eps 为横轴，绘制 $\operatorname{rank}_\varepsilon(H_p)$ 的“有效秩曲线”（半对数可视化）；
+- 图 4：比较 $\operatorname{rank}*\varepsilon(H_p)$ 与 $\operatorname{rank}*\varepsilon(\tilde H_p)$，展示截断后在高 eps 区间秩显著收缩。
 
 ------
 
-### 6. 实验流程小结（伪代码级）
+## 6. 数据结构与 CSV 字段（最终版）
 
-大致流程可以写成这样（逻辑）：
+在现有 `exp2_truncation.py` 输出的基础上，增加几列，用于区分 raw/norm 误差与更多 eps 网格。exp2_truncation
 
-1. 选定 $\Sigma,L,D_{\max},\{D_{\rm eff}\},N_{\text{base}}$。
-2. For base_idx in 1..N_base：
-   1. 生成随机高纠缠 MPS（键维 $D_{\max}$），规范化；
-   2. 对该 MPS，做一次“全局 canonical + 读取 Schmidt 谱”；
-   3. For each $D_{\rm eff}$：
-      1. 在每个 bond 上按奇异值截断到 $D_{\rm eff}$，记录 $\epsilon_t^2$，得到截断态 $\tilde\psi$；
-      2. 计算 $E_{\text{tail}}=(\sum_t\epsilon_t^2)^{1/2}$ 和 $\delta_\psi=\|\psi-\tilde\psi\|_2$；
-      3. 枚举所有 $x\in\Sigma^L$，得到 $p(x)$ 和 $\tilde p(x)$；
-      4. 用固定切分点 $t_*$ 构造 $H_p,\tilde H_p$；
-      5. 计算 $\Delta_{H,2}=\|H_p-\tilde H_p\|_2$、$\Delta_{H,F}=\|H_p-\tilde H_p\|_F$；
-      6. 取 $\varepsilon = \Delta_{H,2}$，计算 $r_{\text{eff}}=\operatorname{rank}_\varepsilon(H_p)$。
-3. 汇总所有数据点，画出 5.1 和 5.2 两类图。
+### 6.1 必备字段
+
+每条记录包含：
+
+- **元信息：**
+  - `length = L`, `base_index`, `bond_max = D_max`, `bond_eff = D_eff`,
+     `depth`, `depth_scale`, `t_star`, `seed`。
+- **截断相关：**
+  - `tail_energy_sum = sum_t eps_t^2`；
+  - `tail_energy_norm = E_tail`；
+  - `delta_th = 2 * tail_energy_norm`；
+  - `delta_psi_raw`, `delta_psi_raw_over_tail`；
+  - `delta_psi_norm`, `delta_psi_norm_over_tail`。
+- **概率 / Hankel 误差：**
+  - `prob_diff_l2 = Delta_p`；
+  - `hankel_diff_fro = Delta_H_F`；
+  - `hankel_diff_spec = Delta_H_2`；
+  - `ratio_spec_over_fro = Delta_H_2 / Delta_H_F`；
+  - `ratio_spec_over_delta_th = Delta_H_2 / delta_th`。
+- **base Hankel 秩：**
+  - `base_rank_full = rank_eps(H_p, 1e-12)`；
+  - `rank_delta_th`, `rank_delta_spec`；
+  - `rank_success_delta_th`, `rank_success_delta_spec`。
+- **trunc Hankel 秩：**
+  - `trunc_rank_num_1e-10`；
+  - （可选）`trunc_rank_num_1e-12`。
+- **eps 网格：**
+  - 对每个 `eps` in `{1e-12, 1e-10, 1e-8, 1e-6, 1e-4, 1e-2}`：
+    - `base_rank_eps_{eps:g}`；
+    - `trunc_rank_eps_{eps:g}`。
+
+### 6.2 统计视角
+
+后处理时，按 $(L,D_{\rm eff})$ 或 $(L,D_{\rm eff}, depth_scale)$ 分组，统计：
+
+- 均值 / 中位数 / 最大值：
+  - `delta_psi_raw_over_tail`、`delta_psi_norm_over_tail`；
+  - `ratio_spec_over_delta_th`；
+- 成功率：`rank_success_delta_th`、`rank_success_delta_spec`；
+- 平均数值秩：`trunc_rank_num_1e-10 / D_eff^2`，检验秩的紧性。
 
 ------
 
-### 7. 在论文里的典型总结句式（示意）
+## 7. 实验流程（最终伪代码）
 
-> 我们从键维为 $D_{\max}\in\{8,16\}$ 的随机 MPS（由随机双比特量子电路生成）出发，在每个 Schmidt 切分处执行最优秩-$D_{\rm eff}$ 截断，并记录尾能量 $\epsilon_t^2$。对每个截断态 $\tilde\psi$ 构造对应的概率 Hankel 矩阵 $\tilde H_p$，测量误差 $\Delta_{H,2}=\|H_p-\tilde H_p\|_2$。
->  图 2(a) 显示了 $\Delta_{H,2}$ 相对于 $(\sum_t\epsilon_t^2)^{1/2}$ 的散点图，所有点均被理论上界 $\Delta_{H,2}\le 2(\sum_t\epsilon_t^2)^{1/2}$ 所支配，并呈现出近似线性关系，验证了定理 4.2 的数量级精度。
->  此外，我们在容差 $\varepsilon=\Delta_{H,2}$ 下计算概率 Hankel 的有效秩 $\operatorname{rank}_\varepsilon(H_p)$。图 2(b) 表明，对于所有配置，$\operatorname{rank}_\varepsilon(H_p)$ 始终不超过 $D_{\rm eff}^2$，且典型上接近 $D_{\rm eff}^2$，与推论 4.3 的预测一致。这一实验结果直接展示了：当 MPS 的纠缠谱具有快速衰减、可被小键维 $D_{\rm eff}$ 良好近似时，概率 Hankel 矩阵的有效秩也随之缩减，从而为我们后续的低秩谱学习方法提供了经验支撑。
+和你现有的 `main() -> run_experiment()` 基本一致，只是加了 raw 截断态与更多统计：exp2_truncation
+
+```
+for L in lengths:
+    depth = ceil(depth_scale * L)
+    t_star = L // 2
+
+    for base_idx in range(num_bases):
+        psi_full = random_brickwork_state(L, depth, rng)
+        probs_full = abs(psi_full)**2
+
+        H_base = hankel_from_probs(probs_full, L, t_star)
+        svals_base = singular_values_real(H_base)
+        base_rank_full = rank_eps(svals_base, 1e-12)
+
+        for D_eff in {bond_max, bond_max//2, bond_max//4}:
+            # 1) TT-SVD 截断
+            tt_res = tt_svd(psi_full, d=2, length=L, bond_max=D_eff)
+            tail_energy_sum = sum(tt_res.tail_energies)
+            E_tail = sqrt(tail_energy_sum)
+            delta_th = 2 * E_tail
+
+            # 2) raw 截断态
+            psi_trunc_raw = amplitudes_from_cores(tt_res.cores, L, d=2)
+            delta_psi_raw = ||psi_full - psi_trunc_raw||_2
+
+            # 3) 归一化截断态
+            psi_trunc_norm = normalize_state(psi_trunc_raw)
+            delta_psi_norm = ||psi_full - psi_trunc_norm||_2
+
+            # 4) 概率和 Hankel
+            probs_trunc = abs(psi_trunc_norm)**2
+            Delta_p = ||probs_full - probs_trunc||_2
+
+            H_trunc = hankel_from_probs(probs_trunc, L, t_star)
+            diff_H = H_base - H_trunc
+            Delta_H_F = frob_norm(diff_H)
+            Delta_H_2 = spectral_norm(diff_H)
+
+            # 5) 有效秩
+            r_th   = rank_eps(svals_base, eps=delta_th)
+            r_spec = rank_eps(svals_base, eps=Delta_H_2)
+            success_th   = int(r_th   <= D_eff**2)
+            success_spec = int(r_spec <= D_eff**2)
+
+            svals_trunc = singular_values_real(H_trunc)
+            trunc_rank_num = rank_eps(svals_trunc, eps=1e-10)
+
+            # 6) 统计写入 CSV
+            save_row(...)
+```
+
