--- a/docs/试验大纲3.md
+++ b/docs/试验大纲3.md
@@ -1,369 +1,448 @@
-## 实验 3：门噪声与长度放大
+# 实验 3：门噪声与长度放大
 
-（验证定理 5.5 & 8.1 的几何放大 vs 线性放大）
-
-### 0. 理论目标回顾
-
-**定理 5.5 / 8.1 的核心：**
-
-- 一般情形（没结构约束）：
-  $$
-  \|H_p^{(L)}-\widetilde H_p^{(L)}\|_2
-  \;\lesssim\;
-  C_{P,S}\,\kappa_p^{\,L-1}\sum_{t=1}^L \epsilon_p(t)
-  $$
-  — 随长度 $L$ 可能呈**几何/指数放大**。
-
-- 在存在某个**可收缩范数**（如非负次随机锥下的 $\|\cdot\|_1/\|\cdot\|_\infty$）时：
-  $$
-  \|H_p^{(L)}-\widetilde H_p^{(L)}\|_2
-  \;\lesssim\;
-  C^{(\bullet)}_{P,S}\,\Big(\sum_{t=1}^L \epsilon_p^{(\bullet)}(t)\Big)\,G_{1:L}(\kappa^{(\bullet)})
-  $$
-  若 $\kappa^{(\bullet)}\le1$，则 $G_{1:L}\le L$，**长度依赖降为 $O(L)$**。
-
-**实验目标：**
-
-1. 从“干净” MPS 出发，对每一层门加小噪声，看看
-    $\|H_p^{(L)}-\widetilde H_p^{(L)}\|_2$ 如何随 $L$ 增长：是否呈现近似几何（接近指数）增长趋势。
-2. 构造一个“可收缩锥近似模型”（对 WFA 转移 $\{B_\sigma\}$ 做投影/重标定，使其处于非负次随机锥内），在这个模型中再加同样的噪声，看看误差随 $L$ 是否**更接近线性**。
+**目标：用数值实验证实定理 5.5 / 8.1 关于“几何放大 vs 线性放大”的理论图像。**
 
 ------
 
-## 一、实验设置（总体结构）
+## 0. 理论目标与实验假设
 
-### 1. 参数选择
+### 0.1 理论背景（简要）
 
-- 字母表：$\Sigma = \{0,1\}$，即 $d=2$。
+我们关心门噪声在长度为 $L$ 的序列上如何放大到 Hankel 矩阵误差上。理论上（略去常数）：
 
-- 键维：选一个中等值 $D \in \{3,4\}$（保证 $D^2$ 不太大，WFA 维度 manageable）。
-
-- 长度：$L\in\{5,10,15,20\}$，用来观察随长度增长的趋势。
-
-- 噪声尺度 $\varepsilon$：例如
-  $$
-  \varepsilon \in \{10^{-3},\,3\times10^{-3},\,10^{-2}\}
-  $$
-
-- 对每个组合 $(L,\varepsilon)$，重复实验 $N_{\text{trial}}\approx 20$ 次，取平均和误差棒（标准差/标准误差）。
-
-### 2. Ground truth MPS（干净模型）
-
-生成一组**左规范**的 MPS 作为真实模型 $\psi$ / $p(x)$：
-
-1. 对每个 site $t=1,\dots,L_{\max}$（这里 $L_{\max}=20$），在 $\Sigma$ 上生成随机复矩阵
+1. **一般情形（可能扩张）**
+    若对所有层的 Liouville 传播算子有
    $$
-   A_t(\sigma)\in\mathbb C^{D\times D},\quad\sigma\in\{0,1\}
+   \kappa_p := \max_{t,\sigma} \|B_{t,\sigma}\|_2 > 1,
    $$
+   则定理 5.5 给出
+   $$
+   \big\|H_p^{(L)} - \widetilde H_p^{(L)}\big\|_2
+   \;\lesssim\;
+   \kappa_p^{\,L-1}\sum_{t=1}^L \epsilon_p(t),
+   $$
+   右侧随 $L$ 几何 / 近指数增长。
 
-2. 对每个 $t$，做一次 left-canonical 规范化：
+2. **可收缩范数情形（行/列次随机锥）**
+    若存在诱导范数 $\|\cdot\|_\bullet$ 使得 WFA 在该范数下非扩张（例如行次随机 + $\|\cdot\|_\infty$），则
    $$
-   M_t := \sum_{\sigma} A_t(\sigma)A_t(\sigma)^\dagger
+   \big\|H_p^{(L)} - \widetilde H_p^{(L)}\big\|_2
+   \;\lesssim\;
+   \Big(\sum_{t=1}^L \epsilon_p^{(\bullet)}(t)\Big)\,G_{1:L}(\kappa^{(\bullet)}),
    $$
+   其中 $G_{1:L}(\kappa^{(\bullet)})$ 是几何因子。
+    当 $\kappa^{(\bullet)}\le 1$ 时，$G_{1:L}\le L$，长度依赖降为 **$O(L)$**。
 
-   $$
-   A_t(\sigma) \leftarrow M_t^{-1/2}A_t(\sigma)
-   $$
+### 0.2 实验要验证的两条“现象级”结论
 
-   这样大致满足 $\sum_\sigma A_t(\sigma)A_t(\sigma)^\dagger\approx I$。
+我们希望通过数值实验展示：
 
-3. 取边界向量 $\alpha,\beta\in\mathbb C^D$ 随机生成并归一化：
-   $$
-   \|\alpha\|_2=\|\beta\|_2 = 1.
-   $$
-
-4. 对给定长度 $L$，只取前 $L$ 个 site 的 $\{A_t(\sigma)\}_{t=1}^L$ 和同一组 $(\alpha,\beta)$ 来定义干净 MPS。
-
-> 注：你可以根据算力选择“每个 L 独立采样一套 MPS”或者“统一采样一套长度 20 MPS，截取前 L 阶段”。
+1. **扩张型 QCBM：几何放大**
+   - 在 **非规范随机 MPS**（典型 $\kappa_p>1$）上，门噪声导致的 Hankel 误差
+      $\overline E_{\text{raw}}(L,\varepsilon) := \mathbb E\|H_p^{(L)}-\widetilde H_p^{(L)}\|_2$
+      随 $L$ 呈明显超线性甚至近似指数增长：
+      在 semi-log 图上，$\log \overline E_{\text{raw}}(L,\varepsilon)$ 近似一条斜率 $b_{\text{raw}}>0$ 的直线。
+2. **可收缩锥 WFA：线性级别 / 非爆炸**
+   - 将同一 MPS 的 Liouville 算子 $B_{t,\sigma}$ 投影到行非负 + 行次随机锥，得到一个 **可收缩 WFA 模型**；
+   - 在该模型中注入同样的噪声，得到 Hankel 误差
+      $\overline E_{\text{proj}}(L,\varepsilon) := \mathbb E\|H_{p,\text{proj}}^{(L)}-\widetilde H_{p,\text{proj}}^{(L)}\|_2$；
+   - 随 $L$ 的增长显著更“温和”，拟合更接近线性甚至亚线性，符合理论上的 $O(L)$ 上界。
 
 ------
 
-## 二、注入门噪声（原始 QCBM 模型）
+## 1. 实验总体结构
 
-### 1. 噪声形式
+我们有三层对象、两类 ground truth：
 
-对每个层 $t$ 和符号 $\sigma$：
+### 1.1 三层对象
 
-- 采样一个随机扰动矩阵：
-  $$
-  G_{t,\sigma} \sim \text{复高斯矩阵}\in\mathbb C^{D\times D}
-  $$
+1. **Ground truth MPS QCBM（物理模型）**
 
-- 计算其谱范数（最大奇异值）$\|G_{t,\sigma}\|_2$，定义
-  $$
-  \Delta A_{t}(\sigma) := \varepsilon \,\frac{G_{t,\sigma}}{\|G_{t,\sigma}\|_2},
-  \quad\Rightarrow\quad
-  \|\Delta A_{t}(\sigma)\|_2 = \varepsilon.
-  $$
+   - MPS cores $\{A_t(\sigma)\}$、边界 $\alpha,\beta$；
+   - 通过振幅 $\psi(x)=\alpha^\dagger \prod_t A_t(x_t)\beta$ 给出真实分布 $p(x)=|\psi(x)|^2$。
 
-- 设噪声后 gate：
-  $$
-  \widetilde A_t(\sigma)=A_t(\sigma)+\Delta A_t(\sigma).
-  $$
+2. **原始 QCBM 路径（raw）**
 
-这样每一层的每个 gate 的扰动谱范数都约为 $\varepsilon$，和理论里的 $\varepsilon_t$ 对应。
+   - 对 gate $A_t(\sigma)$ 注入谱范数受控噪声 $\Delta A_t(\sigma)$，得到 $\widetilde A_t(\sigma)=A_t(\sigma)+\Delta A_t(\sigma)$；
+   - 从 $\widetilde A_t$ 得到 $\widetilde p(x)$，构造 noisy Hankel $\widetilde H_p^{(L)}$。
 
-**注意：**
+3. **可收缩 WFA 路径（proj）**
 
-- 不再强制规范化噪声后的 $\widetilde A_t$，故 $\kappa_p$ 可能 >1，更容易看到指数放大。
-- 这对应定理 5.5 中的一般扰动情形。
-
-### 2. 噪声后的概率分布与 Hankel
-
-对每个长度 $L$：
-
-1. 对所有 $x\in\Sigma^L$（如有算力顾虑，可抽样）：
-
-   - 干净模型：
+   - 从 MPS 抽取 Liouville 算子
      $$
-     \psi(x) = \alpha^\top\Big(\prod_{t=1}^L A_t(x_t)\Big)\beta,\quad
-     p(x)=|\psi(x)|^2
+     B_{t,\sigma} = A_t(\sigma)\otimes\overline{A_t(\sigma)};
      $$
 
-   - 噪声模型：
-     $$
-     \widetilde\psi(x)=\alpha^\top\Big(\prod_{t=1}^L \widetilde A_t(x_t)\Big)\beta,\quad
-     \widetilde p(x)=|\widetilde\psi(x)|^2
-     $$
+   - 通过“取绝对值 + 按行缩放”的方式把 $\{B_{t,\sigma}\}$ 投影到 **行非负 + 行次随机锥**，得到 $\{B_{t,\sigma}^{\text{proj}}\}$；
 
-2. 固定切分点 $t_\*=\lfloor L/2\rfloor$，选取前缀/后缀集合 $P,S$ 来构造 Hankel：
+   - 以固定边界 $(i,f)$ 定义 surrogate 分布 $p_{\text{proj}}(x)$，构造投影 Hankel $H_{p,\text{proj}}^{(L)}$ 及其 noisy 版本。
 
-   - **为降低计算负担**，建议不枚举所有 $2^{t_*}$ 个前缀、$2^{L-t_*}$ 个后缀，而是：
-     - 若 $2^{t_*}\le M$（例如 $M=256$），就取全部；
-     - 若 $2^{t_*}>M$，随机采样 $M$ 个前缀；
-     - 对后缀集合 $S$ 同理。
-   - 这样 Hankel 维度最多 $M\times M$（例如 256×256），SVD/谱范数计算非常轻松。
+### 1.2 两类 ground truth（扩张 vs 收缩）
 
-3. 构造：
-   $$
-   H_p^{(L)}(u,v) = p(uv),\quad \widetilde H_p^{(L)}(u,v)=\widetilde p(uv).
-   $$
+- **Type A：非规范随机 MPS（扩张候选）**
+   不做 per-site 规范化，典型 $\kappa_p>1$，用于展示几何放大。
+- **Type B：左规范 MPS（收缩候选）**
+   每个 site 做 left-canonical 归一化，典型 $\kappa_p\lesssim 1$，用于展示“原始 QCBM 也相对稳定”的情况，作为对照。
+   这一部分已经由已有脚本基本实现，当前实验在此基础上加入 Type A 分支。exp3_noise_growth
 
 ------
 
-## 三、误差度量（无结构约束）
+## 2. Ground truth MPS 的构造
 
-对每个 $L,\varepsilon$ 和每次 trial：
+### 2.1 公共参数
 
-- 计算：
-  $$
-  E_{\text{raw}}(L,\varepsilon)
-  := \big\|H_p^{(L)}-\widetilde H_p^{(L)}\big\|_2.
-  $$
+- 字母表：$\Sigma=\{0,1\}$（$d=2$）；
+- 键维：$D\in\{3,4\}$，默认 $D=4$（和现有脚本一致）；exp3_noise_growth
+- 最大长度：$L_{\max}=20$；
+- 评估长度集合：$L\in\{5,10,15,20\}$；
+- 每个试验（base）都先在长度 $L_{\max}$ 上生成一整条 MPS，再对不同 L 截取前 L 个 site 复用。
 
-- 可选：也记录 Frobenius 范数 $\|\,\cdot\,\|_F$，看两者 scaling 是否一致。
+### 2.2 Type A：非规范随机 MPS
 
-对每个 $(L,\varepsilon)$，在 $N_{\text{trial}}$ 个样本上取：
+对每个 trial：
 
-- 平均误差 $\overline E_{\text{raw}}(L,\varepsilon)$，
-- 标准差 / 标准误差 用作误差棒。
+1. 对每个 site $t=1,\dots,L_{\max}$、每个符号 $\sigma\in\{0,1\}$，采样
+   $$
+   A_t(\sigma) \sim \mathcal N_\mathbb C(0,1)^{D\times D}
+   $$
+   的复高斯矩阵。
 
-**预期：**
+2. **不做 left-canonical 归一化**。这样典型情况下 $\|A_t(\sigma)\|_2>1$，Liouville 算子满足
+   $$
+   \|B_{t,\sigma}\|_2 = \|A_t(\sigma)\|_2^2,
+   $$
+   对大部分 $t,\sigma$ 会显著大于 1。
 
-- 若 $\kappa_p>1$，则 $\overline E_{\text{raw}}(L,\varepsilon)$ 随 $L$ 呈**超线性甚至近似指数**增长；在半对数坐标上（log 误差 vs L）会接近一条直线。
+3. 定义扩张传播常数：
+   $$
+   \kappa_{\text{raw}} := \max_{t\le L_{\max},\sigma}\|B_{t,\sigma}\|_2.
+   $$
+   在 Type A 分支上，我们将检查 $\kappa_{\text{raw}}>1$ 是否普遍成立，并在结果中报告其分布。
+
+### 2.3 Type B：左规范 MPS
+
+这一分支沿用当前脚本 `random_left_canonical_mps` 的实现：exp3_noise_growth
+
+1. 先采样 raw 矩阵 $\tilde A_t(\sigma)$（同上）；
+
+2. 对每个 site 计算
+   $$
+   M_t = \sum_{\sigma}\tilde A_t(\sigma)\tilde A_t(\sigma)^\dagger,
+   $$
+   用 Newton–Schulz 迭代得到 $M_t^{-1/2}$，然后令
+   $$
+   A_t(\sigma) := M_t^{-1/2}\tilde A_t(\sigma),
+   $$
+   即满足近似 left-canonical $\sum_\sigma A_t(\sigma)A_t(\sigma)^\dagger\approx I$。
+
+3. 同样定义
+   $$
+   \kappa_{\text{canon}} := \max_{t,\sigma}\|B_{t,\sigma}\|_2,
+   \quad B_{t,\sigma}=A_t(\sigma)\otimes\overline{A_t(\sigma)}.
+   $$
+   期待 $\kappa_{\text{canon}}$ 通常接近或略低于 1。
+
+### 2.4 边界向量与跨长度复用
+
+- 每个 trial 随机采样 $\alpha,\beta\in\mathbb C^D$ 并归一化成 $\|\alpha\|_2=\|\beta\|_2=1$；
+- 对于给定 trial 的 Type A / Type B，都使用**同一对边界**；
+- 当评估长度 L 时，只从同一条长 MPS 中截取前 L 个 cores，保证“模型本身不变，只是观察不同长度下的误差放大”。
 
 ------
 
-## 四、可收缩锥近似：构造行次随机 WFA 模型
+## 3. 噪声模型：谱范数约束门噪声
 
-接下来是一整套“投影到可收缩锥”的流程。这里我们不再要求它精确代表物理 QCBM，而是作为“结构化近似模型”，看看噪声传播是否更温和（线性）。
+对两类 ground truth，噪声注入方式完全一致。
 
-### 1. 从 MPS 得到 WFA 转移矩阵 $B_{t,\sigma}$
+### 3.1 噪声强度
 
-对每个层 $t$ 和符号 $\sigma$：
+选取噪声尺度集：
 $$
-B_{t,\sigma} = A_t(\sigma)\otimes\overline{A_t(\sigma)}\ \in\ \mathbb C^{D^2\times D^2}.
+\varepsilon \in \{10^{-3},\ 3\times 10^{-3},\ 10^{-2}\}.
 $$
-（时间依赖的 WFA：每层使用 $\{B_{t,\sigma}\}$）
 
-### 2. 映射到非负矩阵
+### 3.2 每层每门的噪声构造
 
-为了进入“非负行次随机锥” $\mathcal K_{\text{row}}$，先做 elementwise 绝对值：
-$$
-B_{t,\sigma}^{(+)}(i,j) := |B_{t,\sigma}(i,j)| \ge 0.
-$$
-这一步丢掉了相位，但保留了“大小结构”，作为近似。
+对每个 site $t$、符号 $\sigma$：
 
-### 3. 行次随机重标定（投影到 $\mathcal K_{\text{row}}$）
-
-我们希望 $\{B_{t,\sigma}^{\text{proj}}\}$ 满足：
-
-- 非负：$B_{t,\sigma}^{\text{proj}}\ge0$；
-
-- 行次随机锥条件：
-  $$
-  \sum_\sigma B_{t,\sigma}^{\text{proj}}\mathbf 1\ \le\ \mathbf1.
-  $$
-
-一个简单可行的投影方式：
-
-对每个层 $t$ 的每一行 $i$：
-
-1. 计算该行在所有符号上的总和：
+1. 采样复高斯噪声矩阵
    $$
-   r_{t,i} := \sum_{\sigma}\sum_j B_{t,\sigma}^{(+)}(i,j)
+   G_{t,\sigma}\sim\mathcal N_\mathbb C(0,1)^{D\times D};
    $$
 
-2. 定义缩放因子：
+2. 用 power iteration 估计 $\|G_{t,\sigma}\|_2$，令
+   $$
+   \Delta A_t(\sigma) := \varepsilon\cdot \frac{G_{t,\sigma}}{\|G_{t,\sigma}\|_2},
+   \quad\Rightarrow\quad \|\Delta A_t(\sigma)\|_2 \approx \varepsilon;
+   $$
+
+3. 噪声门：
+   $$
+   \widetilde A_t(\sigma) := A_t(\sigma) + \Delta A_t(\sigma).
+   $$
+
+**关键：** 噪声注入后 **不再重新做 left-canonical**，避免把噪声“重新归一掉”，使扩张型模型的 $\kappa_p>1$ 真正显性出来。
+
+------
+
+## 4. 概率与 Hankel：raw QCBM 路径
+
+### 4.1 振幅与概率
+
+给定长度 L 和序列 $x\in\Sigma^L$：
+
+- 干净振幅：
+  $$
+  \psi(x) = \alpha^\dagger A_1(x_1)\cdots A_L(x_L)\beta;
+  $$
+
+- 噪声振幅：
+  $$
+  \widetilde\psi(x)=\alpha^\dagger \widetilde A_1(x_1)\cdots \widetilde A_L(x_L)\beta;
+  $$
+
+- 概率：$p(x)=|\psi(x)|^2$、$\widetilde p(x)=|\widetilde\psi(x)|^2$。
+
+利用已有的高效实现 `amplitude_for_sequence` + `prob_map_for_targets_mps` 对目标集合上的 $p(x)$ 进行计算，再通过 Liouville 总质量估计 `total_mass_from_Bs` 做归一化。exp3_noise_growth
+
+### 4.2 前缀/后缀集合与 Hankel 构造
+
+- 固定切分点 $t_* = \lfloor L/2\rfloor$；
+
+- 前缀集合 $P\subseteq\Sigma^{t_*}$、后缀集合 $S\subseteq\Sigma^{L-t_*}$ 的策略：
+
+  - 若 $2^{t_*}\le M$（推荐 $M=256$），则取全部前缀，否则均匀随机采样 $M$ 个；
+  - 后缀同理；
+
+- 目标串集合 $T_L = \{uv : u\in P, v\in S\}$，大小为 $|P|\cdot|S|$，用于构建 Hankel 块
+  $$
+  H_p^{(L)}(u,v) = p(uv),\quad
+  \widetilde H_p^{(L)}(u,v) = \widetilde p(uv).
+  $$
+
+### 4.3 误差度量：raw Hankel
+
+- 对每个 trial、ground truth 类型、长度 L、噪声 $\varepsilon$ 计算：
+  $$
+  E_{\text{raw}}(L,\varepsilon) := \big\|H_p^{(L)} - \widetilde H_p^{(L)}\big\|_2,
+  $$
+  谱范数通过 `spectral_norm_float` 估计；
+
+- 同时记录 Frobenius 范数
+   $E^{(F)}_{\text{raw}}(L,\varepsilon) := \|H_p^{(L)} - \widetilde H_p^{(L)}\|_F$ 作为辅助指标。
+
+------
+
+## 5. 行次随机 WFA 路径（可收缩锥）
+
+这一部分在现有脚本中已经基本实现，我们在设计层面明确它是如何对应理论中“可收缩锥”的。exp3_noise_growth
+
+### 5.1 Liouville 算子构造
+
+对干净 cores 和 noisy cores 分别构建：
+$$
+B_{t,\sigma} = A_t(\sigma)\otimes\overline{A_t(\sigma)},\quad
+\widetilde B_{t,\sigma} = \widetilde A_t(\sigma)\otimes\overline{\widetilde A_t(\sigma)}.
+$$
+脚本中的 `build_Bs` 正在做这件事。exp3_noise_growth
+
+### 5.2 映射到行非负 + 行次随机锥
+
+对每个 site 的 $\{B_{t,\sigma}\}$ 做以下投影（`project_row_substochastic_site`）：
+
+1. 取元素绝对值：
+   $$
+   B_{t,\sigma}^{(+)}(i,j) := |B_{t,\sigma}(i,j)|\ge 0;
+   $$
+
+2. 对每一行 $i$ 计算跨所有符号的总和：
+   $$
+   r_{t,i} := \sum_{\sigma}\sum_j B_{t,\sigma}^{(+)}(i,j);
+   $$
+
+3. 缩放因子：
    $$
    s_{t,i} :=
    \begin{cases}
-   1, & r_{t,i}\le 1, \\
-   1/r_{t,i}, & r_{t,i}>1.
+   1, & r_{t,i}\le 1;\\
+   1/r_{t,i}, & r_{t,i}>1;
    \end{cases}
    $$
 
-3. 设置投影结果：
+4. 投影矩阵：
    $$
    B_{t,\sigma}^{\text{proj}}(i,j) := s_{t,i}\,B_{t,\sigma}^{(+)}(i,j).
    $$
 
-这样对任意 $i$ 有：
-$$
-\sum_\sigma\sum_j B_{t,\sigma}^{\text{proj}}(i,j)
-= s_{t,i} r_{t,i}\le 1,
-$$
-因此 $\{B_{t,\sigma}^{\text{proj}}\}\in\mathcal K_{\text{row}}$。
+得到的 $\{B_{t,\sigma}^{\text{proj}}\}$ 满足：
 
-> 注意：
->
-> - 这是一个相当粗糙但实现简单的投影；
-> - 更精细的投影（例如最小化 $\sum_\sigma\|B_{t,\sigma}^{\text{proj}}-B_{t,\sigma}^{(+)}\|_F^2$ 的凸优化）也可以，但这套简单规则足以演示“可收缩性”的效果。
+- 非负：$B_{t,\sigma}^{\text{proj}}\ge 0$；
+- 行次随机：$\sum_{\sigma} B_{t,\sigma}^{\text{proj}}\mathbf 1\le \mathbf 1$。
 
-### 4. 噪声后的投影：$\{\widetilde B_{t,\sigma}^{\text{proj}}\}$
+因此在 $\|\cdot\|_\infty$ 下是非扩张的，即处于理论中的可收缩锥 $\mathcal K_{\text{row}}$，满足定理 8.4 的前提。
 
-对噪声后的 gate $\widetilde A_t(\sigma)$ 同样构造：
+对 noisy Liouville 同样投影得到 $\{\widetilde B_{t,\sigma}^{\text{proj}}\}$。
 
-1. $ \widetilde B_{t,\sigma} = \widetilde A_t(\sigma)\otimes \overline{\widetilde A_t(\sigma)}$
-2. 元素级绝对值：$\widetilde B_{t,\sigma}^{(+)} = |\widetilde B_{t,\sigma}|$
-3. 对每一层的行按前面的规则缩放，得到 $\widetilde B_{t,\sigma}^{\text{proj}}\in\mathcal K_{\text{row}}$。
+### 5.3 WFA 生成的 surrogate 概率与 Hankel
 
-------
+选定固定的非负边界向量：
 
-## 五、在可收缩锥模型中定义“概率”和 Hankel
+- $i := e_1\in\mathbb R^{D^2}$（第一维为 1，其余为 0）；
+- $f := \mathbf 1/D^2$。
 
-现在我们有了一对 WFA 模型（干净投影 / 噪声投影）：
+对任意长度 L、序列 $x\in\Sigma^L$：
 
-- 干净：$\{B_{t,\sigma}^{\text{proj}}\}$
-- 噪声：$\{\widetilde B_{t,\sigma}^{\text{proj}}\}$
-
-需要构造“输出标量”来定义长度 $L$ 上的序列值（可理解为 surrogate 概率）。
-
-### 1. 选择 WFA 的边界向量 $i,f$
-
-为了和非负锥结构吻合，可以简单选取非负向量，比如：
-
-- 初始向量 $i := e_1$（标准基向量），维度 $D^2$；
-- 终止向量 $f := \mathbf 1 / D^2$（全 1 向量归一化）。
-
-这样对任意非负 WFA，输出：
-$$
-q(x_{1:L}) = i^\top \Big(\prod_{t=1}^L B_{t,x_t}^{\text{proj}}\Big) f \ge 0.
-$$
-对噪声模型用同样的 $i,f$ 定义 $\widetilde q(x)$。
-
-### 2. 归一化成“伪概率”（可选）
-
-如需对齐“概率 Hankel”的语义，可以做归一化：
-$$
-p_{\text{proj}}(x) = \frac{q(x)}{\sum_{x'} q(x')},\qquad
-\widetilde p_{\text{proj}}(x) = \frac{\widetilde q(x)}{\sum_{x'} \widetilde q(x')}.
-$$
-即使不归一化，误差的 **相对长度依赖** 也不会改变，但归一化后更便于与原模型的 $p(x)$ 比较。
-
-### 3. 构造 Hankel 矩阵
-
-对每个 $L$，用与上文同样的前缀/后缀集合 $P,S$：
-
-- 干净投影模型：
+- 干净投影模型的“未归一化概率”：
   $$
-  H_{p,\text{proj}}^{(L)}(u,v) = p_{\text{proj}}(uv)
+  q(x) = i^\top \Big(\prod_{t=1}^L B_{t,x_t}^{\text{proj}}\Big) f;
   $$
 
 - 噪声投影模型：
   $$
-  \widetilde H_{p,\text{proj}}^{(L)}(u,v) = \widetilde p_{\text{proj}}(uv)
+  \widetilde q(x) = i^\top \Big(\prod_{t=1}^L \widetilde B_{t,x_t}^{\text{proj}}\Big) f.
   $$
 
-------
-
-## 六、误差度量（可收缩锥模型）
-
-对每个 $L,\varepsilon$ 与每次 trial：
+通过 `total_mass_from_proj_Bs` 求和归一化：
 $$
-E_{\text{proj}}(L,\varepsilon)
-:= \big\|H_{p,\text{proj}}^{(L)} - \widetilde H_{p,\text{proj}}^{(L)}\big\|_2.
+p_{\text{proj}}(x) = \frac{q(x)}{\sum_{x'}q(x')},\quad
+\widetilde p_{\text{proj}}(x) = \frac{\widetilde q(x)}{\sum_{x'}\widetilde q(x')}.
 $$
-同样在 trials 上取平均 $\overline E_{\text{proj}}(L,\varepsilon)$ 和误差棒。
+再在同一 $P,S$ 上构造 Hankel：
+$$
+H_{p,\text{proj}}^{(L)}(u,v)=p_{\text{proj}}(uv),\quad
+\widetilde H_{p,\text{proj}}^{(L)}(u,v)=\widetilde p_{\text{proj}}(uv).
+$$
 
-**理论期待：**
+### 5.4 误差度量：proj Hankel
 
-- 由于 $\{B_{t,\sigma}^{\text{proj}}\}\in\mathcal K_{\text{row}}$，在 $\|\cdot\|_\infty$ 范数下是非扩张的：
-   每一步乘积的行和 ≤1 ⇒ $G_L(\kappa^{(\infty)})\le L$。
-
-- 转回谱范数最多引入一个固定维度常数 $C$，因此整体长度依赖应该接近线性：
-  $$
-  E_{\text{proj}}(L,\varepsilon)\ \approx\ \text{const}(\varepsilon)\times L.
-  $$
-
-------
-
-## 七、对比与可视化
-
-### 1. 主图：误差 vs 长度（原始 vs 投影）
-
-对每个噪声尺度 $\varepsilon$，画两条曲线：
-
-- x 轴：长度 $L\in\{5,10,15,20\}$
-- y 轴：
-  - 原始 QCBM 模型的平均误差：$\overline E_{\text{raw}}(L,\varepsilon)$
-  - 投影后可收缩模型的平均误差：$\overline E_{\text{proj}}(L,\varepsilon)$
-
-有两种画法：
-
-1. **线性坐标（y vs L）**
-   - 原始模型：曲线明显弯向上（凸），增长比线性快；
-   - 投影模型：曲线接近一条直线。
-2. **半 log 坐标（$\log y$ vs L）**
-   - 原始模型：接近一条斜率 > 0 的直线 ⇒ 对应指数 / 几何增长；
-   - 投影模型：更接近“弯下来的曲线”，对应线性或低次多项式增长，在 log 轴上表现为 sub-exponential。
-
-### 2. 拟合斜率（定量化）
-
-可以对每组数据做一个简单拟合：
-
-- 对原始模型拟合：
-  $$
-  \log \overline E_{\text{raw}}(L,\varepsilon) \approx a_{\text{raw}} + b_{\text{raw}} L
-  $$
-  如果 $b_{\text{raw}}$ 明显 >0，则表明存在几何放大（$\kappa_p>1$）。
-
-- 对投影模型拟合：
-  $$
-  \overline E_{\text{proj}}(L,\varepsilon) \approx c_{\text{proj}} + d_{\text{proj}} L
-  $$
-  若 $d_{\text{proj}}$ 稳定且拟合较好，说明线性放大是合理模型。
-
-可以在论文里直接给一句话定量描述，例如：
-
-> For $\varepsilon=10^{-2}$, the slope $b_{\text{raw}}\approx 0.12$ (indicating an effective expansion factor $\kappa\approx e^{0.12}\approx 1.13$), while the projected model exhibits a near-linear dependency with slope $d_{\text{proj}}\approx 0.03$.
+与 raw 一致：
+$$
+E_{\text{proj}}(L,\varepsilon) := \big\|H_{p,\text{proj}}^{(L)} - \widetilde H_{p,\text{proj}}^{(L)}\big\|_2,
+$$
+同时记录 Frobenius 范数。
 
 ------
 
-## 八、注意事项与变体
+## 6. 传播常数 $\kappa$ 的估计
 
-1. **序列枚举 vs 抽样：**
-   - 若 L=20 时枚举所有 $2^{20}$ 个字符串成本太高，可以只枚举构造 $H_p(P,S)$ 所需要的那些 $uv$（大小 ≤$M^2$）；
-   - 对于 $M=256$，每个 L 的字符串数最多 $256^2=65536$，对 D=3/4 来说非常安全。
-2. **多基准 MPS：**
-   - 你可以固定一组基准 MPS，在不同 trial 中仅重采噪声；
-   - 也可以每个 trial 都重新采样 MPS（更接近“典型行为”），二者差别不大。
-3. **其它锥（列次随机）：**
-   - 若使用 $\mathcal K_{\text{col}}$（列非负，列和 ≤1），则用 $\|\cdot\|_1$ 作为可收缩范数；
-   - 实现时只需把“行和”换成“列和”缩放即可。
-4. **和理论的对齐表述（写在论文里的方式）**
+为了直接连接理论中的几何因子 $G_L(\kappa)$，我们显式估计每个模型的传播常数。
 
-可以在正文中这样总结这组实验：
+- raw 路径（Liouville 谱范数）：
+  $$
+  \kappa_{\text{raw, clean}}(L) := \max_{t\le L,\sigma}\|B_{t,\sigma}\|_2,\quad
+  \kappa_{\text{raw, noisy}}(L):=\max_{t\le L,\sigma}\|\widetilde B_{t,\sigma}\|_2;
+  $$
+  使用 `spectral_norm_complex` + `kappa_from_site_norms` 实现。exp3_noise_growth
 
-> Starting from left-canonical MPS with bond dimension $D$, we inject small perturbations to each local tensor $A_t(\sigma)$ and examine how the Hankel error $\|H_p^{(L)}-\widetilde H_p^{(L)}\|_2$ scales with the sequence length $L$. In the “raw” QCBM parameterization, we observe a clear super-linear (often close to exponential) growth with $L$, in line with the geometric amplification factor predicted by Theorem 5.5.
->  In contrast, when we project the associated WFA transition matrices $B_{t,\sigma}=A_t(\sigma)\otimes\overline{A_t(\sigma)}$ onto a nonnegative row-substochastic cone and recompute the induced Hankel matrices, the error growth becomes almost linear in $L$. This matches the contractive-norm analysis in Theorem 8.1(B) and Theorem 8.4, where the length dependence is reduced from $G_L(\kappa)$ to $O(L)$.
+- proj 路径（$\infty$-范数）：
+  $$
+  \kappa_{\text{proj, clean}}^{(\infty)}(L) := \max_{t\le L,\sigma}\|B_{t,\sigma}^{\text{proj}}\|_\infty,
+  $$
+  noisy 同理，用 `infinity_norm_float` + `kappa_from_site_norms`。
+
+在实验分析中，我们将：
+
+- 检查 Type A 下 $\kappa_{\text{raw}}>1$ 的比例和平均值；
+- 检查 proj 模型中 $\kappa_{\text{proj}}^{(\infty)}<1$ 是否稳健成立；
+- 将实测 $\kappa_{\text{eff}}\approx e^{b_{\text{raw}}}$ 与理论传播常数对比。
+
+------
+
+## 7. 实验参数与运行配置
+
+建议默认配置（与当前脚本一致）：exp3_noise_growth
+
+- `lengths = [5, 10, 15, 20]`；
+- `bond_dim = 4`；
+- `epsilons = [0.001, 0.003, 0.01]`；
+- `max_prefixes = 256`；
+- `bases = 20`（每类 ground truth 至少 20 条 base MPS）；
+- `seed = 0`（可再跑几组不同 seeds 做稳健性检查）。
+
+实现层面：
+
+- 现有 `exp3_noise_growth.py` 已经实现了：
+  - left-canonical MPS；
+  - 先生成 $L_{\max}$ 再截断不同 L；
+  - 噪声注入、Liouville、行次随机投影；
+  - raw/proj Hankel 的谱/Fro 误差与 $\kappa$ 记录。exp3_noise_growth
+- 为完成本大纲，只需：
+  1. 在现有代码基础上增加一个 `random_mps_uncanonical`（或者通过 flag 跳过 per-site 规范化）实现 Type A 分支；
+  2. 在 CSV 中增加一列 `ground_truth_type ∈ {noncanonical, left_canonical}`；
+  3. 在结果分析脚本中按类型分别画图与拟合。
+
+------
+
+## 8. 数据分析与可视化计划
+
+### 8.1 主图 1：raw vs proj 的长度–误差曲线
+
+对每个 ground truth 类型（Type A/B）、每个噪声 $\varepsilon$：
+
+1. **线性坐标图（误差 vs L）**
+
+   - x 轴：$L\in\{5,10,15,20\}$；
+   - y 轴：$\overline E_{\text{proj}}(L,\varepsilon)$ 与 $\overline E_{\text{raw}}(L,\varepsilon)$（平均 + 标准误）；
+   - 目标：观察 proj 曲线是否近似线性，而 raw 在 Type A 下是否明显更陡。
+
+2. **半 log 坐标图（$\log E$ vs L）**
+
+   - 对 raw 曲线画 $\log \overline E_{\text{raw}}(L,\varepsilon)$；
+
+   - 拟合一条直线
+     $$
+     \log \overline E_{\text{raw}}(L,\varepsilon) \approx a_{\text{raw}} + b_{\text{raw}} L;
+     $$
+
+   - 若 $b_{\text{raw}}>0$ 且拟合良好，说明 raw 模型误差随 L 近似指数增长。
+
+3. 对 proj 曲线可以也在半 log 图上拟合，预期斜率显著小于 raw，甚至为负（误差随 L 衰减），进一步说明可收缩锥的稳定性。
+
+### 8.2 主图 2：扩张 vs 收缩的对比
+
+分别对 Type A（非规范）和 Type B（左规范）：
+
+- 把 $\log \overline E_{\text{raw}}(L,\varepsilon)$ 的拟合斜率 $b_{\text{raw}}$ 汇总成条形图；
+- 同时统计 $\kappa_{\text{raw}}$ 的平均值与标准差；
+
+想要呈现的故事：
+
+- **Type A：** $\kappa_{\text{raw}}>1$ 且 $b_{\text{raw}}>0$，raw 曲线明显呈几何放大；
+- **Type B：** $\kappa_{\text{canon}}\approx 1$ 或略小于 1，$b_{\text{raw}}$ 接近 0 或为负，对应“近收缩 MPS 本身已相对稳定”。
+
+### 8.3 主图 3：proj 模型的线性界验证
+
+- 对每个 ground truth 类型、噪声 $\varepsilon$，拟合
+  $$
+  \overline E_{\text{proj}}(L,\varepsilon) \approx c_{\text{proj}} + d_{\text{proj}} L;
+  $$
+
+- 在图中显示拟合线与数据点，检验线性拟合是否合理；
+
+- 若实际误差甚至比线性更“扁”（例如随 L 几乎不变或略有下降），则说明理论的 $O(L)$ 上界是保守的，实验处在更友好的 regime。
+
+### 8.4 文字总结模板
+
+论文中可以用类似表述说明实验如何支撑理论：
+
+> On non-canonical random MPS, we observe per-layer propagation constants $\kappa_{\text{raw}}>1$ on average, and the raw Hankel error $\|H_p^{(L)}-\widetilde H_p^{(L)}\|_2$ grows nearly exponentially in $L$, as evidenced by a clear linear trend in semi-log plots. This matches the geometric amplification predicted by Theorem 5.5.
+>  After projecting the Liouville operators onto a nonnegative row-substochastic cone, the induced WFA becomes contractive in the $\ell_\infty$ norm, and the resulting Hankel error exhibits at most linear scaling in $L$, consistent with the $O(L)$ bound in Theorem 8.1(B) and Theorem 8.4.
+
+------
+
+## 9. Sanity check 与失败模式
+
+为了避免“负结果不知是理论问题还是实现问题”，需要提前规划检查项：
+
+1. **看不到几何放大（raw Type A）**
+   - 检查 $\kappa_{\text{raw}}$ 分布是否多数 $\le 1$：如果是，说明“非规范 MPS”还不够扩张，可以：
+     - 增大 bond_dim（例如 $D=6$）；
+     - 或对全部 $A_t(\sigma)$ 乘一个整体缩放因子 $c>1$；
+     - 或增加噪声 ε，使有效传播常数显著 > 1。
+2. **raw 与 proj 曲线几乎重合**
+   - 检查投影是否“真的有缩放”：看 `row_sums` 中 >1 的比例，验证有多少行被缩放；
+   - 若原始 Bs 本身已经接近行次随机，投影不会改变 $\kappa^{(\infty)}$ 太多，此时可以强行把 Type A 调得“更极端”。
+3. **数值不稳定**
+   - 检查 power iteration 的迭代次数是否足够；
+   - 对 Hankel 的谱范数估计可以加一次“固定初始向量 + 增加迭代”的 sanity run 看收敛性；
+   - 若 total_mass 明显偏离 1，确认是否需要增加 Newton–Schulz 迭代次数。
