--- a/docs/试验大纲7.md
+++ b/docs/试验大纲7.md
@@ -1,298 +1,416 @@
-## 实验 7：混态 MPDO / POVM 的 Hankel 秩（定理 12.1）
+# 实验 7：混态 MPDO / POVM 的 Hankel 秩
 
-### 1. 目标回顾
+## 0. 总体目标与理论对应
 
-**理论：**
- 在 Liouville 向量化视角下：
+### 0.1 理论背景（定理 12.1）
 
-- 初态 $\rho_0$ 有一个 MPDO（或等价的 MPO）表示，其向量化 $|\rho_0\!\rangle\!\rangle$ 是一个 MPS，键维记作 $\chi_\rho$；
+在 Liouville 向量化视角下：
 
-- POVM $\{M_x\}$ 也可以用一个“测量张量网络”表示，其在 Liouville 空间里的键维记作 $\chi_M$；
+- 初态密度矩阵 $\rho_0$ 具有 MPDO（或 MPO）表示，其向量化向量 $|\rho_0\rangle\!\rangle$ 是 bond 维为 $\chi_\rho$ 的 MPS；
+- POVM $\{M_x\}$ 的 Liouville 表示是一个“测量张量网络”，bond 维为 $\chi_M$。
 
-- 对长度 $L$ 的串 $x$，
-  $$
-  p(x)=\mathrm{Tr}(M_x\rho_0)
-  = \langle\!\langle M_x|\rho_0\!\rangle\!\rangle
-  $$
-  的张量网络跨任意割的有效维度至多是 $\chi_\rho\chi_M$，所以
-
+则长度为 $L$ 的串的分布
 $$
-\operatorname{rank}(H_p)\ \le\ \chi_\rho\chi_M.
+p(x) = \operatorname{Tr}(M_x \rho_0)
+     = \langle\!\langle M_x|\rho_0\rangle\!\rangle
 $$
+所对应的概率 Hankel 矩阵 $H_p$ 满足
+$$
+\operatorname{rank}(H_p)\ \le\ \chi_\rho \chi_M.
+$$
+特例：若测量是逐位可分的本征测量（如计算基），则 $\chi_M=1$，有
+$$
+\operatorname{rank}(H_p)\ \le\ \chi_\rho.
+$$
+重要点：
 
-特殊情况：若测量是逐位可分的本征测量（如计算基），则 $\chi_M=1$，因此
-$$
-\operatorname{rank}(H_p)\le\chi_\rho.
-$$
-**实验目标：**
-
-1. 在混态 + POVM 场景下数值验证：
-   - 对一批随机 MPDO（键维 $\chi_\rho\in\{2,4\}$）和随机 POVM（测量网络键维 $\chi_M$），构造 Hankel 矩阵 $H_p$，验证其数值秩不超过 $\chi_\rho\chi_M$；
-   - 对逐位可分测量（$\chi_M=1$）验证 $\operatorname{rank}(H_p)\le\chi_\rho$。
-2. 看“典型性”：
-   - 在随机参数化下，$\operatorname{rank}(H_p)$ 是否通常接近上界 $\chi_\rho\chi_M$（在维度允许的情况下）；
-   - 有效秩（奇异值谱）是否也集中在上界附近。
+- 证明只用到了**张量网络跨割 bond 维限制**，不依赖“正性 / 完全正”等物理约束；
+- 因此可以在 **经典行随机 stand‑in** 和 **复值 generic MPO/POVM** 两类模型上分别验证。
 
 ------
 
-## 2. 实验设置概览
+### 0.2 实验 7 的两个核心目标
 
-### 2.1 基本参数
+**目标 1：上界验证（严谨）**
 
-- 单体物理维度：$d=2$（qubit），也可以选 $d=3$ 做对比；
-- 序列长度：$L\in\{6,8,10\}$；
-- Hankel 切分点：$t_*=\lfloor L/2\rfloor$，
-  - 前缀集合：$P=\Sigma^{t_*}$，
-  - 后缀集合：$S=\Sigma^{L-t_*}$，
-  - 所以 Hankel 大小为 $|P|\times |S| = d^{t_*}\times d^{L-t_*}$；
-- MPDO 键维：$\chi_\rho\in\{2,4\}$；
-- POVM 测量网络键维：$\chi_M\in\{1,2,4\}$（$\chi_M=1$ 是逐位投影的特例）。
+> 对一大批 MPDO+POVM 模型，数值验证
+> $$
+> \operatorname{rank}(H_p)\ \le\ \min\{|P|,|S|,\chi_\rho\chi_M\}
+> $$
+> 始终成立；并在 $\chi_M=1$ 特例下验证
+> $$
+> \operatorname{rank}(H_p)\ \le\ \min\{|P|,|S|,\chi_\rho\}.
+> $$
 
-**注意：**
- 为了看见 $\chi_\rho\chi_M$ 上界的“紧性”，我们要保证
+**目标 2：典型性 / 近紧性（support “几乎满秩”）**
+
+- 在“结构极强”的 **经典 stand‑in** 上，展示结构性低秩：Hankel 秩显著低于 $\chi_\rho\chi_M$，有效秩很小，说明「低秩是强结构带来的，不是一般现象」；
+- 在 **复值 generic MPO/POVM** 上，展示「几乎总是满秩至 $\min(|P|,|S|,\chi_\rho\chi_M)$」，有效秩接近 $\chi_\rho\chi_M$，为“上界近紧 / 典型满秩”提供数值证据。
+
+为此，实验分两大部分：
+
+- **Part A：经典 noisy‑channel MPDO + 行随机 POVM**（当前脚本 `exp7_mpdo_povm.py` 已经实现）exp7_mpdo_povm
+- **Part B：复值随机 MPO + POVM 网络（代数 generic）**（需要新增脚本/模块）
+
+------
+
+## 1. 公共实验设置
+
+这一节是两个 Part 共用的设置。
+
+### 1.1 基础参数
+
+- **单点物理维度**：
+  - 主设定：$d = 2$（qubit）；
+  - 扩展：补充 $d = 3$ 一组（见稳健性扩展部分）。
+- **序列长度**：
+  - 主设定：$L \in \{6, 8, 10\}$；
+  - 对 d=3，可考虑 $L \in \{5,7\}$（避免 $3^{10}$ 太大）。
+- **切分点**：
+  - $t_\* = \lfloor L/2 \rfloor$；
+  - 前缀集合 $P = \Sigma^{t_\*}$，后缀集合 $S = \Sigma^{L-t_\*}$；
+  - Hankel 尺寸 $|P|\times|S| = d^{t_\*}\times d^{L-t_\*}$。
+- **MPDO bond**：$\chi_\rho \in \{2,4\}$（如时间还够可加 $\chi_\rho = 8$ 做一组小 L）；
+- **POVM bond**：$\chi_M \in \{1,2,4\}$。
+  - $\chi_M=1$：逐位投影（可分测量）；
+  - $\chi_M>1$：相关 POVM 网络。
+- **每配置随机实例数**：
+  - 主设定：$N_{\text{inst}} = 30$（已在脚本中使用）exp7_mpdo_povm
+  - 可选扩展到 50 以减少方差。
+
+### 1.2 Hankel 秩的“cap”
+
+对每个配置（L, χρ, χM）：
+
+- 计算：
+  $$
+  \text{rank\_upper} = \chi_\rho \chi_M
+  $$
+
+- 定义真正的上界：
+  $$
+  \text{rank\_cap} = \min\{|P|,|S|,\text{rank\_upper}\}.
+  $$
+
+- 数值秩 `hankel_rank` 需要满足：
+  $$
+  \operatorname{rank}_{\text{num}}(H_p)\ \le\ \text{rank\_cap}.
+  $$
+
+**参数选择原则**：保证绝大多数感兴趣配置满足
+ $|P|, |S| \ge \chi_\rho\chi_M$，这样 “cap” 真正反映的是 $\chi_\rho\chi_M$ 结构，而不是被 $d^{t_*}$ 截断。
+
+------
+
+### 1.3 数值秩与 effective rank 统一定义
+
+对任意 $H_p$，做 SVD：
 $$
-|P|,\ |S|\ \ge\ \chi_\rho\chi_M,
+H_p = U\Sigma V^\top,\qquad 
+\Sigma = \operatorname{diag}(\sigma_1\ge\sigma_2\ge\cdots\ge0).
 $$
-否则 rank 还会受 $|P|,|S|$ 限制（$\operatorname{rank}(H_p)\le \min(|P|,|S|)$）。
- 在 $d=2,L=8$ 时，$t_*=4\Rightarrow |P|=|S|=2^4=16$，可以容纳 $\chi_\rho\chi_M\le 16$ 的各种组合。
+**数值秩**（所有实验统一规则）：
+
+- 绝对阈值：`tol_abs = 1e-10`（比当前代码 1e-12 略松一点，避免把纯浮点噪声当非零）；
+
+- 相对阈值：`tol_rel = 1e-8`（可保留不变）；
+
+- 阈值：
+  $$
+  \text{threshold} = \max(\text{tol\_abs},\ \text{tol\_rel}\cdot\sigma_1);
+  $$
+
+- 数值秩：
+  $$
+  \operatorname{rank}_{\text{num}}(H_p) = \#\{i:\sigma_i\ge\text{threshold}\}.
+  $$
+
+**Effective rank**：
+
+- 连续 effective rank：
+  $$
+  r_{\text{eff}} = \frac{\left(\sum_i\sigma_i\right)^2}{\sum_i\sigma_i^2};
+  $$
+
+- 归一谱阈值 soft rank：
+  $$
+  r_{\text{eff}}(\eta) = \#\left\{i: \frac{\sigma_i}{\sigma_1}\ge\eta\right\},\quad\eta\in\{10^{-2},10^{-3}\}.
+  $$
+
+所有这些指标都写进 CSV（当前脚本已经包含大部分字段，可以保持一致并稍微调整 tol）exp7_mpdo_povm。
 
 ------
 
-## 3. 混态 MPDO 的构造（$\chi_\rho$）
+## 2. Part A：经典 noisy‑channel MPDO + 行随机 POVM（物理 stand‑in）
 
-这里有很多实现路线，你原文里也提了“finite-temperature MPS 或随机噪声态”。可以给出两种主流方法，实际实现时挑自己熟悉的一种即可。
+这一部分即为当前 `exp7_mpdo_povm.py` 实现的模型，是一个**正的 Liouville 链 stand‑in**。exp7_mpdo_povm
 
-### 3.1 方法 A：有限温度态（thermal MPDO）
+### 2.1 MPDO core 构造（χρ）
 
-1. 选一个简单的局域哈密顿量，例如：
-   $$
-   H = \sum_{t=1}^{L-1} J\,\sigma^z_t\sigma^z_{t+1} + h\sum_{t}\sigma^x_t,
-   $$
-   用标准的 1D 模型（Ising / Heisenberg 均可）。
+**目标**：构造一个维度为 $\chi_\rho$ 的行随机链，作为 Liouville MPDO 核。
 
-2. 用 TEBD / imaginary-time evolution（标准 MPO 技术）构造 $\rho(\beta)\propto e^{-\beta H}$ 的 MPDO 近似，并在演化过程中**截断 MPO 键维到 $\chi_\rho$**。
+具体做法（与现有代码一致，可直接沿用）：
 
-3. 对得到的 MPDO 做一次归一化：$\rho_0 = \rho/\mathrm{Tr}\rho$。
+1. `build_chain(d, chi_rho)`：
+   - `alpha_rho`：长度 χρ 的随机概率向量；
+   - 对每个符号 sym 生成 row‑stochastic 矩阵 `A_syms[sym] ∈ R^{χρ×χρ}`。
+2. 用 `mpdo_depth`（比如 3） 和 `noise`（比如 0.1）进行多层 mixing：
+   - `A_syms[sym] ← mix_row_stochastic(A_syms[sym], noise)`；
+   - 使用 `alpha_rho ← normalize(A_syms[0] @ alpha_rho)` 做若干步演化。
+3. 终止向量：`beta_rho = 1_{χρ}`。
 
-此时我们定义“MPDO 键维”为算法中使用的最大 MPO bond dimension $\chi_\rho$。
+这样得到的 $(alpha_\rho, \{A_\rho(\sigma)\}, beta_\rho)$ 本质上是一个维度 χρ 的非负 WFA。
 
-### 3.2 方法 B：随机噪声态（channel 生成的 MPDO）
+### 2.2 POVM 网络构造（χM）
 
-1. 初始态取 $\rho^{(0)} = |0\rangle\langle 0|^{\otimes L}$（可写成 bond‑1 的 MPDO）。
-2. 构造若干层近邻噪声通道：
-   - 例如每层对每对相邻比特施加随机 CPTP 映射（用 2–3 个 Kraus 算子，张量网络实现为 bond $\chi_\rho$ 的 MPO）；
-   - 或者每层先用随机浅层双比特 unitary（MPO）纠缠，再加局域退相干（对角 Kraus）。
-3. 使用 MPO 格式逐层更新 $\rho^{(\ell)} = \mathcal E^{(\ell)}(\rho^{(\ell-1)})$，并在每步后将 MPO 截断到最大 bond 维 $\chi_\rho$。
-4. 最终得到 $\rho_0=\rho^{(L_{\rm layers})}$。
+有两种模式：
 
-这类“随机噪声链”的混态非常典型，且容易得到任意给定的 MPDO 键维 $\chi_\rho$。
+1. $\chi_M = 1$：**逐位可分测量**
+   - `meas_alpha = [1.0]`, `meas_beta = [1.0]`;
+   - `meas_syms[sym] = [[1.0]]`；
+   - `measurement = "separable"`。
+2. $\chi_M > 1$：**浅层 correlated POVM 网络**
+   - 通过 `build_chain(d, chi_m)` 得到 `meas_alpha` 和 `meas_syms[sym] ∈ R^{χM×χM}`；
+   - 用 `meas_depth` 和 `noise` 同样进行 mixing；
+   - `meas_beta = 1_{χM}`；
+   - `measurement = "network"`。
 
-> 对实验目的来说，我们只需要「$\rho_0$ 的 Liouville 向量化 MPS 键维 ≈ $\chi_\rho$」，具体物理含义可以不苛求到极致。
+### 2.3 联合 Liouville 链与 p(x)
+
+在联合空间维度 $\chi_\rho\chi_M$ 上定义：
+
+- 初始向量：
+  $$
+  \alpha = \alpha_\rho\otimes\alpha_M;
+  $$
+
+- 终止向量：
+  $$
+  \beta = \beta_\rho\otimes\beta_M;
+  $$
+
+- 对符号 sym：
+  $$
+  B_{\text{sym}} = A_\rho(\text{sym})\otimes A_M(\text{sym}).
+  $$
+
+对每个字符串 $x=x_1\cdots x_L$：
+
+1. `vec = alpha`；
+2. 对 t=1..L：`vec ← B_{x_t} vec`；
+3. `prob_x = dot(vec, beta)`；
+4. 对所有 x 的 `prob_x` 做一次归一化，确保 $\sum_x p(x)=1$。
+
+然后按 $H_p(u,v) = p(uv)$ 构造 Hankel。
+
+### 2.4 Part A 的参数与输出
+
+- 采用前述公共设定：
+  - L ∈ {6,8,10}；χρ ∈ {2,4}；χM ∈ {1,2,4}；d=2；
+  - `mpdo_depth = 3`, `meas_depth = 2`, `noise=0.1`（可再加一组 noise=0.3 做对比）。
+- 每个配置 30–50 个实例；
+- 输出字段（基本沿用现有 CSV）：
+   `length, t_star, chi_rho, chi_M, measurement, trial, hankel_rank, rank_upper, rank_cap, within_cap, effective_rank, r_eff_1e2, r_eff_1e3, sv_max, sv_min_thresholded, threshold, prefixes, suffixes, d`。
 
 ------
 
-## 4. POVM 测量网络的构造（$\chi_M$）
+## 3. Part B：复值随机 MPO / POVM（代数 generic）
 
-我们需要两类 POVM：
+Part B 不是为了物理 realism，而是为了：
 
-### 4.1 类 1：逐位投影（$\chi_M=1$）
-
-每个 site 上使用计算基测量：
-
-- 单位点 POVM 元素：
-  $$
-  \{ |0\rangle\langle 0|,\ |1\rangle\langle 1|\},
-  $$
-
-- 整体 POVM 元素为：
-  $$
-  M_x = |x_1\cdots x_L\rangle\langle x_1\cdots x_L|,\quad x\in\{0,1\}^L.
-  $$
-
-在 TN 视角中，这就是一个**逐位可分**的测量网络，其 Liouville 键维 $\chi_M = 1$。
-
-### 4.2 类 2：浅层纠缠 POVM（$\chi_M>1$）
-
-一个自然的构造是：
-
-1. 先作用一个浅层测量网络 $U_{\rm meas}$（brickwall 随机两比特 unitary 电路），表示为 bond‑$\chi_U$ 的 MPO（例如深度 1-2，bond 维一般 $\le 4$）。
-
-2. 然后在输出端逐位做计算基测量。整体 POVM 元素为：
-   $$
-   E_x = U_{\rm meas}^\dagger |x\rangle\langle x| U_{\rm meas}.
-   $$
-
-在 Liouville 空间中，$U_{\rm meas}$ 对应一个 MPS/ MPO，键维记作 $\chi_M \approx\chi_U^2$（向量化后）。实际操作上可以直接把 $E_x$ 写成一个“测量 MPO”，然后把其向量化 MPS 的 bond 维作为 $\chi_M$。
-
-实验中可以选几种典型 $\chi_M$：
-
-- 浅层一层 gate → $\chi_M\approx 2$；
-- 深度 2 的 brickwall → $\chi_M\approx 4$；
-
-并通过 TN 规范化 + 截断控制到目标范围。
-
-> 物理上这是“先做少量纠缠，再测量”的 POVM，足够体现 $\chi_M>1$ 的情形和 rank 上界的变化。
-
-------
-
-## 5. Hankel 矩阵的构造与数值秩
-
-### 5.1 概率分布 $p(x)$ 的计算
-
-对给定 $L$、MPDO $\rho_0$ 和 POVM $\{E_x\}$：
-
-- 对任意二进制串 $x\in\{0,1\}^L$：
-  $$
-  p(x) = \mathrm{Tr}(E_x\rho_0)
-  $$
-
-- 实现上可以用 TN contraction：
-
-  - 对逐位投影：$p(x)$ 就是 $\rho_0$ 在 $|x\rangle\langle x|$ 基下的对角元，可以直接通过 MPO 的局域 contraction 得到；
-  - 对纠缠 POVM：用 MPDO + 测量 MPO 进行 contraction 即可。
-
-对每个随机实例，我们枚举所有 $x\in\Sigma^L$（如 L≤10 时 1024 个点完全可行）并存下 $p(x)$。
-
-### 5.2 Hankel $H_p$ 的构造
-
-选定切分点 $t_*=\lfloor L/2\rfloor$：
-
-- 前缀集合：$P=\Sigma^{t_*}$；
-- 后缀集合：$S=\Sigma^{L-t_*}$。
-
-对每个 $u\in P, v\in S$：
-
-- 拼接 $x=uv$，定义
-  $$
-  H_p(u,v) = p(uv).
-  $$
-
-这样得到一个 $|P|\times |S|$ 的 Hankel 矩阵 $H_p$。
- 只要保证 $|P|,|S|\ge\chi_\rho\chi_M$，理论上 rank 上界才有机会显式体现为 $\chi_\rho\chi_M$。
-
-### 5.3 数值秩与有效秩
-
-对每个 $H_p$ 做 SVD：
-$$
-H_p = U\Sigma V^\top,\quad
-\Sigma=\mathrm{diag}(\sigma_1\ge\sigma_2\ge\cdots).
-$$
-**数值秩定义：**
-
-- 选定相对阈值 $\tau$（例如 $10^{-10}$）：
-  $$
-  \operatorname{rank}_\tau(H_p)
-  = \#\{i:\sigma_i\ge\tau\,\sigma_1\}.
-  $$
-
-**有效秩（可选）：**
-
-- 也可以看“绝对阈值”意义下的有效秩：
-  $$
-  \operatorname{rank}_\varepsilon(H_p)
-  = \#\{i:\sigma_i\ge\varepsilon\}
-  $$
-  例如 $\varepsilon$ 取 $10^{-6},10^{-8}$ 等。
-
-实验中我们关注：
-
-- 真正的“数值秩” $\operatorname{rank}_\tau(H_p)$ 与 $\chi_\rho\chi_M$ 的关系；
-- 有效秩 vs $\chi_\rho\chi_M$ 的统计分布。
-
-------
-
-## 6. 实验流程与指标
-
-### 6.1 批量随机实验
-
-对每个配置：
-
-- 物理维度 $d=2$；
-- 长度 $L\in\{6,8,10\}$（至少选一个，比如 L=8）；
-- MPDO 键维 $\chi_\rho\in\{2,4\}$；
-- POVM 键维 $\chi_M\in\{1,2,4\}$；
-
-执行以下步骤：
-
-1. 重复 $N_{\rm inst}$ 次（例如 30–50 个随机实例）。
-2. 每次实例中：
-   1. 随机生成一个 MPDO $\rho_0$（方法 A/B，截断 bond 维 $\chi_\rho$）；
-   2. 随机生成一个 POVM 网络：
-      - 若 $\chi_M=1$：逐位投影；
-      - 若 $\chi_M>1$：随机浅层 unitary + 本征测量，保证测量网络的 Liouville bond 维在目标范围内。
-   3. 枚举所有 $x\in\Sigma^L$，计算 $p(x)$；
-   4. 选定切分点 $t_*$，构造 Hankel $H_p$；
-   5. SVD，记录数值秩 $\operatorname{rank}_\tau(H_p)$ 以及若干有效秩（如 $\operatorname{rank}_\varepsilon(H_p)$）。
-
-### 6.2 指标 1：rank(H_p) vs $\chi_\rho\chi_M$
-
-**硬性上界验证：**
-
-- 对每个实例检查：
-  $$
-  \operatorname{rank}_\tau(H_p)\ \le\ \min\big\{|P|,|S|,\ \chi_\rho\chi_M\big\}
-  $$
-  （其中 $|P|$,$|S|$ 是维度本身）。
-
-- 若出现超过 $\chi_\rho\chi_M$ 的情况，十有八九是数值阈值或 SVD 精度的问题，需要调节 $\tau$ 或检查实现。
-
-**统计图：**
-
-- 对每个配置 ($\chi_\rho,\chi_M$)，画一个直方图或箱型图：
-  - 横轴：实例编号或 rank 值；
-  - 纵轴：$\operatorname{rank}_\tau(H_p)$；
-  - 画一条水平线在 $\chi_\rho\chi_M$ 处表示理论上界。
-
-**预期：**
-
-- 在所有实例上，$\operatorname{rank}_\tau(H_p)$ 从不超过 $\chi_\rho\chi_M$；
-- 当 $|P|,|S|$ 足够大时（例如 L=8，$|P|=|S|=16$），大部分随机实例的 Hankel 秩会**接近** $\chi_\rho\chi_M$，验证“上界通常是紧的”。
-
-### 6.3 指标 2：可分测量特例（$\chi_M=1$）
-
-单独统计“逐位投影 POVM” 的情形：
-
-- 对 $\chi_M=1$ 的所有实例，绘制 $\operatorname{rank}_\tau(H_p)$ 的分布，并对比 $\chi_\rho$；
-
-- 这里理论上界变成：
-  $$
-  \operatorname{rank}(H_p)\le \chi_\rho.
-  $$
-
-**预期：**
-
-- 在 $\chi_M=1$ 情形下，数值秩 $\operatorname{rank}_\tau(H_p)$ 从不超过 $\chi_\rho$；
-- 对“随机 MPDO + 可分测量”，典型情况下 $\operatorname{rank}_\tau(H_p)$ 会接近 $\chi_\rho$（就像纯态 MPS 情形 rank 接近 D 或 D²）。
-
-### 6.4 指标 3：有效秩与“接近上界”的程度
-
-为了看得更细一点，可以考察奇异值谱，定义一种“软”的有效秩，比如：
-
-- 归一化奇异值：$\tilde\sigma_i = \sigma_i/\sigma_1$；
-
-- 对给定阈值 $\eta\in\{10^{-2},10^{-3}\}$：
-  $$
-  r_{\rm eff}(\eta) = \#\{i:\tilde\sigma_i\ge\eta\}.
-  $$
-
-然后统计：
-
-- $r_{\rm eff}(\eta)$ 在各实例中的分布，相对于 $\chi_\rho\chi_M$；
-- 看看大量实例是不是有 $r_{\rm eff}$ 靠近 $\chi_\rho\chi_M$，还是奇异值谱有明显衰减（比如有效秩远小于理论上界，表示混态 + POVM 结构自身就引入了额外的低秩结构）。
-
-**预期：**
-
-- 对“随机 MPDO + 随机纠缠 POVM”（$\chi_M>1$）大多数实例，$r_{\rm eff}(\eta)$ 会向 $\chi_\rho\chi_M$ 聚集 ⇒ 说明上界在“典型模型”下是近紧的；
-- 对“逐位测量”（$\chi_M=1$），$r_{\rm eff}(\eta)$ 集中在 $\chi_\rho$ 以下，验证特例的 rank 上界。
-
-------
-
-## 7. 总结 & 写在论文里的话
-
-可以在第 12 章实验小节中这样总结：
-
-> We verify Theorem 12.1 in the mixed-state setting by generating random MPDOs with bond dimension $\chi_\rho\in\{2,4\}$ and random POVMs implemented by shallow measurement tensor networks with bond dimension $\chi_M\in\{1,2,4\}$. For each configuration, we enumerate the induced distribution $p(x)=\mathrm{Tr}(M_x\rho_0)$ over length-$L$ strings, construct the corresponding probability Hankel matrix $H_p(P,S)$, and compute its numerical rank via SVD.
+> 在一个对参数 Lebesgue‑随机、仅约束 bond 维度 $\chi_\rho,\chi_M$ 的复值网络中，检验：
 >
-> Across all instances, the observed Hankel ranks never exceed $\chi_\rho\chi_M$ (up to numerical tolerance), confirming the general upper bound. Moreover, for sufficiently large prefix/suffix sets, the empirical ranks typically saturate the bound $\chi_\rho\chi_M$, indicating that this upper bound is essentially tight for generic MPDO+POVM parametrizations. In the special case of site-wise projective measurements ($\chi_M=1$), the Hankel rank is always bounded by $\chi_\rho$, in accordance with the pure-MPS limit and the specific corollary of Theorem 12.1.
+> - rank(H_p) 是否几乎总是达到 $\min(|P|,|S|,\chi_\rho\chi_M)$，
+> - 有效秩是否接近 $\chi_\rho\chi_M$。
 
-这样，前面纯态 MPS 的 rank ≤ D²（实验 1）＋这里混态 MPDO 的 rank ≤ χρ χM（实验 7），就把你整篇文章“Born–Hankel–TN”的秩故事完全闭合了：从纯态到混态，从 projective measurement 到 general POVM，都有实证支撑。
+这里可以简化为“复值 WFA / MPO”的构造，不一定要严格 MPDO，只要满足**跨割 bond 维=$\chi_\rho$** 和 **测量网络 bond=$\chi_M$** 即可。
+
+### 3.1 复值 “状态链”（χρ）
+
+构造一个复值 WFA：
+
+- 选择维度 $D = \chi_\rho$；
+
+- 对每个符号 $\sigma \in \{0,\dots,d-1\}$ 生成随机复矩阵：
+  $$
+  A_\rho(\sigma) \in \mathbb{C}^{D\times D},
+  $$
+  元素独立采样自 $\mathcal{N}(0,1)+i\mathcal{N}(0,1)$，再做一次缩放（比如除以 $\sqrt{D}$）防止数值爆炸；
+
+- 边界向量：
+  $$
+  \alpha_\rho,\beta_\rho \in \mathbb{C}^D
+  $$
+  同样随机复向量、归一化到 $\|\alpha_\rho\|_2=\|\beta_\rho\|_2=1$。
+
+这就是“复值状态 MPO”的最简版本：bond 维 $=\chi_\rho$。
+
+### 3.2 复值 “测量链”（χM）
+
+同理构造一个维度 $E = \chi_M$ 的复值 WFA：
+
+- 矩阵：
+  $$
+  A_M(\sigma) \in \mathbb{C}^{E\times E}
+  $$
+  元素同样随机复高斯；
+
+- 边界：
+  $$
+  \alpha_M,\beta_M \in \mathbb{C}^E
+  $$
+  归一化向量。
+
+> 这等价于在 Liouville 空间上假设「测量 MPO 的向量化」是 bond 维为 $\chi_M$ 的随机复值 MPS。
+
+### 3.3 联合复值链与概率定义
+
+与 Part A 类似：
+
+- 初始向量：
+  $$
+  \alpha = \alpha_\rho\otimes\alpha_M \in \mathbb{C}^{DE};
+  $$
+
+- 终止向量：
+  $$
+  \beta = \beta_\rho\otimes\beta_M \in \mathbb{C}^{DE};
+  $$
+
+- 转移：
+  $$
+  B_{\text{sym}} = A_\rho(\text{sym})\otimes A_M(\text{sym})\in\mathbb{C}^{DE\times DE}.
+  $$
+
+对每个串 $x$ 计算**复振幅**：
+$$
+\psi(x) := \alpha^\dagger B_{x_1}\cdots B_{x_L}\beta.
+$$
+为了得到概率分布，可以用 Born 机式定义：
+$$
+\tilde p(x) := |\psi(x)|^2,\qquad
+p(x) := \frac{\tilde p(x)}{\sum_{y} \tilde p(y)}.
+$$
+这样：
+
+- 保证 $p(x)\ge0$，且 $\sum_x p(x)=1$；
+- 由于构造是完全一般的复值 WFA，跨割 bond 维恰好是 $DE=\chi_\rho\chi_M$，符合定理 12.1 的结构假设。
+
+### 3.4 Part B 的参数与采样策略
+
+- 主设定：
+  - d = 2；L ∈ {6,8}（不必做到 10，避免复数 SVD 太慢）；
+  - χρ ∈ {2,4}；χM ∈ {1,2,4}；
+  - 每配置 30–50 个随机实例。
+- 输出字段与 Part A 相同，只是 Hankel 里的元素此时是 $p(x)\in\mathbb{R}$（已经取模平方后归一化），所以直接用与 Part A 相同的 SVD 代码即可。
+
+------
+
+## 4. 稳健性与扩展实验
+
+为了让实验更“顶配”，补三类扩展：
+
+### 4.1 不同 d 与 L 的扩展
+
+- 对 **d=3, L=5,7** 再跑一遍 Part A + Part B 的关键配置（例如 χρ=2,4；χM=1,2），验证：
+  - rank 上界不被违反；
+  - generic 情况下仍然接近满秩。
+- 这样可以说明结论不仅限于 qubit。
+
+### 4.2 数值阈值的敏感性分析
+
+- 在部分配置上，额外用 `tol_abs ∈ {1e-9,1e-10,1e-11}` 和 `tol_rel ∈ {1e-7,1e-8,1e-9}` 做比较，统计：
+  - `hankel_rank` 的变化；
+  - 有多少实例在阈值变化时 rank 有翻转；
+- 预期：
+  - “within_cap” 不会受阈值影响（上界稳固）；
+  - 满秩比率 / 平均 rank 略微波动，但不改变整体趋势（Part A 低秩、Part B 近满秩）。
+
+### 4.3 深度 / 噪声的影响（Part A）
+
+只在 Part A 上做一个小型网格：
+
+- `mpdo_depth ∈ {1,3,5}`；
+- `meas_depth ∈ {1,2,4}`；
+- `noise ∈ {0.0, 0.1, 0.3}`。
+
+观察：
+
+- 随着 depth 增大、noise 增大，
+   `effective_rank` 是否有系统变化；
+- 直观上：
+  - 更深 / 更强噪声的行随机链倾向于**增强混合**，可能提升一些秩，但仍显著低于 $\chi_\rho\chi_M$，凸显经典结构的局限性。
+
+------
+
+## 5. 数据分析计划与成功标准
+
+### 5.1 上界验证（目标 1）
+
+对所有配置（Part A + Part B），统计：
+
+- `within_cap` 的总计：若所有记录 `within_cap == 1`，则可以非常干净地说“定理 12.1 的 rank 上界在数值上完全没有被违反”。
+
+另外，单独列出 $\chi_M=1$ 的子集：
+
+- 验证：
+  $$
+  \operatorname{rank}_{\text{num}}(H_p)\ \le\ \min(|P|,|S|,\chi_\rho)
+  $$
+  是否一直成立。
+
+**成功标准**：在所有合理阈值设置下，上界从未被违反；若偶尔出现 1–2 个 due to 数值极端，可通过放宽 tol_abs 观察是否消失，并在附录说明。
+
+------
+
+### 5.2 典型性 / 近紧性（目标 2）
+
+定义以下统计量（对每个配置分别在 Part A / Part B 计算）：
+
+- 满秩比率：
+  $$
+  \text{full\_ratio} := \Pr[\operatorname{rank}_{\text{num}}(H_p)=\text{rank\_cap}];
+  $$
+
+- 平均 rank 占比：
+  $$
+  \mathrm{E}\left[\frac{\operatorname{rank}_{\text{num}}(H_p)}{\text{rank\_cap}}\right];
+  $$
+
+- 平均 soft‑rank 占比（$\eta = 10^{-2},10^{-3}$）：
+  $$
+  \mathrm{E}\left[\frac{r_{\text{eff}}(\eta)}{\text{rank\_cap}}\right].
+  $$
+
+**预期模式**：
+
+- **Part A（经典 stand‑in）**：
+  - `full_ratio` 大多远小于 1（尤其 χM>1 时），甚至接近 0；
+  - 平均 rank 占比在 0.3–0.7 之间浮动；
+  - `r_eff(1e-2)/rank_cap` 明显 < 0.5。
+- **Part B（复值 generic）**：
+  - 当 $\text{rank\_cap} = \chi_\rho\chi_M$ 不被 |P|,|S| 截断时：
+    - 大部分配置的 `full_ratio` 接近 1；
+    - 平均 rank 占比 ≈ 0.9–1.0；
+    - `r_eff(1e-2)/rank_cap` 非常接近 1（说明非零奇异值谱相对均衡）。
+
+如果上述模式在多个 L, χρ, χM 上稳定出现，就可以非常有力地说：
+
+> 在 generic 复值 MPDO+POVM 网络上，定理 12.1 的秩上界基本是 tight 的，
+>  而经典行随机 stand‑in 则体现出强结构导致的“额外低秩”。
+
+------
+
+### 5.3 论文中的叙述建议
+
+**上界部分（严谨结论）：**
+
+> 我们在两类模型上数值验证了定理 12.1 的 rank 上界。
+>  在 Part A 中，我们使用浅层 noisy‑channel MPDO（bond $\chi_\rho$）和行随机 POVM 网络（bond $\chi_M$）生成概率分布，枚举长度 $L\in\{6,8,10\}$ 上的所有字符串，构造 mid‑cut Hankel 矩阵并计算数值秩。所有配置、所有实例的 Hankel 秩均未超过 $\min(|P|,|S|,\chi_\rho\chi_M)$，在 site‑wise projective 测量的特例（$\chi_M=1$）下，秩始终被 $\chi_\rho$ 上界控制。
+>
+> 在 Part B 中，我们进一步使用随机复值 MPO 生成 generic MPDO+POVM 网络。尽管这类网络不强加任何正性约束，其结构仍由 bond 维度 $\chi_\rho,\chi_M$ 控制。Hankel 秩的数值评估同样从未超过 $\min(|P|,|S|,\chi_\rho\chi_M)$，从而为定理 12.1 提供了代数层面的独立验证。
+
+**近紧性 / 典型性部分（解释性结论）：**
+
+> 在经典 noisy‑channel stand‑in（Part A）中，Hankel 秩和有效秩通常明显低于理论上界，这反映了浅层 Markov 结构与非负性共同施加的强约束。
+>  相比之下，在复值随机 MPO/POVM（Part B）中，Hankel 秩和 effective rank 几乎总是接近 $\min(|P|,|S|,\chi_\rho\chi_M)$，为“rank(H_p)≤$\chi_\rho\chi_M$ 对 generic 参数族而言基本 tight”的理论命题提供了直接数值证据。
