--- a/docs/试验大纲8.md
+++ b/docs/试验大纲8.md
@@ -1,247 +1,355 @@
-## 实验 8：QAE 对 Hankel 估计的加速
+# 实验 8：QAE 对 Hankel 估计的加速
 
-（对应定理 12.3）
+> 对应理论：第 12 章定理 12.3（QAE 增强的 Hankel 集中不等式）
 
-### 0. 理论目标回顾
+------
 
-定理 12.3 说的是：如果在构造经验 Hankel $\widehat H$ 时，用 QAE (Quantum Amplitude Estimation) 来估计每个概率条目，那么
+## 0. 理论目标与实验角色
+
+### 0.1 定理 12.3（简化版）
+
+定理 12.3 声称：当用 QAE 来估计概率并构造经验 Hankel 矩阵 $\widehat H$ 时，在理想模型下有（忽略常数和对数因子）：
 $$
 \|\widehat H - H\|_2
-\ \lesssim\
-C_1\frac{1}{K}\sqrt{\frac{\mu \log((m+n)/\delta)}{N}}
-\ +\ 
-C_2\frac{\log((m+n)/\delta)}{N}
-\ +\ b_K,
+\;\lesssim\;
+\underbrace{\frac{1}{K}\sqrt{\frac{\mu}{N}}}_{\text{QAE 方差项}}
+\;+\;
+\underbrace{\frac{1}{N}}_{\text{有界差分项}}
+\;+\;
+\underbrace{b_K}_{\text{QAE 偏差项}}.
 $$
 
-- $N$：“外层”样本数（one-shot 轮数）；
-- $K$：每一轮内 QAE 使用的查询次数（Grover 迭代轮数）；
-- $\mu$：相干度；
-- 关键点：**第一项的方差前因子随 $1/K$ 缩放**，而经典频数估计对应的是 $1/\sqrt{\text{查询次数}}$。
+- $N$：外层轮数（类比“one-shot 采样轮数”）
+- $K$：每轮 QAE 的查询次数（oracle 调用数）
+- $\mu$：Hankel 相干度
+- $b_K$：QAE 算法自身的偏差项（典型为 $O(1/K)$ 或更小）
 
-**实验目标：**
+若用总 query 数 $Q = N K$ 来比较：
 
-1. 在**单一概率振幅**上验证：QAE 的估计误差（均方根）随 $K$ 近似按 $1/K$ 缩放。
-2. 在**整块 Hankel 矩阵**层面，固定 $N$，考察
-    $\|\widehat H_{K,N}-H\|_2$ 随 $K$ 的缩放，是否接近 $1/K$。
+- 经典频数估计：误差 $\sim Q^{-1/2}$
+- 理想 QAE：主方差项 $\sim Q^{-1}$ —— **二次加速**
+
+### 0.2 实验 8 的定位（一定要在论文里说清）
+
+实验 8 刻意拆成两层：
+
+1. **层 1：理想噪声模型下的 scaling 插图（主实验）**
+   - 假设“单个 $p(x)$ 的估计方差 $\propto p(1-p)/(N K^2)$、偏差 $\propto 1/K$”已经成立；
+   - 在这个 entry-wise 噪声模型前提下，验证：
+     - 单一振幅的 RMSE 是否随 $K$ 呈 $1/K$；
+     - 整块 Hankel 的谱范数/ Frobenius 范数误差是否随 $K$ 呈 $1/K$，随 $N$ 呈 $1/\sqrt N$。
+2. **层 2：小规模真实 QAE 仿真（补强）**
+   - 在 1–2 比特上用量子模拟器跑真实 QAE；
+   - 检查单振幅 RMSE vs $K$ 的斜率是否 ≈ -1，以验证“理想噪声模型”确实反映了实际 QAE 的主要 scaling。
+
+> 写 paper 时：
+>
+> - 对 Part A/B，要明确说是**理想噪声模型下的数值插图**；
+> - 对 Part C，说它是对噪声模型合理性的一个小规模“sanity check”。
 
 ------
 
-## Part A：单一振幅的 QAE 缩放（warm-up）
+## 1. 整体结构与参数空间
 
-这个部分不涉及 Hankel，只是纯粹验证 QAE 的标准误差标度。
+### 1.1 三个子实验
 
-### A.1 目标与设定
+- **Part A：单一振幅 QAE 缩放（warm-up）**
+  - 关注：标量概率估计的 RMSE vs $K$、vs $N$。
+- **Part B：整块 Hankel 的 QAE 缩放（主实验）**
+  - 关注：$|\widehat H_{K,N}-H|*2$ 和 $|\widehat H*{K,N}-H|_F$ 对 $K$ 和 $N$ 的 scaling，以及对 classical baseline 的提升。
+- **Part C（扩展）：真实 QAE 仿真**
+  - 关注：真实 QAE 的 RMSE vs $K$ 是否与 Part A 噪声模型匹配。
 
-选择一个固定的概率值 $p \in (0,1)$（例如 $p=0.15$ 或你模型中某个事件的真实概率），模拟两种估计方式：
+### 1.2 建议参数（与 `exp8_qae_scaling.py` 对齐）
 
-- 经典采样：频数估计 $\hat p_{\text{cl}}$；
-- QAE：按 ideal 算法得到 $\hat p_{\text{QAE},K}$（每次使用 K 次 oracle/query）。
+主脚本已经支持以下参数：exp8_qae_scaling
 
-看 $\mathbb E|\hat p - p|$ 或 $\sqrt{\mathbb E(\hat p-p)^2}$ 如何随 K 变化。
-
-### A.2 模拟 QAE 的两种实现方案
-
-你可以选其一：
-
-**方案 (1)：理想算法仿真（小规模量子电路）**
-
-- 定义单 qubit “good state” 制备算子 $U_p$：
-  $$
-  U_p|0\rangle = \sqrt{p}\,|1\rangle + \sqrt{1-p}\,|0\rangle.
-  $$
-
-- 定义 oracle $O_{\rm good}$ 标记 $|1\rangle$，Grover 算子 $Q = -U_p S_0 U_p^\dagger S_f$；
-
-- 标准 QAE 算法：用 $m$ 个辅助 qubit，对 $\{Q^{2^j}\}_{j=0}^{m-1}$ 控制应用，做 QFT，测量得到一个估计 $\tilde\theta$，再转成 $\hat p = \sin^2(\tilde\theta)$。其中 $K\approx 2^m$ 控制总体查询次数。
-
-- 用 statevector 仿真器跑多次，统计 $|\hat p - p|$ 的均值/MSE。
-
-**方案 (2)：直接用理论误差模型采样（快 & 足够）**
-
-若你不想搭完整 QAE 电路，可以用一个“理论 noise model”近似：
-
-- 理想 QAE 的误差满足 $\mathbb E|\hat p-p|=O(1/K)$，分布近似集中；
-
-- 你可以用一个简化模型：
-  $$
-  \hat p_{\text{QAE},K}=p + \frac{Z}{K},
-  $$
-  其中 $Z$ 是零均值的随机变量（例如截断高斯或简单的离散偏差）：
-
-  - 例如选 $Z\sim\mathcal N(0,\sigma_0^2)$，再把 $\hat p$ 截断到 $[0,1]$ 区间即可；
-  - 或者用更接近理论的离散分布（比如取若干固定偏移 $\pm c/K$ 等）。
-
-这不追求真实 QAE 的细节，而是用“仿真噪声”来验证缩放趋势：error $\propto 1/K$。
-
-### A.3 实验流程
-
-对一组 $K$ 值，如：
-$$
-K\in\{1,2,4,8,16,32\},
-$$
-进行如下步骤：
-
-1. 固定 $p$（或多选几组 $p$）；
-2. 对每个 K，重复 $R$ 次（比如 $R=1000$）：
-   - 经典采样：用 $T_{\text{cl}}$ 次伯努利试验得到 $\hat p_{\text{cl}}$，其中 $T_{\text{cl}}$ 可固定，如 1000；
-   - QAE：用你选择的方案得到 $\hat p_{\text{QAE},K}$；
-3. 统计：
-   - $E_{\rm cl}=\mathbb E|\hat p_{\text{cl}}-p|$ 或 MSE；
-   - $E_{\rm QAE}(K)=\mathbb E|\hat p_{\text{QAE},K}-p|$ 或 MSE。
-
-### A.4 指标与预期
-
-- 画图 1：log–log：$E_{\rm QAE}(K)$ vs $K$，线性拟合斜率 $\approx -1$，即误差 ~ $K^{-1}$。
-- 对比：经典采样如果你同时扫描采样次数 $T$，会得到斜率 $-1/2$（$\sim T^{-1/2}$）。
-
-这部分是 warm-up，用来单点验证 QAE 的 $1/K$ 缩放。
+- **Part A（amplitude 部分）**
+  - 真概率：`--amplitude-probs "0.15,0.35"`
+  - classical shots：`--amplitude-shots ∈ {500, 1000, 2000}`（可多跑几档 N 做 N-scaling）
+  - 试验次数：`--amplitude-trials 500`
+  - QAE 查询数集合：`--qae-rounds "1,2,4,8,16,32"`
+- **Part B（Hankel 部分）**
+  - 序列长度：`--lengths "6,8"`
+  - 字母表大小：`--d 2`
+  - 键维：`--bond-dim 3`
+  - classical 样本数：`--sample-size ∈ {2000, 5000, 10000}`（可以通过多次运行脚本改变此参数）
+  - Hankel trial 数：`--trials 20`
+- **QAE 噪声模型**
+  - `--noise-scale 1.0`（可扫 0.5, 1.0, 2.0 做鲁棒性检查）
+  - `--bias-scale 0.0`（主实验无偏；再加一组 `0.05` 看偏差主导阶段）
+- **公共参数**
+  - `--seed` 控制随机数种子
+  - `--output` 指定 CSV 路径（默认 `experiments/exp8_results.csv`）
 
 ------
 
-## Part B：整块 Hankel 的 QAE 加速（对应定理 12.3）
+## 2. Part A：单一振幅的 QAE 缩放
 
-这一部分就完全按照你写的思路，把 QAE 嵌入 Hankel 估计 pipeline 里。
+### 2.1 目标
 
-### B.1 模型与真 Hankel
+1. 在理想 QAE 噪声模型下，验证：
+   - 固定 `shots = T_cl` 时，QAE-style RMSE($K$) $\propto 1/K$；
+   - 固定 $K$ 时，RMSE($T_cl$) $\propto 1/\sqrt{T_cl}$；
+2. 展示 `bias_scale > 0` 时，在大 $K$ 区间误差由偏差项 $b_K$ 主导的“饱和/平台”现象。
 
-选一个小规模 QCBM/MPS 模型，长度 L 小到可枚举：
+### 2.2 估计器定义
 
-- 字母表 $\Sigma=\{0,1\}$；
-- 序列长度 $L\in\{6,8\}$（例如 L=8）；
-- 键维 D 取 2 或 3（保证模型非平凡）；
-- 用你前面实验 1–3 的方式生成一个随机 MPS / QCBM，并规范化；
-- 固定切分点 $t_*=\lfloor L/2\rfloor$，令 $P=\Sigma^{t_*}, S=\Sigma^{L-t_*}$。
+**经典频数估计**
 
-由模型精确计算真值：
+- 对 $p_{\text{true}}$，做 `classical_shots` 次伯努利试验：
+  $$
+  \hat p_{\text{cl}} = \frac{C}{T_{\text{cl}}},\quad C\sim\text{Binomial}(T_{\text{cl}}, p_{\text{true}}).
+  $$
 
-- 对每个 $x\in\Sigma^L$，算出 $p(x)$;
+**QAE-style 估计（脚本函数 `qae_amplitude_estimate`）**exp8_qae_scaling
 
-- 构造真 Hankel：
+- 模型：
+  $$
+  \hat p_{\text{QAE},K}
+  = \mathrm{clip}_{[0,1]}\Big(p_{\text{true}} + \underbrace{\frac{\text{bias\_scale}}{K}}_{\text{偏差项}} + Z_K\Big),
+  $$
+
+  $$
+  Z_K \sim \mathcal N\Big(0,\;\sigma^2\Big),\quad
+  \sigma^2 = \frac{\text{noise\_scale}\cdot \max(p(1-p), 10^{-12})}{T_{\text{cl}} K^2}.
+  $$
+
+- 直接编码了理论里 **方差 $\propto 1/(T_{\text{cl}}K^2)$** 和偏差 $\propto 1/K$。
+
+### 2.3 流程
+
+对每个 $p_{\text{true}}$（如 0.15, 0.35）：
+
+1. 设定一组 $T_{\text{cl}}$（例如 500, 1000, 2000）；
+2. 对每个 $(T_{\text{cl}}, K)$：
+   - 重复 `amplitude_trials` 次：
+     - 生成 $\hat p_{\text{cl}}$（classical）；
+     - 生成 $\hat p_{\text{QAE},K}$（QAE-style）；
+     - 记录 `abs_error` 和 `sq_error`。
+3. 所有结果写入 CSV（脚本已经完成，`section="amplitude"` 这一块）。exp8_qae_scaling
+
+### 2.4 分析与预期现象
+
+**(1) RMSE vs K（固定 shots）**
+
+- 固定一个 $T_{\text{cl}}$ 和 $p_{\text{true}}$；
+- 对每个 K：
+  - classical：只在 K=0 有一条基线 RMSE；
+  - QAE-style：$RMSE(K) = \sqrt{\mathbb E[(\hat p_{\text{QAE},K}-p)^2]}$；
+- 在 log–log 坐标画：
+  - 横轴：$\log K$，纵轴：$\log RMSE(K)$；
+  - 对 QAE-style 做线性拟合，斜率 $b_K \approx -1$；
+
+**(2) RMSE vs shots（固定 K）**
+
+- 固定一个 K（例如 K=4,16）；
+- 画 $\log RMSE$ vs $\log T_{\text{cl}}$，预期斜率 ≈ -1/2，对齐 $\sqrt{1/N}$ 依赖。
+
+**(3) 偏差项主导（bias_scale > 0）**
+
+- 设 `bias_scale=0.05` 再跑一组；
+- 预期：
+  - 中小 K：RMSE ≈ 方差主导，仍近似 $\propto 1/K$；
+  - 大 K：RMSE 降到某个阈值附近后出现平台/缓降，对应偏差 $\approx \text{bias\_scale}/K$ 主导。
+
+------
+
+## 3. Part B：整块 Hankel 的 QAE 缩放
+
+### 3.1 Ground truth 模型和 Hankel 定义
+
+**随机 MPS/QCBM 模型**（脚本 `sample_random_mps_distribution`）
+
+- 字母表 $\Sigma = {0,1}$ (`d=2`)；
+
+- 长度 $L\in{6,8}`；
+
+- 键维 `bond_dim=3`；
+
+- 构造随机复矩阵 $A(\sigma)$ 和边界向量 $\alpha,\beta$，振幅：
+  $$
+  \psi(x) = \alpha^\top\Big(\prod_t A(x_t)\Big)\beta,\quad p(x)=|\psi(x)|^2,
+  $$
+  再 normalize 为合法分布。
+
+**mid-cut Hankel**（脚本 `build_hankel`）exp8_qae_scaling
+
+- 切分点 $t_* = \lfloor L/2\rfloor$；
+
+- 前缀集 $P=\Sigma^{t_*}$，后缀集 $S=\Sigma^{L-t_*}$；
+
+- Hankel：
   $$
   H(u,v) = p(uv),\quad u\in P,\ v\in S.
   $$
 
-------
+### 3.2 经典 Hankel 估计（baseline）
 
-### B.2 经典频数估计版 Hankel（baseline）
+**采样 & 估计**（脚本 `sample_classical`）exp8_qae_scaling
 
-这就是你第 9 章–实验 5 里面的 classical Hankel 估计方式，用来做对照：
+- 从 $p$ 中采样 `sample_size = N` 个序列；
 
-1. 从模型 $p$ 中 i.i.d. 抽样 N 个长度 L 的样本 $x^{(1)},\dots,x^{(N)}$；
+- 对所有 $x=uv$，估计 $\hat p_{\text{cl},N}(x)$；
 
-2. 对每个样本切分 $x^{(i)}=u^{(i)}v^{(i)}$，计数：
-   $$
-   \widehat H_{\rm cl}(u,v)=\frac{1}{N}\sum_{i=1}^N \mathbf 1\{u^{(i)}=u,\ v^{(i)}=v\}.
-   $$
-
-3. 计算经典 Hankel 误差：
-   $$
-   \Delta_{\rm cl} := \|\widehat H_{\rm cl}-H\|_2.
-   $$
-
-这部分主要是 baseline，不是本实验的重点，但可以用来比较 QAE 的效果。
-
-------
-
-### B.3 QAE 加持版 Hankel 估计
-
-这里有两种接近定理 12.3 的理解方式。为了实验简单，我们可以把“QAE 误差”直接当作概率估计的额外缩放因子。
-
-**概念重述（简化版）**
-
-- Hankel 的每个条目 $H(u,v)=p(uv)$ 是某个 0–1 事件的概率（事件为 “序列等于 uv”）；
-- 经典估计：看 N 次采样中有多少次发生；
-- QAE 估计：假设我们有一个量子 oracle，能制备编码该事件的状态，并对它用 K 轮 QAE 得到更精确的 $\hat p_{K}$。
-
-为了避免对每个 $(u,v)$ 都跑一遍 QAE 的指数成本，我们**实验上可以只做“独立条目噪声模型”**：
- 即认为 $\widehat H_K(u,v)$ 是 $H(u,v)$ 加上一个 QAE 型噪声项，方差缩放 $\sim 1/(K^2 N)$。
-
-#### (1) 构造 QAE 版 Hankel 噪声模型
-
-在给定一组样本的基础上，可以这样模拟：
-
-1. 先用 N 个样本构造经典频数版 $\widehat H_{\rm cl}(u,v)$，它可以看作是
-   $$
-   \widehat H_{\rm cl}(u,v) = H(u,v) + \xi_{\rm cl}(u,v),
-   $$
-   其中 $\xi_{\rm cl}(u,v)$ 的标准差 $\sim \sqrt{H(u,v)(1-H(u,v))/N}$。
-
-2. 引入 QAE 对 var 的缩放：在 QAE 模型下，**同样的 N 轮“外层访问” +每轮 K 次 amplitude queries**，方差会多乘一个 $1/K^2$：
-
-   模拟：
-   $$
-   \hat H_{K,N}(u,v)
-   = H(u,v) + \xi_{\rm qae}(u,v),
-   $$
-   其中
-   $$
-   \xi_{\rm qae}(u,v) \sim \mathcal N\!\left(0,\ \frac{c\cdot H(u,v)(1-H(u,v))}{N K^2}\right),
-   $$
-   c 是一个常数系数（理想 QAE 下 c 约为常数量级）。
-
-   实现上：
-
-   - 你可以直接用 $\widehat H_{\rm cl}(u,v)$ 作为“粗估”，再加一个额外的高斯噪声减小方案，或
-   - 直接从真值 $H(u,v)$ 出发按照上述方差采样 $\xi_{\rm qae}$（这样就纯粹看 QAE 的理论缩放，而不混入 classical 的 1/√N）。
-
-3. 为了贴合定理 12.3，把 QAE 误差写成两部分：
-
-   - 主方差项 $\propto 1/K\sqrt{1/N}$（上式中的高斯部分）；
-   - 一个固定的 bias $b_K$（例如尺度 ~$O(1/K)$ 或 1/K²），你可以在仿真里加入一个小 deterministic 偏移（或干脆忽略）。
-
-**小结：**
- 在数值实验中，你可以直接定一个“QAE 噪声模型”来生成 $\widehat H_{K,N}$，而不必真的写 QAE 电路。重要的是噪声强度 ∝ $1/(K\sqrt{N})$。
-
-#### (2) 固定 N，扫 K
-
-选择一个较大的 N（比如 $N=10^4$ 或 $2\times 10^4$），让第二项 $C_2\log/N$ 基本淹没在噪声之下，方便观察 $1/K$ 的主导行为。
-
-- 取 $K\in\{1,2,4,8,16,32\}$；
-
-- 对每个 K，重复 R 次（例如 R=50）：
-
-  1. 根据噪声模型生成一次 $\widehat H_{K,N}$；
-
-  2. 计算 Hankel 误差：
-     $$
-     \Delta_{K,N} := \|\widehat H_{K,N}-H\|_2.
-     $$
-
-- 记录 $\Delta_{K,N}$ 的均值 / 中位数 $\overline\Delta_{K,N}$。
-
-------
-
-### B.4 可视化与对比
-
-**1）误差 vs K（核心图）**
-
-- log–log 图：
-
-  - x 轴：$\log K$；
-  - y 轴：$\log \overline\Delta_{K,N}$。
-
-- 对所有 K 做一阶线性拟合：
+- 构造：
   $$
-  \log \overline\Delta_{K,N} \approx a - b\log K.
+  \widehat H_{\text{cl},N}(u,v)=\hat p_{\text{cl},N}(uv).
   $$
 
-- 预期：$b\approx 1$（即 $\overline\Delta_{K,N}\propto 1/K$）。
+**误差指标**
+$$
+\Delta_{\text{cl}}^{\text{spec}} = \|\widehat H_{\text{cl},N}-H\|_2,\quad
+\Delta_{\text{cl}}^{\text{fro}} = \|\widehat H_{\text{cl},N}-H\|_F.
+$$
 
-- 可以在图上画一条参考线 $1/K$ + 一个常数偏置。
+### 3.3 QAE-style Hankel 估计（理想噪声）
 
-**2）和经典 Hankel 估计的对比（选做）**
+**分布级 QAE 噪声模型**（脚本 `qae_distribution_estimate`）exp8_qae_scaling
 
-- 经典版：对不同总“查询数” $Q$（即样本数 N），测量经典误差 $\|\widehat H_{\rm cl}^{(N)}-H\|_2$，验证 $\sim 1/\sqrt{Q}$；
-- QAE 版：对不同“总查询数” $Q'=N\times K$（每次 N 外层 × 每轮 K 查询），验证：
-  - 若把 $\overline\Delta_{K,N}$ 画成 $Q'$ 的函数，应该看到 QAE 对应的斜率更陡（更快下降），即 **量子二次加速** 的直观表现。
+- 对每个 $x$：
+  $$
+  \hat p_{K,N}(x)
+  = \mathrm{clip}_{[0,1]}\Big(
+        p(x) + \frac{\text{bias\_scale}}{K}
+        + Z_{K,N}(x)
+    \Big),
+  $$
+
+  $$
+  Z_{K,N}(x)\sim\mathcal N\Big(
+      0,\;
+      \frac{\text{noise\_scale}\cdot \max(p(x)(1-p(x)),10^{-12})}{N K^2}
+  \Big),
+  $$
+
+- 然后归一化，得到 $\hat p^{\rm norm}_{K,N}(x)$；
+
+- QAE-style Hankel：
+  $$
+  \widehat H_{K,N}(u,v)=\hat p^{\rm norm}_{K,N}(uv).
+  $$
+
+**误差指标**
+$$
+\Delta_{K,N}^{\text{spec}}(L)=\|\widehat H_{K,N}-H\|_2,\quad
+\Delta_{K,N}^{\text{fro}}(L)=\|\widehat H_{K,N}-H\|_F.
+$$
+
+### 3.4 采样设计与脚本逻辑
+
+脚本 `run_hankel_part` 的流程（略化后）：
+
+对每个长度 `length in lengths`：
+
+1. 重复 `trials` 次：
+   - 生成随机 MPS 分布 `prob_map`；
+   - 构造真 Hankel `hankel_true`；
+   - classical：用 `sample_classical(prob_map, sample_size=N)` 得到 `classical_map`，算 Hankel 误差；
+   - 对每个 `K in qae_rounds`：
+     - 用 `qae_distribution_estimate` 得到 QAE-style `qae_map`；
+     - 构造 Hankel，计算 `error_spec` 和 `error_fro`。
+2. 输出 CSV 行，字段包括：
+   - `section="hankel"`，`length, d, bond_dim, trial, sample_size, method, K, error_spec, error_fro` 等。
+
+如果要做 **$N$ scaling**，可以多跑几次脚本，只改 `--sample-size`，然后在分析脚本里把多个 CSV 合并。
+
+### 3.5 分析一：误差 vs K（固定 N）
+
+**目标：验证 $\Delta_{K,N}^{\text{spec}} \propto 1/K$**
+
+1. 对每个长度 $L$ 和固定 $N$：
+
+   - 对每个 K，将 trial 维度上的 `error_spec` 取平均或中位数：
+     $$
+     \overline\Delta^{\text{spec}}_{K,N}(L)
+     = \mathbb E_{\text{trial}}[\Delta_{K,N}^{\text{spec}}(L)].
+     $$
+
+2. 在 log–log 坐标绘图：
+
+   - 横轴：$\log K$；
+   - 纵轴：$\log \overline\Delta^{\text{spec}}_{K,N}(L)$；
+
+3. 对 QAE-style 点做线性拟合：
+
+   - 期望斜率 $b_{L,N}\approx -1$；
+   - classical baseline（`method="classical", K=0`）对应一条水平线作 reference。
+
+同理，对 Frobenius 误差 `error_fro` 做同样分析。
+
+### 3.6 分析二：误差 vs N（固定 K）
+
+**目标：验证 $\Delta_{K,N}^{\text{spec}} \propto 1/\sqrt N$**
+
+- 将多个 `sample_size` 的结果合并；
+- 对固定 $(L,K)$，画 $\log \overline\Delta^{\text{spec}}_{K,N}(L)$ vs $\log N$；
+- classical 与 QAE-style 理论上都应表现出斜率约 -1/2，这对应定理中的 $\sqrt{\mu/N}$ 因子。
+
+### 3.7 分析三：误差 vs 总 query 数 Q
+
+为直观比较“二次加速”，可以换轴：
+
+- classical：总 query 数 $Q_{\text{cl}} = N$，误差 $\Delta_{\text{cl}}^{\text{spec}}(L,N)$；
+- QAE-style：总 query 数 $Q_{\text{QAE}} = N K$，误差 $\overline\Delta_{\text{QAE}}^{\text{spec}}(L,Q)$；
+- 把两类点都画在 log–log“误差 vs Q”的图上，拟合斜率：
+  - classical：期望斜率 ≈ -1/2；
+  - QAE-style：期望斜率 ≈ -1（即误差 $\sim 1/Q$）——这就是二次加速。
+
+### 3.8 分析四：偏差项 b_K 的 Hankel 级影响（扩展）
+
+- 把 `bias_scale` 设置为 0.05 或更大，再跑一组；
+- 对误差 vs K 的 log–log 图：
+  - 中小 K 区间：仍近似 slope ≈ -1；
+  - 大 K 区间：曲线弯平，出现偏差主导的“误差平台”，对应定理中的 $b_K$ 项。
 
 ------
 
-### B.5 写在论文里的描述示例
+## 4. Part C：真实 QAE 仿真（小规模补强）
 
-在第 12 章实验部分，可以这样写：
+> 这一块可以写成新脚本 `exp8_qae_real_sim.py`，只需要在补充材料中给结果图即可。
 
-> We perform a numerical experiment to validate the quantum-amplitude-estimation (QAE) enhanced Hankel concentration bound in Theorem 12.3. For a small QCBM/MPS model with sequence length $L=8$, we first compute the exact Hankel matrix $H_p(P,S)$. Then, we construct synthetic QAE-based Hankel estimates $\widehat H_{K,N}$, where the entry-wise noise is modeled as zero-mean with variance scaling as $O(1/(N K^2))$, in accordance with the ideal QAE variance reduction. For a fixed outer sample size $N$, we vary the number of QAE queries $K$ and measure the spectral error $\|\widehat H_{K,N}-H\|_2$.
->
-> On a log–log scale, the average error $\mathbb E\|\widehat H_{K,N}-H\|_2$ decays approximately linearly with slope close to $-1$ as a function of $K$, confirming the predicted $1/K$ scaling of the leading variance term in Theorem 12.3. By contrast, the classical frequency-based estimator exhibits the usual $O(1/\sqrt{Q})$ behavior as a function of the total number of oracle queries $Q$, whereas the QAE-based estimator effectively achieves $O(1/Q)$ scaling, illustrating the quadratic advantage of quantum amplitude estimation in the context of Hankel matrix learning.
+### 4.1 目标
+
+- 检查真实 QAE 算法在 toy 模型下是否表现出 RMSE vs K 的 $1/K$ scaling；
+- 说明我们在 Part A/B 所用的噪声模型是“理想 QAE 行为”的合理近似。
+
+### 4.2 设置
+
+- 目标振幅：在单比特上构造
+  $$
+  U_p|0\rangle=\sqrt{1-p}|0\rangle+\sqrt p|1\rangle,\quad p\in\{0.15,0.35\};
+  $$
+
+- 选择一种实现简单的 QAE 方案（标准 QPE-based 或迭代 QAE 都可），记 ancilla 比特数为 $m$；
+
+- 通常 query 数 $K\approx 2^m$，取 $m\in{1,2,3,4,5}$。
+
+### 4.3 流程
+
+对每个 $(p, m)$：
+
+1. 运行 QAE 算法 $R_C$ 次（如 200 次），得到估计 $\hat p_{\text{real},K}$；
+2. 记录误差：$|\hat p-p|$、$(\hat p-p)^2$；
+3. 计算 RMSE($K$) 并在 log–log 坐标下画图，拟合斜率 $b^{\text{real}}$。
+
+### 4.4 对比与结论
+
+- 将 $b^{\text{real}}$ 与 Part A 噪声模型下的斜率 $b^{\text{model}}$ 比较；
+- 若二者接近 -1，就可以在论文中写一句话：
+
+> “Small-scale circuit-level simulations of amplitude estimation confirm that the empirical RMSE decays approximately as $1/K$, consistent with our idealised QAE noise model used in Experiments 8A and 8B.”
+
+------
+
+## 5. 实现与复现说明
+
+- **主脚本**：`exp8_qae_scaling.py` 已经完整实现了 Part A 和 Part B 的采样与 CSV 落盘逻辑，只需通过命令行修改参数即可覆盖不同 N 和 bias_scale 的设置。exp8_qae_scaling
+- **输出格式**（统一 header）：
+  - `section`（"amplitude"/"hankel"）、`length`、`d`、`bond_dim`、`trial`、`sample_size`、`method`、`K`、`error_spec`、`error_fro`、`p_true`、`abs_error`、`sq_error`。
+  - 利用 `section` 字段区分两类实验，在分析脚本中很方便。
+- **随机性控制**：
+  - `--seed` 控制 Python `random` 和 `numpy.random`；
+  - 建议在 paper 中固定一两个种子配置，并说明运行时间量级。
+- **分析脚本**：
+  - 单独写一个 `analyze_exp8.ipynb` 或 Python 脚本，负责读多个 CSV，做 log–log 回归、画图、输出斜率和置信区间。
