--- a/docs/试验大纲4.md
+++ b/docs/试验大纲4.md
@@ -1,34 +1,66 @@
-## 实验 4：条件数与“坏例子”（第 7 章）
-
-### 总体目标
-
-1. **验证第 7 章构造的特殊 MPS：**
-   - rank-1 对角 MPS（7.2A） ⇒ Hankel 真正秩=1；
-   - rank-3 对角 MPS（7.2B） ⇒ Hankel 秩=3，但第三奇异值随 L 指数衰减，导致严重劣条件。
-2. **连接到谱学习样本复杂度：**
-   - 在这两个模型上跑 Hankel-谱学习（白化 + WFA 重构），考察：
-     - 对同一目标误差 ε，rank-3 “坏例子”比 rank-1 好例子需要多少倍样本；
-     - 是否与理论 scaling $N \gtrsim \mu/\sigma_{\min}^2$ 的直觉一致。
+# 实验 4：条件数、“坏例子”和谱学习的样本复杂度
 
 ------
 
-## Part A：构造坏例子 & 测量 Hankel 的 σ₃(L)
+## 0. 实验目标与理论对齐
 
-### 1. 模型构造：对角 MPS 7.2A / 7.2B
+### 0.1 对应的理论章节
 
-为简洁，统一采用：
+- **结构理论（第 7 章）**
 
-- 键维：$D = 2$
-- 字母表：$\Sigma=\{0,1\}$
+  - rank‑1 对角 MPS（7.2A）：概率 Hankel 真秩为 1，条件数良好。
+  - rank‑3 对角 MPS（7.2B）：概率 Hankel 真秩为 3，最小非零奇异值 $\sigma_3(H_p^{(L)})$ 随 $L$ 近似指数衰减，导致 Hankel 严重劣条件。
 
-#### 1.1 rank-1 MPS（7.2A）
-
-定义：
-
-- MPS 张量（不随 t 变化，时间齐次）：
+- **端到端样本复杂度（第 11 章）**
+   对长度为 $L$ 的分布，理论给出：
   $$
-  A(0) = \begin{pmatrix}1 & 0\\ 0 & \eta\end{pmatrix},\quad
-  A(1) = \begin{pmatrix}\eta & 0\\ 0 & 1\end{pmatrix},\quad 0<\eta<1.
+  \sup_{|x|=L}|\widehat p(x)-p(x)|
+  \;\lesssim\;
+  \frac{F(L)}{\sigma_{\min}(H_p)}\sqrt{\frac{\mu}{N}},
+  $$
+  其中 $\sigma_{\min}(H_p)$ 是 Hankel 的最小非零奇异值，$\mu$ 是相干度，$F(L)$ 是长度放大因子（一般情形约为 $L \kappa_B^{L-1}$，在可收缩情形约为 $O(L)$）。
+
+### 0.2 本实验要验证的关键命题
+
+我们把要验证的内容显式写成几个“可检验假设”：
+
+- **H1（秩与条件数）**
+   对 rank‑1 / rank‑3 对角 MPS，长度 $L\in\{6,8,10,12,14,16\}$ 下的 mid‑cut 概率 Hankel $H_p^{(L)}$ 满足：
+
+  - rank‑1：数值秩 $r_{\mathrm{num}}(L)=1$；
+  - rank‑3：数值秩 $r_{\mathrm{num}}(L)=3$，且 $\sigma_3(H_p^{(L)})$ 随 $L$ 近似指数衰减，条件数 $\kappa_L = \sigma_1/\sigma_3$ 随 $L$ 剧增。
+
+- **H2（真 Hankel 下的可实现性）**
+   使用**含 ε 行/列**的规范 Hankel $H$ 及块 $H_\sigma$，在 rank‑1 / rank‑3 上通过谱学习重建的分布 $\widehat p$ 与真实分布 $p$ 满足：
+  $$
+    \mathrm{TV}_{\mathrm{true}} \le 10^{-6},\quad
+    E_{\infty,\mathrm{true}} \le 10^{-6}.
+  $$
+  若 H2 不成立，说明 Hankel 结构或谱学习实现有问题，**禁止继续做样本复杂度实验**。
+
+- **H3（$N^{-1/2}$ 统计缩放）**
+   对固定 $L$，在 rank‑1 与 rank‑3 模型上，谱学习的 TV 误差随样本数 $N$ 大致逐渐接近 $N^{-1/2}$ 的下降趋势（log–log 图上斜率接近 −1/2）。
+
+- **H4（条件数驱动样本复杂度）**
+   在同一 $L$ 与 $N$ 下，rank‑3 的 TV 误差系统性显著大于 rank‑1；在对 TV 进行 $\sigma_{\min}(H_p)$ 或 $\sigma_{\min}^2(H_p)$ 归一化后，两条曲线在 log–log 图上更为对齐，体现“条件数越差，样本复杂度越高”的定性规律。
+
+------
+
+## 1. 模型、参数与实验网格
+
+### 1.1 统一设定
+
+- **键维**：$D=2$。
+- **字母表**：$\Sigma = \{0,1\}$。
+- **量子 Born 机–MPS 视角**：
+   使用对角 MPS 张量 $A(0),A(1)$ 和边界向量 $\alpha,\beta$ 明确构造 Born 机的振幅 $\psi(x)$，概率 $p(x) \propto |\psi(x)|^2$ 由完全枚举归一化得到。exp4_condition_numbers
+
+### 1.2 rank‑1 MPS（好例子）
+
+- 张量：
+  $$
+  A(0) = \begin{pmatrix}1 & 0 \\ 0 & \eta\end{pmatrix},\quad
+  A(1) = \begin{pmatrix}\eta & 0 \\ 0 & 1\end{pmatrix}.
   $$
 
 - 边界向量：
@@ -36,297 +68,410 @@
   \alpha = \beta = e_1 = (1,0)^\top.
   $$
 
-对任意串 $x\in\{0,1\}^L$，乘积仍是对角矩阵：
-$$
-\prod_{t=1}^L A(x_t)
- = \begin{pmatrix}
-      \prod_t A(x_t)_{11} & 0\\
-      0 & \prod_t A(x_t)_{22}
-   \end{pmatrix}.
-$$
-因为 $\alpha^\top[1,0],\ \beta=[1,0]^\top$，只取左上角：
+- 任意 $x\in\{0,1\}^L$：
 
-- 若 $x_t=0\Rightarrow A(0)_{11}=1$，
-- 若 $x_t=1\Rightarrow A(1)_{11}=\eta$，
+  - 振幅：$\psi(x) = \eta^{\#1(x)}$。
+  - 未归一化概率：$p_{\mathrm{unnorm}}(x) = \eta^{2\#1(x)}$。
+  - 归一化：$p(x) = p_{\mathrm{unnorm}}(x)/\sum_y p_{\mathrm{unnorm}}(y)$。
 
-所以振幅
-$$
-\psi(x) = \eta^{\#1(x)},\quad
-p(x)=|\psi(x)|^2=\eta^{2\#1(x)}.
-$$
-这一构造理论上保证 **Hankel 秩=1**。
+**理论性质**：概率 Hankel 秩 = 1。
 
-#### 1.2 rank-3 “近奇异” MPS（7.2B）
+### 1.3 rank‑3 MPS（坏例子）
 
-在同一 $A(0),A(1)$ 上，仅改变边界：
-
-- 取参数 $0，
+- 张量同上 $A(0),A(1)$。
 
 - 边界向量：
   $$
-  \alpha = \beta = \begin{pmatrix}1\\ c\end{pmatrix}.
+  \alpha = \beta = (1, c)^\top.
   $$
 
-此时振幅是两个“通道”的线性组合（第一、第二对角元轨道）：
+- 任意 $x$：
 
-- 第一通道：振幅 $\eta^{\#1(x)}$；
-- 第二通道：振幅 $\eta^{\#0(x)}$，其中 $\#0(x)=L-\#1(x)$。
+  - 通道 1：$\eta^{\#1(x)}$；
 
-因此可写成：
-$$
-\psi(x)=\eta^{\#1(x)} + c^2\eta^{\#0(x)},
-$$
-由此得到概率：
-$$
-p(x) = |\psi(x)|^2 = \big(\eta^{\#1(x)} + c^2\eta^{\#0(x)}\big)^2.
-$$
-文中分析给出：对应 Hankel 矩阵
+  - 通道 2：$\eta^{\#0(x)}$，$\#0(x) = L-\#1(x)$；
 
-- 可写作三个 rank-1 矩阵之和 ⇒ $\mathrm{rank}(H_p)\le 3$；
-- 第三个奇异值 $\sigma_3(H_p)$ 的主导项随 L 约为 $O\big((\sqrt2\,\eta)^L\big)$ 量级，指数衰减。
+  - 振幅：
+    $$
+    \psi(x) = \eta^{\#1(x)} + c^2 \eta^{\#0(x)}.
+    $$
 
-我们在实验中选取一组具体参数（例如 $\eta=0.6,\ c=0.5$），使得：
+  - 概率：$p(x) = |\psi(x)|^2$。
 
-- $\sqrt2\,\eta < 1$ ⇒ $\sigma_3$ 指数衰减明显；
-- $c$ 不太小，确保前两个奇异值仍然很大。
+**理论性质**：概率 Hankel 可写成 3 个 rank‑1 矩阵之和 ⇒ $\mathrm{rank}(H_p)\le 3$，并且 $\sigma_3(H_p^{(L)})$ 近似随 $L$ 指数衰减。
 
-### 2. Hankel 的构造与奇异值计算
+### 1.4 参数网格选择
 
-#### 2.1 Hankel 的定义（固定切分点）
+默认主实验参数：
 
-与前几次实验保持一致，对给定长度 L：
+- $\eta = 0.6$、$c = 0.5$（与当前脚本一致）。exp4_condition_numbers
+- 长度 $L$：
+  - **结构实验（Part A）：** $L \in \{6, 8, 10, 12, 14, 16\}$；
+  - **样本复杂度实验（Part B）：** 推荐重点分析 $L \in \{6, 10, 14\}$，其中 L=6 用于 sanity，10/14 为主结果。
 
-- 切分点 $t_*=\lfloor L/2\rfloor$，
-- 前缀集合 $P = \Sigma^{t_*}$，后缀集合 $S = \Sigma^{L-t_*}$。
+可选扩展（如果希望更“豪华”）：
 
-对任意 $u\in P, v\in S$：
-
-- 拼接成长度 L 串 $x=uv$；
-
-- 对 rank-1 / rank-3 模型分别计算：
-  $$
-  p^{(L)}(x)\quad\Rightarrow\quad 
-  H_p^{(L)}(u,v)=p^{(L)}(uv).
-  $$
-
-> 复杂度备注：
->
-> - 对 $L\le 20$，$|P|,|S|\le 2^{10}=1024$，Hankel 为 $1024\times 1024$，可直接 SVD。
-> - 串数 $2^L\le 10^6$，也可以仅用“按 (u,v) 组合”遍历（无须存整个分布）。
-
-#### 2.2 SVD & 奇异值提取
-
-对每个 L 和每个模型（rank-1 / rank-3）：
-
-1. 对 $H_p^{(L)}$ 做 SVD：
-   $$
-   H_p^{(L)} = U\Sigma V^\top,\quad
-   \Sigma=\mathrm{diag}(\sigma_1,\sigma_2,\dots).
-   $$
-
-2. 记录**前三个奇异值**：
-
-   - rank-1 模型预期：$\sigma_1>0,\ \sigma_2\approx\sigma_3\approx 0$；
-   - rank-3 模型预期：$\sigma_1,\sigma_2$ 很大，$\sigma_3$ 非零但随 L 迅速变小。
-
-为减少数值噪声，判定“0”时可用相对阈值，例如：
-
-- 若 $\sigma_i < 10^{-10}\,\sigma_1$，视为数值 0。
-
-### 3. 指标与拟合
-
-#### 3.1 rank-1 模型的 sanity check
-
-- 对 rank-1 MPS：
-  - 验证 $\mathrm{rank}_\tau(H_p^{(L)})=1$（仅有一个大奇异值，其余<阈值）；
-  - 确认 $\sigma_1$ 随 L 的变化是合理的（例如随 L 有某种增长，但对条件数不敏感）。
-
-这主要是用来说明：**这个例子没有“坏”的条件数问题**。
-
-#### 3.2 rank-3 模型：σ₃(L) 的指数衰减
-
-- 对 rank-3 模型，在多个 L 值上记录 $\sigma_1(L),\sigma_2(L),\sigma_3(L)$；
-- 画两类图：
-  1. $\sigma_1,\sigma_2,\sigma_3$ vs L 的曲线（线性坐标），看整体趋势；
-  2. **重点**：$\log\sigma_3(H_p^{(L)})$ vs L 的散点图。
-
-对后一张图做线性拟合：
-$$
-\log\sigma_3(H_p^{(L)}) \approx a + bL,
-$$
-期望 $b<0$，且拟合程度良好 ⇒ **验证 σ₃(L) 约按某个底数 <1 的幂律衰减**。
-
-同时可以报告条件数：
-$$
-\kappa_L := \frac{\sigma_1(H_p^{(L)})}{\sigma_3(H_p^{(L)})}
-$$
-随 L 指数增长，体现 Hankel 的劣条件。
-
-> 论文里的典型一句话可以是：
->  “在 rank-3 对角 MPS 例子中，我们观察到 $\log\sigma_3(H_p^{(L)})$ 与 L 几乎线性相关，提示 $\sigma_3(H_p^{(L)})$ 随 L 指数衰减，而前两个奇异值保持在常数级别，从而条件数 $\kappa_L$ 指数增长。”
+- 再选一组参数对，例如 $(\eta, c) = (0.4, 0.5), (0.6, 0.8)$，检查结果是否在不同谱形状下依旧成立。
 
 ------
 
-## Part B：谱学习样本复杂度 vs 条件数
+## 2. Hankel 的精确定义与构造
 
-这一部分要做的是：**在 rank-1 和 rank-3 模型上用同一谱学习算法训练，比较在同一目标误差下所需样本数 N 的差异。**
+本实验区分两种 Hankel：
 
-### 1. 谱学习 pipeline（简化版）
+- **mid‑cut Hankel $H_{\mathrm{mid}}^{(L)}$**：用于结构分析（Part A）；
+- **ε‑扩展 Hankel $H, H_\sigma$**：用于谱学习（Part B）。
 
-我们用你论文里的 Hankel-白化框架（第 6–11 章），简化为以下步骤：
+### 2.1 mid‑cut Hankel（Part A 用）
 
-1. 固定长度 L（比如 L=10 或 12）和切分点 $t_*=\lfloor L/2\rfloor$，固定前缀/后缀集合 P,S（如“全体”或随机子集）。
+对固定 $L$，设：
 
-2. 对目标分布 $p(x)$（rank-1 或 rank-3），存在真实 Hankel：
-   $$
-   H = H_p^{(L)}(P,S).
-   $$
-   最小秩 $r=1$ 或 $r=3$，对应真实最小奇异值 $\gamma=\sigma_r(H)$。
-
-3. 给定样本量 N，从 $p(x)$ 中 i.i.d. 抽样 $x^{(1)},\dots,x^{(N)}$，构造经验 Hankel $\widehat H$。
-
-4. 对 $\widehat H$ 做秩-r 截断 SVD：
-   $$
-   \widehat H \approx U_r\Sigma_r V_r^\top.
-   $$
-
-5. 构造白化矩阵：
-   $$
-   W_L = \Sigma_r^{-1/2} U_r^\top,\quad
-   W_R = V_r\,\Sigma_r^{-1/2},
-   $$
-   则 $W_L\widehat H W_R\approx I_r$。
-
-6. 对于每个符号 $\sigma$，从样本中构建对应的子块 Hankel $\widehat H_\sigma$（例如：对每个样本 $x=u\sigma v$，在对应的 $(u,v)$ 条目累加一次），再做：
-   $$
-   \widehat B_\sigma := W_L\widehat H_\sigma W_R.
-   $$
-
-7. 边界向量 $\hat i,\hat f$ 可按标准谱学习做法从 Hankel 的“空前缀/空后缀行/列”恢复，或用你论文中“恒等校准”那套构造（这里可以直接引用，不必再详细展开）。
-
-最终得到一个 r 维的 WFA 表示 $(\hat i,\{\widehat B_\sigma\},\hat f)$，定义估计分布：
-$$
-\widehat p(x_1\cdots x_L)=\hat i^\top \widehat B_{x_1}\cdots\widehat B_{x_L}\hat f.
-$$
-
-> 实现建议：
->
-> - rank-1 模型：设 r=1，白化与反演非常简单；
-> - rank-3 模型：设 r=3，显式考察最小奇异值导致的放大效应。
-
-### 2. 经验 Hankel 的构造细节
-
-对给定 N 个样本 $x^{(i)}\in\Sigma^L$：
-
-1. 令 $c_{uv}$ 为前缀/后缀对 (u,v) 的样本计数：
-
-   - 对每个样本 $x^{(i)}$，将其切分为 $x^{(i)}=u^{(i)}v^{(i)}$；
-   - $c_{u^{(i)}v^{(i)}}++$。
-
-2. 经验 Hankel：
-   $$
-   \widehat H(u,v)=\frac{c_{uv}}{N}.
-   $$
-
-3. 子块 Hankel $\widehat H_\sigma$：
-
-   - 可以定义为只统计满足“cut 点后一个符号为 σ”的样本；
-   - 更一般的实现是：你在构造时根据 Hankel 分块定义（如“按首字母分块”）来索引。
-
-> 关键点：
->
-> - 不需要在实验说明中纠结所有 indexing 小细节，只要和你论文中 H, H_σ 的定义一致即可；
-> - 对读者说清楚：“这里我们完全按第 X 节的 Hankel 分块规则来构造 $\widehat H_\sigma$”就行。
-
-### 3. 指标：学习误差 vs 样本数 N
-
-对固定模型（rank-1 or rank-3）和固定 L：
-
-1. 选取一系列样本数 $N \in \{10^3, 3\times 10^3, 10^4, 3\times 10^4, 10^5,\dots\}$。
-
-2. 对每个 N，重复 $R$ 次（例如 $R=20$）：
-
-   - 抽 N 个样本；
-
-   - 构造 $\widehat H$，运行谱学习得到 $\widehat p$；
-
-   - 枚举所有 $x\in\Sigma^L$，计算误差指标，例如：
-
-     - 最大点态误差：
-       $$
-       E_{\infty} = \sup_{x\in\Sigma^L} |\widehat p(x)-p(x)|;
-       $$
-
-     - 或 TV 距离：
-       $$
-       E_{\mathrm{TV}} = \frac12 \sum_{x\in\Sigma^L} |\widehat p(x)-p(x)|.
-       $$
-
-3. 对这 R 次实验取平均，得到：
-   $$
-   \overline E_{\text{rank-1}}(N),\quad
-   \overline E_{\text{rank-3}}(N).
-   $$
-
-**预期：**
-
-- 两个模型的误差都大致随 $N^{-1/2}$ 下降（矩阵 Bernstein 支配）；
-- 但 rank-3 的曲线在同一 N 上明显更高，且达到同一目标误差 ε 时所需的样本数 $N_\varepsilon$ 显著更大。
-
-### 4. 连接 σ_min(H) 与样本复杂度
-
-对这两个模型，我们在 Part A 中已经得到：
-
-- rank-1 模型：秩 r=1，唯一非零奇异值 $\sigma_1^{(1)}(H)$ 适中（不随 L 快速衰减）；
-- rank-3 模型：秩 r=3，最小奇异值 $\sigma_3^{(3)}(H)$ 随 L 指数衰减。
-
-理论上（第 7.3 节 & 11.5–11.6）：
-
-- 经验 Hankel 误差 $\Delta = \|\widehat H-H\|_2$ 约为 $\tilde O(\sqrt{\mu/N})$；
-
-- 白化/反演把误差放大 ~ $1/\sigma_{\min}(H)$；
-
-- 点态误差大致 $\varepsilon \sim \frac{F(L)}{\sigma_{\min}(H)}\sqrt{\mu/N}$；
-
-- 想让 $\varepsilon$ 固定 ⇒
+- 切分点：
   $$
-  N \gtrsim \frac{\mu F(L)^2}{\sigma_{\min}(H)^2\,\varepsilon^2}.
+  t_* = \left\lfloor \frac{L}{2} \right\rfloor;
   $$
 
-在本实验里：
+- 前缀集合：$P = \Sigma^{t_*}$；
 
-- rank-1：$\sigma_{\min} = \sigma_1^{(1)}$ 常数级 ⇒ $N_\varepsilon^{(1)}\sim \mu F(L)^2/\varepsilon^2$；
+- 后缀集合：$S = \Sigma^{L-t_*}$。
 
-- rank-3：$\sigma_{\min} = \sigma_3^{(3)}(L)$ 随 L 指数小 ⇒
-  $$
-  N_\varepsilon^{(3)}\ \sim\ \frac{\mu F(L)^2}{\sigma_3^{(3)}(L)^2\,\varepsilon^2},
-  $$
-  为 rank-1 所需样本数的一个**指数级放大**。
-
-在实验中，你可以检验如下关系的定性趋势：
+**定义 mid‑cut Hankel：**
 $$
-\frac{N_\varepsilon^{(3)}}{N_\varepsilon^{(1)}}
-\ \approx\
-\tilde C\cdot\frac{1}{\sigma_3^{(3)}(L)^2},
+H_{\mathrm{mid}}^{(L)}(u,v) := p^{(L)}(uv),\quad u\in P,\ v\in S.
 $$
-即：
+实现上直接用完全枚举得到的 `prob_L[x]` 构造一个 $|P|\times|S|$ 的矩阵即可。
 
-- 在相同 L 和 ε 下，rank-3 模型所需样本数随着 $\sigma_3(H_p^{(L)})$ 的衰减而急剧增长；
-- 如果你在不同 L 上都做这个对比，会看到 $N_\varepsilon^{(3)}$ 随 L 的增长非常陡，而 rank-1 的 $N_\varepsilon^{(1)}$ 则相对温和。
+### 2.2 ε‑扩展 Hankel（Part B 用）
 
-### 5. 可视化 & 论文里的描述建议
+#### 2.2.1 扩展索引集合
 
-可以给出两类核心图：
+在 mid‑cut 的基础上，引入空前缀/空后缀：
 
-1. **条件数图（对应 Part A）**
-   - 图 4(a)：$\sigma_1,\sigma_2,\sigma_3$ vs L（rank-3 模型），看出 σ₁、σ₂ 稳定，σ₃ 快速掉头；
-   - 图 4(b)：$\log\sigma_3(H_p^{(L)})$ vs L，线性拟合，斜率负，说明指数衰减。
-2. **学习误差 vs 样本数（对应 Part B）**
-   - 图 4(c)：在固定 L 和 ε 下，对 rank-1 & rank-3，画 $\overline E(N)$ vs N 的双对数图，两条曲线都 ~ 1/√N，但 rank-3 一条整体抬得很高；
-   - 图 4(d)：固定目标误差 ε（比如 1e-2），对不同 L 画出 $N_\varepsilon^{(1)}$ 与 $N_\varepsilon^{(3)}$ 的柱状图 / 折线图，直观展示 rank-3 模型的样本复杂度爆炸。
+- $P' = \{\varepsilon\} \cup P$；
+- $S' = \{\varepsilon\} \cup S$。
 
-在正文中可以这样总结：
+**主 Hankel $H$** 是一个 $|P'|\times|S'|$ 的矩阵，行/列索引分别是 $P',S'$。
 
-> 我们在第 7 章构造的对角 MPS 例子上进行了数值实验证明。对于 rank-1 模型（7.2A），概率 Hankel 矩阵在所有长度 L 上均为精确秩-1，其唯一非零奇异值保持在常数级；相比之下，在 rank-3 模型（7.2B）中，我们观察到最小奇异值 $\sigma_3(H_p^{(L)})$ 随 L 近似呈指数衰减，而前两个奇异值保持稳定，从而条件数 $\kappa_L=\sigma_1/\sigma_3$ 快速增大。
->
-> 在这两个模型上使用相同的 Hankel 谱学习算法，我们评估了点态误差随样本数 N 的收敛行为。尽管两者的误差都大致遵循 $O(N^{-1/2})$ 的经典速率，但要达到相同的目标精度 $\varepsilon$，rank-3 模型所需的样本数远大于 rank-1 模型，其增长趋势与理论预测的 $N\gtrsim \mu/\sigma_{\min}(H_p)^2$ 相一致。这表明，即使 Hankel 秩相同，劣条件（极小的 $\sigma_{\min}$）也会显著放大谱学习的样本复杂度，验证了第 7.3 节中关于条件数依赖的讨论。
+#### 2.2.2 主 Hankel $H$ 的条目
+
+记 $p^{(L)}$ 为长度 L 的真实分布。
+
+- 若 $u\in P, v\in S$：
+   $H(u,v) = p^{(L)}(uv)$（即 mid‑cut 内部块）。
+- 若 $u=\varepsilon, v\in S$：
+   $H(\varepsilon, v) = p^{(L)}(v)$（后缀边缘）。
+- 若 $u\in P, v=\varepsilon$：
+   $H(u,\varepsilon) = p^{(L)}(u)$（前缀边缘）。
+- 若 $u=v=\varepsilon$：
+   $H(\varepsilon,\varepsilon) = 1$。
+
+**实现方案（和现有脚本对应）：**
+
+- 先构造 $H_{\mathrm{mid}}$，然后用行/列和填充 ε 行/列（正如 `extend_hankel_with_epsilon` 中的实现）。exp4_condition_numbers
+
+#### 2.2.3 块 Hankel $H_\sigma$ 的条目
+
+记 $p^{(L+1)}$ 为长度 L+1 的真实分布。
+
+- 对每个 $\sigma\in\Sigma$，定义 $H_\sigma$ 为 $|P'|\times|S'|$ 矩阵：
+  $$
+  H_\sigma(u,v) = p^{(L+1)}(u\,\sigma\,v),\quad u\in P', v\in S'.
+  $$
+
+在 mid‑cut 块形式下：
+
+- 内部块：$H_\sigma(u,v) = p^{(L+1)}(u \sigma v)$，$u\in P,v\in S$；
+- ε 行/列通过对 mid‑cut block 做行/列和构造：
+  - $H_\sigma(\varepsilon,v)$ = $\sum_{u\in P}p^{(L+1)}(u\sigma v)$；
+  - $H_\sigma(u,\varepsilon)$ = $\sum_{v\in S}p^{(L+1)}(u\sigma v)$；
+  - $H_\sigma(\varepsilon,\varepsilon)$ = $\sum_{u\in P,v\in S}p^{(L+1)}(u\sigma v)$，即“中间符号等于 $\sigma$ 的总概率”。
+
+实现上与你的 `extend_hankel_blocks_with_epsilon` 完全一致。exp4_condition_numbers
+
+------
+
+## 3. Part A：结构实验 —— Hankel 秩与条件数
+
+### 3.1 实验配置
+
+- 模型：`rank1` 和 `rank3`；
+- 参数：默认 $\eta=0.6, c=0.5$；
+- 长度：$L \in \{6,8,10,12,14,16\}$。
+
+对于每个 (model, L)：
+
+1. 用 MPS 完全枚举得到 $p^{(L)}$；
+2. 构造 mid‑cut Hankel $H_{\mathrm{mid}}^{(L)}$；
+3. 计算其奇异值、行/列相干度及范数；
+4. 保存到结果表（无需重复试验）。
+
+### 3.2 记录指标
+
+对每个 (model, L)，记录：
+
+- 奇异值：
+
+  - 完整奇异值序列 $\{\sigma_i(L)\}$，至少前三个 $\sigma_1,\sigma_2,\sigma_3$ 必须保存；
+  - 对 $\sigma_3(L)$ 取自然对数：$\log\sigma_3(L)$。
+
+- 数值秩：
+
+  - 阈值：
+    $$
+    \tau(L) = 10^{-10}\,\sigma_1(L);
+    $$
+
+  - 数值秩：
+    $$
+    r_{\mathrm{num}}(L) = \#\{i : \sigma_i(L) > \tau(L)\}.
+    $$
+
+  - 将 $r_{\mathrm{num}}(L)$ 明确存一列（方便直接画表）。
+
+- 条件数：
+  $$
+  \kappa_L = \frac{\sigma_1(L)}{\sigma_3(L)}.
+  $$
+
+- Hankel 范数：
+
+  - Frobenius 范数 $\|H_{\mathrm{mid}}^{(L)}\|_F$；
+  - 谱范数 $\|H_{\mathrm{mid}}^{(L)}\|_2$。
+
+- 相干度：
+  $$
+  \mu_{\mathrm{row}}(L) = \max_u \sum_v |H(u,v)|,\quad
+  \mu_{\mathrm{col}}(L) = \max_v \sum_u |H(u,v)|,\quad
+  \mu(L) = \max\{\mu_{\mathrm{row}}, \mu_{\mathrm{col}}\}.
+  $$
+
+### 3.3 预期现象与验证标准
+
+- **rank‑1：**
+  - $r_{\mathrm{num}}(L) = 1$ 对所有 L 都成立；
+  - $\sigma_2(L),\sigma_3(L)$ 处于数值噪声量级（$\ll \sigma_1$）；
+  - $\kappa_L \approx 1$ 或不具实际意义。
+- **rank‑3：**
+  - $r_{\mathrm{num}}(L) = 3$ 对所有 L 都成立；
+  - $\log\sigma_3(L)$ 与 L 近似线性关系，斜率为负，表明 $\sigma_3$ 指数衰减；
+  - $\kappa_L$ 随 L 急剧增大（在 log 轴上近似线性增长）。
+
+**图像建议：**
+
+- 图 (A1)：rank‑3 的 $\sigma_1(L),\sigma_2(L),\sigma_3(L)$ vs L。
+- 图 (A2)：$\log\sigma_3(L)$ vs L（附线性拟合）。
+- 图 (A3)：$\kappa_L$ vs L（log 纵轴）。
+
+这三张图直接对应理论的“rank‑3 是 rank‑3，但第三奇异值随 L 指数衰减，从而条件数爆炸”的结论。
+
+------
+
+## 4. Part B：谱学习样本复杂度与条件数
+
+这一部分分成两个层级：**baseline（真 Hankel）** 和 **有限样本**。
+
+### 4.1 Baseline：真 Hankel + 真块 Hankel
+
+对每个模型 `rank1` / `rank3`、长度 $L\in\{6,10,14\}$：
+
+1. 完全枚举得到 $p^{(L)}$ 和 $p^{(L+1)}$；
+
+2. 构造 ε‑扩展主 Hankel $H$、块 Hankel $H_\sigma$（见 §2.2）；
+
+3. 使用统一的谱学习管线（参见脚本 `spectral_wfa_from_hankel` 的实现）：
+
+   - SVD：$H \approx U_r \Sigma_r V_r^\top$；
+
+   - $P = U_r \Sigma_r^{1/2},\, S = \Sigma_r^{1/2} V_r^\top$；
+
+   - 伪逆：$P^+ = \Sigma_r^{-1/2} U_r^\top,\ S^+ = V_r \Sigma_r^{-1/2}$；
+
+   - 转移矩阵：$B_\sigma = P^+ H_\sigma S^+$；
+
+   - 初始/终止向量：
+     $$
+       \alpha^\top = h_{\varepsilon,*} S^+,\quad
+       \beta = P^+ h_{*,\varepsilon},
+     $$
+     其中 $h_{\varepsilon,*}$ 为 H 的 ε 行，$h_{*,\varepsilon}$ 为 ε 列。
+
+4. 对所有 $x\in\Sigma^L$ 枚举计算 $\widehat p(x)$：
+
+   - 负值裁剪：$\widehat p_{\mathrm{raw}}(x)\leftarrow\max(\widehat p_{\mathrm{raw}}(x),0)$；
+   - 归一化到概率分布。
+
+5. 计算误差：
+   $$
+   \mathrm{TV}_{\mathrm{true}} = \frac12\sum_x |p(x)-\widehat p(x)|,\quad
+   E_{\infty,\mathrm{true}} = \max_x |p(x)-\widehat p(x)|.
+   $$
+
+**硬性验收标准：**
+
+- 若任一 (model,L) 组合不满足：
+  $$
+  \mathrm{TV}_{\mathrm{true}}\le 10^{-6},\quad
+  E_{\infty,\mathrm{true}}\le 10^{-6},
+  $$
+  则**认定谱学习实现 / Hankel 构造存在 bug**，需要优先修正（包括 SVD 精度、rank 选择、ε 行/列是否填错等），**不得继续使用该实现做有限样本实验**。
+
+### 4.2 有限样本：经验 Hankel 的估计
+
+对给定 (model,L)，从真实分布中采样，用同一套 pipeline 学习并评估。
+
+#### 4.2.1 主 Hankel $\widehat H$
+
+- 从 $p^{(L)}$ 中独立抽取 N 个长度 L 样本；
+
+- 每个样本 $x$ 用 mid‑cut 划分为 $x=uv$；
+
+- 对非 ε 行/列：
+  $$
+    \widehat H(u,v) = \frac{\#\{x: x=uv\}}{N}.
+  $$
+
+- ε 行/列估计：
+
+  - ε 行：$\widehat H(\varepsilon,v) = \widehat p(v)$，用后缀边缘频率估计；
+  - ε 列：$\widehat H(u,\varepsilon) = \widehat p(u)$，用前缀边缘频率估计；
+  - $\widehat H(\varepsilon,\varepsilon) = 1$（可选用边缘和做轻微归一化调整）。
+
+**实现上**，你已经在脚本里采用“先 mid‑cut 再用行/列和补 ε 行/列”的方式，从频率上等价于上述边缘估计，这一点可以保留。exp4_condition_numbers
+
+#### 4.2.2 块 Hankel $\widehat H_\sigma$
+
+- 从 $p^{(L+1)}$ 中独立抽取 N 个长度 L+1 样本；
+
+- 每个样本写成 $x = u\sigma v$，统计三元组 $(u,\sigma,v)$ 次数；
+
+- 对非 ε 行/列：
+  $$
+  \widehat H_\sigma(u,v) = \frac{\#\{x: x=u\sigma v\}}{N}.
+  $$
+
+- ε 行/列：同样通过对 mid‑cut 块做行/列和构造。
+
+### 4.3 样本网格与重复次数
+
+- **样本数 N：**
+   建议近似 log 网格：
+  $$
+    N \in \{200,\ 1000,\ 5000,\ 2\cdot 10^4,\ 5\cdot 10^4\}.
+  $$
+  若算力允许，可继续加 $10^5$ 一档。
+
+- **重复次数 R：**
+   对每个 (model,L,N) 做 R=20 个 trial（独立重采样），够稳健；
+   如果时间紧，可以先用 R=5 小跑，找出感兴趣区域再加密到 R=20。
+
+### 4.4 每个 trial 的输出指标
+
+对每个 (model,L,N,trial)：
+
+1. **Hankel 偏差（ε‑扩展后）：**
+
+   - 差矩阵：$\Delta H = \widehat H - H$；
+   - Frobenius 范数：$\Delta_F = \|\Delta H\|_F$；
+   - 谱范数：$\Delta = \|\Delta H\|_2$（用 power iteration 近似实现即可）。
+
+2. **谱学习参数的稳定性：**
+
+   - 对 $\widehat H$ 的 rank‑$r$ SVD 求经验最小奇异值：
+     $$
+     \sigma_{\min}^{\mathrm{emp}} := \hat\sigma_r.
+     $$
+
+   - 关键比值：
+     $$
+     \rho = \frac{\Delta}{\sigma_{\min}^{\mathrm{emp}}}
+     $$
+     作为理论中 $\Delta/\gamma$ 的估计。
+
+3. **分布误差：**
+
+   - 用谱学习得到的 $(\widehat B_\sigma,\widehat\alpha,\widehat\beta)$；
+
+   - 完全枚举 $x\in\Sigma^L$，计算：
+     $$
+     E_{\mathrm{TV}} = \tfrac12 \sum_x |p(x)-\widehat p(x)|,\quad
+     E_\infty = \max_x |p(x)-\widehat p(x)|.
+     $$
+
+4. **元信息与结构参数：**
+
+   - model, L, N, trial index；
+   - 对应的真结构量（来自 Part A）：$\sigma_1,\sigma_2,\sigma_3,\ \kappa_L,\ \mu$ 等。
+
+你已经在 CSV 里记录了绝大多数这些字段（`sigma1,sigma2,sigma3,log_sigma3,hankel_frob_mid,hankel_spec_mid,mu_row,mu_col,mu_max,frob_error,spectral_error,tv_error,max_error,sigma_min_emp,delta_over_sigma_min` 等），只需确认增加 `r_num`（数值秩）和若干标志位。
+
+------
+
+## 5. 结果分析与预期图像
+
+### 5.1 结构部分（Part A）
+
+- 图 A1：rank‑3 的 $\sigma_1(L),\sigma_2(L),\sigma_3(L)$ vs L；
+- 图 A2：$\log\sigma_3(L)$ vs L（加线性拟合直线），验证指数衰减；
+- 图 A3：$\kappa_L$ vs L（log 纵轴）。
+
+文字结论直接对应 H1：rank‑3 的 Hankel 确实是 rank‑3，但随 L 条件数灾难性变坏；rank‑1 则保持数值秩 1 且条件数常数级。
+
+### 5.2 样本复杂度与 $N^{-1/2}$ 缩放（H3）
+
+- 对每个模型、每个 L，画 TV 误差的 log–log 图：
+  - $x$ 轴为 $\log N$，$y$ 轴为 trial 均值或中位数 $\log \overline{E_{\mathrm{TV}}}(N)$；
+  - 对 rank‑1 / rank‑3 分别拟合斜率，检查是否接近 −1/2。
+
+### 5.3 条件数效应（H4）
+
+- 固定 L（比如 L=10），比较两条曲线：
+  - $E_{\mathrm{TV}}^{(1)}(N)$ vs $E_{\mathrm{TV}}^{(3)}(N)$，观察在同一 N 下 rank‑3 是否显著更大。
+- 归一化对齐：
+  - 画 $\sigma_{\min}(H_p)\cdot E_{\mathrm{TV}}(N)$ vs $N$；
+  - 或 $\sigma_{\min}^2(H_p)\cdot E_{\mathrm{TV}}(N)$ vs $N$，观察 rank‑1 / rank‑3 是否更接近重合。
+
+### 5.4 有效样本复杂度的粗评估
+
+针对若干 TV 阈值 $\varepsilon \in\{0.1,0.05,0.02\}$：
+
+1. 定义
+   $$
+   N_\varepsilon^{(k)} = \min\{N : \overline{E_{\mathrm{TV}}^{(k)}}(N) \le \varepsilon\},\quad
+   k\in\{\text{rank1, rank3}\}.
+   $$
+
+2. 比较比值
+   $$
+   R_N(\varepsilon) = \frac{N_\varepsilon^{(\text{rank3})}}{N_\varepsilon^{(\text{rank1})}}.
+   $$
+
+3. 观察：
+
+   - $R_N(\varepsilon)$ 是否显著大于 1；
+   - 随 L 增大，$R_N(\varepsilon)$ 是否有增大趋势（与 $\kappa_L$ 的增加相呼应）。
+
+------
+
+## 6. 实施与 sanity checklist
+
+最后整理一个简明的 checklist，保证实验真正跑出来时是“干净”的：
+
+1. **mid‑cut Hankel 部分：**
+   -  对每个 (model,L) 用真分布构造 $H_{\mathrm{mid}}^{(L)}$；
+   -  记录 $\sigma_1,\sigma_2,\sigma_3,\log\sigma_3,r_{\mathrm{num}},\kappa_L,\|H\|_F,\|H\|_2,\mu$。
+2. **ε‑扩展 Hankel 结构：**
+   -  主 Hankel $H$ ε 行/列是否按 §2.2 定义填充；
+   -  块 Hankel $H_\sigma$ 的 ε 行/列是否为 mid‑cut 块的行/列和；
+   -  含 ε 的索引顺序统一为：第 0 行/列 = ε，后面是 mid‑cut 前缀/后缀。
+3. **谱学习实现：**
+   -  SVD 与伪逆使用与理论一致的公式；
+   -  anchor 明确选用 ε 行/列（索引 0）构造 $\alpha,\beta$；
+   -  负值裁剪 + 归一化实现正确。
+4. **baseline（sample_size=0）：**
+   -  对每个 (model,L) 计算 $\mathrm{TV}_{\mathrm{true}},E_{\infty,\mathrm{true}}$；
+   -  若任一超过 $10^{-6}$，必须先 debug 并修正；
+      实现上可以在代码中直接 `assert tv_true <= 1e-6`，否则抛异常终止。
+5. **有限样本部分：**
+   -  每个 (model,L,N) 至少 R=10（建议 20）个独立 trial；
+   -  记录 $\Delta_F,\Delta,\sigma_{\min}^{\mathrm{emp}},\rho,E_{\mathrm{TV}},E_\infty$ 及所有结构参数；
+   -  随机种子记录在案（便于复现实验）。
