--- a/docs/试验大纲6.md
+++ b/docs/试验大纲6.md
@@ -1,461 +1,480 @@
-## 实验 6：多视角 Hankel 的好处
+# 实验 6：多视角 Hankel 的好处
 
-（对应第 8.3 章）
+> 对应理论：第 8.3 章（多视角 Hankel 联合分析） + 第 11 章（端到端误差与 $1/\gamma$ 缩放）。
+>  实现参考脚本：`exp6_multi_view.py`（但本大纲对联合经验 Hankel 的部分做了关键升级）。
 
-### 0. 理论目标回顾
+------
 
-理论里关键是：
+## 6.0 理论目标与待验证假设
 
-- 每个视角 $k$ 有 Hankel 分解：
+### 6.0.1 背景与符号
+
+- 对每个视角 $k$，存在 Hankel 分解
   $$
-  H^{(k)} = O^{(k)} C^{(k)}
+  H^{(k)} = O^{(k)} C^{(k)},\qquad \mathrm{rank}(H^{(k)}) = r.
   $$
 
-- 联合视角：
+- 多视角联合：
   $$
   \mathcal O_{\rm joint}=
   \begin{bmatrix}
   O^{(1)}\\\vdots\\O^{(K)}
-  \end{bmatrix},
-  \quad
+  \end{bmatrix},\quad
   \mathcal C_{\rm joint}=
   \begin{bmatrix}
   C^{(1)}&\cdots&C^{(K)}
-  \end{bmatrix},
-  \quad
+  \end{bmatrix},\quad
   H_{\rm joint}=\mathcal O_{\rm joint}\mathcal C_{\rm joint}.
   $$
 
-- 定理 8.7 给出：
+- 定理 8.7（谱下界）说明：
   $$
   \sigma_r(H_{\rm joint})
   \ \ge\
   \sqrt{
     \Big(\sum_k \lambda_{\min}(O^{(k)\top}O^{(k)})\Big)
     \Big(\sum_k \lambda_{\min}(C^{(k)}C^{(k)\top})\Big)
-  }
+  }.
   $$
-  ⇒ 加视角可以**提高最小奇异值 → 提高条件数**。
 
-**实验目标：**
+- 第 11 章表明，端到端点态误差大致为：
+  $$
+  \text{error} \;\propto\; \frac{\Delta}{\gamma},\quad 
+  \gamma = \sigma_r(H),
+  $$
+  其中 $\Delta$ 是 Hankel 估计误差、$\gamma$ 是最小非零奇异值。
 
-1. 在真模型上直接验证：
-    多视角联合 Hankel 的 $\sigma_r(H_{\rm joint})$ 明显大于单视角 $\sigma_r(H^{(k)})$。
-2. 在有限样本谱学习中，对比：
-   - 单视角白化（只用一个 $H^{(k)}$）；
-   - 多视角联合白化（用所有视角构造的大 Hankel）。
-      看：在相同样本数下，多视角是否确实误差更小、方差更小、收敛更快。
+### 6.0.2 实验要检验的两条主 Hypothesis
+
+**H6‑A（谱层面，多视角抬高最小奇异值）**
+
+- 对同一 ground truth 模型，
+  $$
+  H^{(k)} \ (k=1,\dots,K),\quad H_{\rm joint}
+  $$
+  的最小奇异值满足
+  $$
+  \gamma^{(k)} := \sigma_r(H^{(k)}),\qquad
+  \gamma_{\rm joint} := \sigma_r(H_{\rm joint}),
+  $$
+  且数值上
+  $$
+  \gamma_{\rm joint} \gg \max_k \gamma^{(k)}.
+  $$
+
+- 同时，$\gamma_{\rm joint}$ 应该**数值上不小于**定理 8.7 的 Gram 下界：
+  $$
+  \gamma_{\rm joint}
+  \;\gtrsim\;
+  \sqrt{
+    \Big(\sum_k \lambda_{\min}(O^{(k)\top}O^{(k)})\Big)
+    \Big(\sum_k \lambda_{\min}(C^{(k)}C^{(k)\top})\Big)
+  }.
+  $$
 
 ------
 
-## 共用设定：模型 + 视角
+**H6‑B（学习层面，多视角提高稳定性且误差随 $1/\gamma$ 缩放）**
 
-### 1. ground truth 模型
+在有限样本谱学习中，比较：
 
-选一个“中等条件数”的模型，最好是之前实验中已经看到单视角 $\sigma_r$ 不算大的那种：
+- 单视角谱学习（选一个代表视角，比如“中间切分”）；
+- 多视角联合白化 + 多视角预测；
 
-- 字母表：$\Sigma=\{0,1\}$；
+我们希望看到：
 
-- 键维：$D\in\{3,4\}$；
+1. 在同一样本数 $N$ 下，多视角的点态误差（max / TV）**平均更小**；
 
-- 构造方式（和实验 1 一致）：
+2. 多视角误差在不同 trial 间的**标准差更小**（鲁棒性更好）；
 
-  1. 对每个位置 $t$ 和每个 $\sigma$ 生成随机复矩阵 $A_t(\sigma)\in\mathbb C^{D\times D}$；
+3. 把误差乘上对应的 $\gamma$ 后：
+   $$
+   \overline E_{\rm single}(N)\cdot\gamma_{\rm single},
+   \qquad
+   \overline E_{\rm multi}(N)\cdot\gamma_{\rm joint}
+   $$
+   的曲线更接近，支持“误差主要由 $1/\gamma$ 控制”的理论。
 
-  2. 做 left-canonical 规范化：
-     $$
-     M_t = \sum_{\sigma}A_t(\sigma)A_t(\sigma)^\dagger,\quad
-     A_t(\sigma) \leftarrow M_t^{-1/2}A_t(\sigma);
-     $$
+------
 
-  3. 随机归一化边界向量 $\alpha,\beta$。
+## 6.1 实验总体设置
 
-你也可以直接用第 4 或第 5 个实验里已经保存好的一个「有点劣条件」的 MPS。
+### 6.1.1 Ground truth 模型家族
 
-### 2. 多视角的定义
+- 字母表：$\Sigma = \{0,1\}$，即二元序列。
 
-为了简单起见，可以**固定长度 L，改切分点**来构造多视角：
-
-- 固定某个 $L$（例如 $L=10$ 或 12）；
-
-- 定义多个切分点：
+- 序列长度 $L$：取若干个值做参数扫描，例如：
   $$
-  t_{*,1}<t_{*,2}<\cdots<t_{*,K},\quad
-  t_{*,k}\in\{2,3,\dots,L-2\}
+  L \in \{6,8,10\}.
+  $$
+
+- 键维 $D$：选择中等规模，确保 Hankel 秩不会太低，例如：
+  $$
+  D \in \{2,3,4\}.
+  $$
+
+- ground truth 生成方式（与现有脚本一致）：exp6_multi_view
+
+  1. 对每个位置 $t\in\{1,\dots,L\}$ 和每个符号 $\sigma\in\Sigma$ 生成随机复矩阵 $A_t(\sigma)\in\mathbb C^{D\times D}$；
+
+  2. 做 left‑canonical 规范化：
+     $$
+     M_t = \sum_{\sigma} A_t(\sigma)A_t(\sigma)^\dagger,\quad
+     A_t(\sigma)\leftarrow M_t^{-1/2}A_t(\sigma),
+     $$
+     其中 $M_t^{-1/2}$ 用 Newton–Schulz 迭代近似；
+
+  3. 随机归一化边界向量 $\alpha,\beta\in\mathbb C^D$；
+
+  4. 枚举所有 $x\in\Sigma^L$，用 MPS 精确计算振幅与概率
+     $$
+     p(x)=|\psi(x)|^2,
+     $$
+     并归一化形成真分布表 $p_{\rm true}(x)$。
+
+- 为了统计稳定性，每个 $(L,D)$ 组合跑若干个独立模型，例如：
+  $$
+  \text{num\_models\_per\_setting} = 5.
+  $$
+
+### 6.1.2 多视角切分与前缀/后缀集合
+
+对每个固定的 $L$，选择一组切分点 $\{t_{*,k}\}_{k=1}^K$：
+
+- 典型配置：
+  $$
+  K\in\{2,3,4\},\quad
+  t_{*,k}\in\{2,\dots,L-2\},
   $$
   例如：
+
+  - $L=6$ 时：$t_{*,1}=2,t_{*,2}=3,t_{*,3}=4$（与现有脚本一致）；exp6_multi_view
+  - $L=10$ 时：$t_{*,1}=3,t_{*,2}=5,t_{*,3}=7$ 等。
+
+对每个视角 $k$：
+
+- 前缀/后缀全集：
   $$
-  t_{*,1}=3,\quad t_{*,2}=5,\quad t_{*,3}=7.
+  P^{(k)}_{\text{full}} = \Sigma^{t_{*,k}},\quad
+  S^{(k)}_{\text{full}} = \Sigma^{L-t_{*,k}}.
   $$
 
-**第 k 个视角：**
+- 若全集过大，则**随机下采样**到指定上限（例如 128），但要记住：
 
-- 前缀集合：
+  - 使用一个固定的随机种子保证可复现；
+  - 得到有序列表 `P^{(k)}`, `S^{(k)}`，并在后续所有地方**严格使用同样的顺序**，
+     不允许 `set+sort` 之类打乱顺序（防止 Hankel 行/列索引错位）。试验大纲6
+
+### 6.1.3 样本规模与 trial 设定
+
+- 样本规模 $N$：建议用 log 级别扫描，例如：
   $$
-  P^{(k)} = \Sigma^{t_{*,k}},
+  N\in\{500,2000,5000,20000\}.
   $$
 
-- 后缀集合：
+- 对每个 $(L,D,K,N)$ 配置，重复 $R$ 次独立采样 trial，例如：
   $$
-  S^{(k)} = \Sigma^{L-t_{*,k}}.
+  R = 20.
   $$
 
-每个视角都有自己的 Hankel：
-$$
-H^{(k)}(u,v) = p(uv),\quad u\in P^{(k)},\ v\in S^{(k)}.
-$$
-
-> 备注：
->  也可以做「多长度视角」（$L_k=L,L+1,L+2$），构造桥接 Hankel，那就更贴近 13 章的「bridge」版本。实验上先把“同长多切分”玩明白就很够用了。
+每个 trial 都重新采样数据，但共用同一个 ground truth MPS，这样可以分离“模型难度”和“采样噪声”的影响。
 
 ------
 
-## 实验 6A：真 Hankel 的谱性质（单视角 vs 联合）
+## 6.2 实验 6A：真 Hankel 的谱结构验证（H6‑A）
 
-### 6A.1 构造真 Hankel 与分解
+目标：在**无采样噪声**情况下，验证多视角联合 Hankel 的谱性质确实符合定理 8.7。
 
-对固定 $L$ 和选定的几组切分点 $\{t_{*,k}\}_{k=1}^K$：
+### 6.2.1 单视角真 Hankel 与 SVD 分解
 
-1. 对每个视角 $k$：
+对每个 ground truth 模型、每个视角 $k$：
 
-   - 枚举 $P^{(k)}\times S^{(k)}$，对每对 $(u,v)$：
+1. 利用真分布 $p_{\rm true}$ 构造 Hankel：
+   $$
+   H^{(k)}(u,v) = p_{\rm true}(uv),\quad u\in P^{(k)}, v\in S^{(k)}.
+   $$
 
-     - 拼接 $x=uv$，用 MPS 计算 $p(x)$；
+2. 对 $H^{(k)}$ 做 rank‑$r$ SVD（$r\le D^2$）：
+   $$
+   H^{(k)} = U^{(k)}\Sigma^{(k)}V^{(k)\top}.
+   $$
 
-     - 定义：
-       $$
-       H^{(k)}(u,v) := p(uv).
-       $$
+3. 取：
+   $$
+   O^{(k)} = U^{(k)}\Sigma^{(k)1/2},\quad
+   C^{(k)} = \Sigma^{(k)1/2}V^{(k)\top},
+   $$
+   则 $H^{(k)} = O^{(k)}C^{(k)}$ 是一组合法的 rank‑$r$ 分解。
 
-   - 对 $H^{(k)}$ 做 SVD：$H^{(k)}=U^{(k)}\Sigma^{(k)}V^{(k)\top}$，
-      得到数值秩 $r$ 和最小非零奇异值：
+4. 记录单视角最小奇异值：
+   $$
+   \gamma^{(k)} := \sigma_r(H^{(k)}) = \Sigma^{(k)}_{rr}.
+   $$
+
+### 6.2.2 联合 Hankel 与 Gram 下界
+
+1. 构造联合可观测/可控制矩阵：
+   $$
+   \mathcal O_{\rm joint}=
+   \begin{bmatrix}
+   O^{(1)}\\\vdots\\O^{(K)}
+   \end{bmatrix},\quad
+   \mathcal C_{\rm joint}=
+   \begin{bmatrix}
+   C^{(1)}&\cdots&C^{(K)}
+   \end{bmatrix}.
+   $$
+
+2. 联合 Hankel：
+   $$
+   H_{\rm joint} = \mathcal O_{\rm joint}\mathcal C_{\rm joint}.
+   $$
+
+3. 对 $H_{\rm joint}$ 做 rank‑$r$ SVD，记录：
+   $$
+   \gamma_{\rm joint} := \sigma_r(H_{\rm joint}).
+   $$
+
+4. Gram 下界（数值 sanity check）：
+
+   - 每个视角的 Gram：
      $$
-     \gamma^{(k)} := \sigma_r(H^{(k)}).
+     G_O^{(k)} = O^{(k)\top}O^{(k)},\quad
+     G_C^{(k)} = C^{(k)}C^{(k)\top};
      $$
 
-2. 为了更严格对齐理论中的 $O^{(k)},C^{(k)}$，你可以用**真 WFA 嵌入**构造：
-
-   - 定义概率 Hankel 里的前缀嵌入：
+   - 定义：
      $$
-     \ell_p^{(k)}(u) = \ell(u)\otimes\overline{\ell(u)}\in\mathbb C^{D^2},
-     $$
-
-   - 后缀嵌入：
-     $$
-     r_p^{(k)}(v) = r(v)\otimes\overline{r(v)}\in\mathbb C^{D^2},
+     \Lambda_O = \sum_k \lambda_{\min}(G_O^{(k)}),\quad
+     \Lambda_C = \sum_k \lambda_{\min}(G_C^{(k)}).
      $$
 
-   - 则：
+   - Gram 下界：
      $$
-     H^{(k)}(u,v) = \ell_p^{(k)}(u)^\top r_p^{(k)}(v),
+     \gamma_{\rm Gram} :=
+     \sqrt{\Lambda_O\Lambda_C}.
      $$
 
-   - 写成矩阵形式：
+   - 验证数值上是否满足：
      $$
-     O^{(k)}\in\mathbb C^{|P^{(k)}|\times r},\quad C^{(k)}\in\mathbb C^{r\times |S^{(k)}|},
+     \gamma_{\rm joint} \ge \gamma_{\rm Gram},\quad
+     \gamma_{\rm joint} \ge \max_k \gamma^{(k)}.
      $$
-     其中 r ≤ D²，为最小 Hankel 秩（可参考 4.1）。
 
-   这是**理论上的“真分解”**，用于构造联合 Gram（$\lambda_{\min}$）和 $H_{\rm joint}$。
+### 6.2.3 统计与可视化
 
-### 6A.2 构造联合视角 Hankel
+- 对每个 $(L,D,K)$ 配置，在多个 ground truth 模型上统计：
+  - 单视角 $\gamma^{(k)}$ 的均值/中位数与分布；
+  - 联合 $\gamma_{\rm joint}$ 的均值/中位数；
+  - $\gamma_{\rm joint} / \max_k \gamma^{(k)}$ 的提升倍数；
+  - $\gamma_{\rm joint}$ 与 $\gamma_{\rm Gram}$ 的差距。
+- 建议图：
+  1. **柱状图 / 箱线图**：各视角的 $\gamma^{(k)}$ 与 $\gamma_{\rm joint}$ 对比；
+  2. **散点图**：横轴 $\gamma_{\rm Gram}$，纵轴 $\gamma_{\rm joint}$，看是否集中在对角线之上；
+  3. **提升倍数 vs K**：显示随着视角数 K 增加，$\gamma_{\rm joint}$ 的提升如何变化。
 
-按 8.3 章的定义：
+------
 
-- 联合可观测矩阵：
+## 6.3 实验 6B：多视角联合谱学习的稳定性（H6‑B）
+
+这里重点是**在有限样本下**，比较单视角 vs 多视角谱学习的端到端误差与方差，并分析误差与 $\gamma$ 之间的缩放关系。
+
+### 6.3.1 trial 流程与样本生成
+
+对每个 ground truth 模型、每个样本规模 $N$、每个 trial（共 $R$ 次）：
+
+1. 从真分布 $p_{\rm true}$ 中 iid 采样 $N$ 条长度为 $L$ 的序列；
+2. 这些样本同时用于所有视角（避免不同视角使用不同数据集）。
+
+### 6.3.2 单视角谱学习 Baseline
+
+选一个代表视角 $k_* $（例如中间切分 $t_{*,2}$）作为 baseline：
+
+1. 用切分点 $t_{*,k_*}$ 把每个样本 $x$ 拆成 $u,v$，只对 $(u,v)\in P^{(k_*)}\times S^{(k_*)}$ 计数，得到经验 Hankel：
+   $$
+   \widehat H^{(k_*)}(u,v)
+   =\frac1N\sum_{i=1}^N \mathbf 1\{u^{(i)}=u,v^{(i)}=v\}.
+   $$
+
+2. 对 $\widehat H^{(k_*)}$ 做 rank‑$r$ SVD：
+   $$
+   \widehat H^{(k_*)} \approx \widehat U^{(k_*)}\widehat\Sigma^{(k_*)}\widehat V^{(k_*)\top},
+   $$
+   记录经验最小奇异值 $\widehat\gamma^{(k_*)}_{\rm emp} = \sigma_r(\widehat H^{(k_*)})$。
+
+3. 构造单视角嵌入：
+   $$
+   \phi^{(k_*)}(u)=\widehat\Sigma^{(k_*)1/2}\widehat U^{(k_*)\top}e_u,\quad
+   \psi^{(k_*)}(v)=\widehat\Sigma^{(k_*)1/2}\widehat V^{(k_*)\top}e_v.
+   $$
+
+4. 对任意 $x=uv$，定义预测：
+   $$
+   \widehat p_{\rm single}(uv)
+   :=\phi^{(k_*)}(u)^\top\psi^{(k_*)}(v),
+   $$
+   再对所有 $x$ 上的预测做非负截断 + 归一化，得到合法分布 $\widehat p_{\rm single}$。
+
+5. 误差度量：
+   $$
+   E_{\rm single} = \max_x|\widehat p_{\rm single}(x)-p_{\rm true}(x)|,\quad
+   \mathrm{TV}_{\rm single} = \tfrac12\sum_x|\widehat p_{\rm single}(x)-p_{\rm true}(x)|.
+   $$
+
+### 6.3.3 多视角联合经验 Hankel（关键补强）
+
+为了和理论中的 $H_{\rm joint}$ 一一对应，我们用**联合频率**构造经验联合 Hankel，而不是通过“先单视角 SVD 再堆 O/C”。试验大纲6
+
+1. **全局前缀/后缀集合：**
+   $$
+   P_{\rm all} := \bigcup_{k=1}^K P^{(k)},\quad
+   S_{\rm all} := \bigcup_{k=1}^K S^{(k)}.
+   $$
+   实现：建立两个有序列表 `P_all_list`, `S_all_list`，顺序固定且在整个实验过程中不变。
+
+2. **联合频数统计：**
+
+   对每个样本 $x^{(i)}$、每个视角 $k$：
+
+   - 按 $t_{*,k}$ 切分 $x^{(i)}=u_k^{(i)}v_k^{(i)}$；
+   - 若 $u_k^{(i)}\in P_{\rm all}$ 且 $v_k^{(i)}\in S_{\rm all}$，则更新对应条目。
+
+   定义联合经验 Hankel：
+   $$
+   \widehat H_{\rm all}(u,v)
+   = \frac{1}{N K} \sum_{i=1}^N \sum_{k=1}^K
+   \mathbf 1\{u_k^{(i)}=u,\ v_k^{(i)}=v\}.
+   $$
+   它估计的就是以 $P_{\rm all},S_{\rm all}$ 为索引的联合 Hankel $H_{\rm joint}$ 的对应条目（模一个常数因子）。
+
+3. **联合 SVD 与联合嵌入：**
+
+   - 对 $\widehat H_{\rm all}$ 做 rank‑$r$ SVD：
+     $$
+     \widehat H_{\rm all} \approx U_r^{\rm all}\Sigma_r^{\rm all}V_r^{\rm all\top},
+     $$
+     记录联合经验最小奇异值：
+     $$
+     \widehat\gamma_{\rm joint}^{\rm emp} = \sigma_r(\widehat H_{\rm all}).
+     $$
+
+   - 联合嵌入：
+     $$
+     \phi_{\rm joint}(u)=\Sigma_r^{\rm all\,1/2}U_r^{\rm all\top}e_u,\quad
+     \psi_{\rm joint}(v)=\Sigma_r^{\rm all\,1/2}V_r^{\rm all\top}e_v,
+     $$
+     其中 $u\in P_{\rm all},v\in S_{\rm all}$。
+
+### 6.3.4 多视角预测与误差
+
+对任意测试串 $x\in\Sigma^L$，执行：
+
+1. 对所有视角 $k$，用各自切分点 $t_{*,k}$ 得到 $x=u_k v_k$；
+
+2. 若 $u_k\in P_{\rm all}$ 且 $v_k\in S_{\rm all}$，则计算该视角的预测：
+   $$
+   \widehat p^{(k)}_{\rm joint}(x) :=
+   \phi_{\rm joint}(u_k)^\top\psi_{\rm joint}(v_k).
+   $$
+
+3. 对所有有有效嵌入的视角求平均：
+   $$
+   \widehat p_{\rm multi}(x)
+   := 
+   \begin{cases}
+   \frac1{|\mathcal K_x|}\sum_{k\in\mathcal K_x}\widehat p^{(k)}_{\rm joint}(x), & \mathcal K_x\neq\emptyset,\\[4pt]
+   0, & \text{否则},
+   \end{cases}
+   $$
+   其中 $\mathcal K_x$ 为有定义的视角集合。
+
+4. 对 $\widehat p_{\rm multi}$ 做截断为非负并归一化，得到合法分布。
+
+5. 多视角误差：
+   $$
+   E_{\rm multi} = \max_x|\widehat p_{\rm multi}(x)-p_{\rm true}(x)|,\quad
+   \mathrm{TV}_{\rm multi} = \tfrac12\sum_x|\widehat p_{\rm multi}(x)-p_{\rm true}(x)|.
+   $$
+
+### 6.3.5 误差与 $1/\gamma$ 缩放分析
+
+对每个 $(L,D,K,N)$ 配置，利用 $R$ 个 trial 的结果统计：
+
+- 单视角：
   $$
-  \mathcal O_{\rm joint}=
-  \begin{bmatrix}
-  O^{(1)}\\\vdots\\O^{(K)}
-  \end{bmatrix}
-  \in\mathbb C^{(\sum_k |P^{(k)}|)\times r},
-  $$
-
-- 联合可控制矩阵：
-  $$
-  \mathcal C_{\rm joint}=
-  \begin{bmatrix}
-  C^{(1)}&\cdots&C^{(K)}
-  \end{bmatrix}
-  \in\mathbb C^{r\times(\sum_k |S^{(k)}|)}.
-  $$
-
-- 联合 Hankel：
-  $$
-  H_{\rm joint} = \mathcal O_{\rm joint}\mathcal C_{\rm joint}.
-  $$
-
-这一步你可以直接用真嵌入 $\ell_p, r_p$ 构造，无需采样。
-
-然后对 $H_{\rm joint}$ 做 SVD：
-$$
-H_{\rm joint}=U_{\rm joint}\Sigma_{\rm joint}V_{\rm joint}^\top,
-\quad
-\gamma_{\rm joint}:=\sigma_r(H_{\rm joint}).
-$$
-
-### 6A.3 指标与预期
-
-**1）最小奇异值对比**
-
-- 收集：
-  $$
-  \{\gamma^{(1)},\dots,\gamma^{(K)},\gamma_{\rm joint}\}.
-  $$
-
-- 画一张柱状图或表格，比较每个视角单独的 $\sigma_r(H^{(k)})$ 与联合 $\sigma_r(H_{\rm joint})$。
-
-预期：
-
-- $\gamma_{\rm joint}$ 显著大于每个 $\gamma^{(k)}$，验证联合 Gram 累积提升 $\lambda_{\min}$ 的效果。
-
-**2）Gram 下界验证（可选）**
-
-- 对每个视角，计算：
-  $$
-  G_O^{(k)}:=O^{(k)\top}O^{(k)},\quad
-  G_C^{(k)}:=C^{(k)}C^{(k)\top}.
-  $$
-
-- 计算：
-  $$
-  \Lambda_O := \sum_k \lambda_{\min}(G_O^{(k)}),
+  \overline E_{\rm single}(N),
   \quad
-  \Lambda_C := \sum_k \lambda_{\min}(G_C^{(k)}).
+  \overline{\mathrm{TV}}_{\rm single}(N),
+  \quad
+  \mathrm{Std}[E_{\rm single}(N)],\dots
   $$
 
-- 比较：
+- 多视角：
   $$
-  \gamma_{\rm joint}\quad\text{vs}\quad
-  \sqrt{\Lambda_O\Lambda_C}.
+  \overline E_{\rm multi}(N),
+  \quad
+  \overline{\mathrm{TV}}_{\rm multi}(N),
+  \quad
+  \mathrm{Std}[E_{\rm multi}(N)],\dots
   $$
 
-这里主要是 sanity check：$\gamma_{\rm joint}$ 应不小于这个下界（数值误差内），符合定理 8.7 的方向性。
+- 缩放后的误差：
+  $$
+  \tilde E_{\rm single}(N) := \overline E_{\rm single}(N)\cdot\gamma^{(k_*)},
+  \quad
+  \tilde E_{\rm multi}(N) := \overline E_{\rm multi}(N)\cdot\gamma_{\rm joint}.
+  $$
+
+理论预期：$\tilde E_{\rm single}(N)$ 与 $\tilde E_{\rm multi}(N)$ 的数量级比较接近，说明误差主要由 $\Delta/\gamma$ 的比值控制，而 $\gamma_{\rm joint}$ 的变大就是多视角提高稳定性的主要来源。
 
 ------
 
-## 实验 6B：多视角联合白化对谱学习稳定性的影响
+## 6.4 超参数扫描与结果呈现
 
-这里我们要做的是：用同一个样本集，在**单视角白化** vs **多视角联合白化** 下跑谱学习，然后比较：
+### 6.4.1 推荐的超参数网格
 
-- 点态误差的大小；
-- 学习的方差（不同重复实验之间的波动）。
+为了在不爆炸计算量的前提下捕捉主要趋势，可以采用如下网格：
 
-### 6B.1 设定
+- 长度：$L\in\{6,8,10\}$；
+- 键维：$D\in\{2,3,4\}$；
+- 视角数：$K\in\{2,3,4\}$，切分点均匀分布在 $[2,L-2]$；
+- 样本数：$N\in\{500,2000,5000,20000\}$；
+- 每个 $(L,D)$ 下 ground truth 模型数：5；
+- 每个 $(L,D,K,N)$ 下 trial 数：$R=20$。
 
-- 使用与 6A 相同的 ground truth 模型和视角 $\{t_{*,k}\}$。
-- 固定长度 L（如 10 或 12）。
-- 固定样本数 $N$（比如 $N=2\times 10^4$ 或 $5\times 10^4$），你也可以扫描几组 N。
-- 对每个设置重复 R 次（例如 R=20），用于估计统计波动。
+对于计算成本较高的配置（比如 $L=10,D=4$），可以适当减少 trial 或限制 $K$ 的取值。
 
-### 6B.2 单视角谱学习（baseline）
+### 6.4.2 建议图像
 
-对每个视角 $k$，我们可以独立执行一次谱学习。为简单起见，可以重点挑一个“代表视角”（比如中间切分 $t_{*,2}$）来作为 baseline；或者同时展示多个视角的误差分布。
-
-**单视角流程（固定 k）：**
-
-1. 用样本构造该视角的经验 Hankel $\widehat H^{(k)}$：
-
-   - 切分所有样本 $x^{(i)}$ 为 $u^{(i)},v^{(i)}$ 根据 $t_{*,k}$；
-   - 只对 $(u^{(i)},v^{(i)})\in P^{(k)}\times S^{(k)}$ 的条目计数；
-   - 归一化得到 $\widehat H^{(k)}$。
-
-2. 对 $\widehat H^{(k)}$ 做秩‑r SVD，构造单视角白化矩阵：
-   $$
-   \widehat W_L^{(k)},\widehat W_R^{(k)}.
-   $$
-
-3. 构造单视角嵌入 $\phi^{(k)}(u),\psi^{(k)}(v)$，以及单视角估计 $\widehat p^{(k)}(x)$，方法与实验 5 的“单长度”方案一样：
-   $$
-   \widehat H^{(k)} \approx U_r^{(k)}\Sigma_r^{(k)}V_r^{(k)\top},\quad
-   \phi^{(k)}(u)=\Sigma_r^{(k)1/2}U_r^{(k)\top}e_u,\quad
-   \psi^{(k)}(v)=\Sigma_r^{(k)1/2}V_r^{(k)\top}e_v,
-   $$
-
-   $$
-   \widehat p^{(k)}(uv) := \phi^{(k)}(u)^\top\psi^{(k)}(v).
-   $$
-
-4. 点态误差度量：
-
-   - 枚举或随机采样一批 test 序列 $x$；
-
-   - 定义单视角误差：
-     $$
-     E_{\text{single},k} := \max_{x\in\text{test}}|\widehat p^{(k)}(x)-p(x)|.
-     $$
-
-对 R 次重复取平均/中位数 $\overline E_{\text{single},k}$，以及标准差。
-
-### 6B.3 多视角联合白化
-
-**核心 idea：** 把所有视角的 Hankel 信息统一到一个大矩阵里，做一次 rank‑r SVD 来白化，相当于用联合 Gram $\mathcal O_{\rm joint},\mathcal C_{\rm joint}$ 来确定坐标。
-
-#### (1) 构造联合经验 Hankel
-
-方式一（直接 union）：
-
-- 构造全局前缀集合：
-  $$
-  P_{\rm all} := \bigcup_{k=1}^K P^{(k)},
-  $$
-
-- 全局后缀集合：
-  $$
-  S_{\rm all} := \bigcup_{k=1}^K S^{(k)}.
-  $$
-
-定义统一索引：给 $P_{\rm all},S_{\rm all}$ 每个元素编号。
-
-每个样本 $x^{(i)}$ 在不同视角下产生 K 对 (u,v)：
-
-- 第 k 个视角：
-  $$
-  x^{(i)} = u_k^{(i)} v_k^{(i)},\quad
-  u_k^{(i)}\in P^{(k)},\ v_k^{(i)}\in S^{(k)}\subset P_{\rm all}\times S_{\rm all}.
-  $$
-
-我们用所有这些 pairs 来更新一个**大 Hankel**：
-$$
-\widehat H_{\rm all}(u,v) =
-\frac{1}{NK} \sum_{i=1}^N \sum_{k=1}^K
-\mathbf 1\{u_k^{(i)} = u,\ v_k^{(i)}=v\}.
-$$
-
-- 这样每个样本提供 K 个观测；
-- 分母 $NK$ 确保 $\widehat H_{\rm all}$ 仍然是某种“联合频率”的估计；
-- 真值对应的 $H_{\rm all}$ 就是用 $P_{\rm all},S_{\rm all}$ 构造的大 Hankel，包含所有视角（正好是理论里的 $H_{\rm joint}$ 的“样本版”）。
-
-#### (2) 对 $\widehat H_{\rm all}$ 做联合 SVD
-
-- SVD：
-  $$
-  \widehat H_{\rm all} = U_{\rm all}\Sigma_{\rm all}V_{\rm all}^\top;
-  $$
-
-- 取 rank‑r 截断：
-  $$
-  U_r^{\rm all}, \Sigma_r^{\rm all}, V_r^{\rm all};
-  $$
-
-- 联合白化矩阵：
-  $$
-  W_L^{\rm joint} = \Sigma_r^{\rm all\,-1/2} U_r^{\rm all\top},\quad
-  W_R^{\rm joint} = V_r^{\rm all}\Sigma_r^{\rm all\,-1/2}.
-  $$
-
-此时 $\Sigma_r^{\rm all}$ 的最小奇异值就对应数值版的 $\gamma_{\rm joint}$。
-
-#### (3) 多视角嵌入与预测
-
-有了联合 U,V 之后，我们可以定义所有前缀、后缀的联合嵌入：
-
-- 对任意 $u\in P_{\rm all}$：
-  $$
-  \phi_{\rm joint}(u)=\Sigma_r^{\rm all\,1/2}U_r^{\rm all\top}e_u;
-  $$
-
-- 对任意 $v\in S_{\rm all}$：
-  $$
-  \psi_{\rm joint}(v)=\Sigma_r^{\rm all\,1/2}V_r^{\rm all\top}e_v.
-  $$
-
-对于某个具体的测试串 $x$，因为我们有多个切分点 $t_{*,k}$，可以从不同视角得到多个 (u,v) 表达：
-
-- 第 k 视角：$x=u_k v_k$。
-
-因此我们有多种预测方式：
-
-1. **单视角读取（用联合白化）：**
-   $$
-   \widehat p_{\rm multi}^{(k)}(x) := \phi_{\rm joint}(u_k)^\top \psi_{\rm joint}(v_k).
-   $$
-
-2. **多视角平均：**
-   $$
-   \widehat p_{\rm multi}(x) = \frac1K\sum_{k=1}^K \widehat p_{\rm multi}^{(k)}(x).
-   $$
-
-实践上，用平均会更稳定一些，可以定义最终 multi-view 估计为 $\widehat p_{\rm multi}(x)$。
-
-同样地，对负值截断 + 归一化，确保 $\widehat p_{\rm multi}$ 是一个合法分布。
-
-#### (4) 误差与方差
-
-在每次重复实验中：
-
-- 定义单视角 baseline（例如选视角 $k_*$ 为中间切分）：
-  $$
-  E_{\text{single}} := \max_{x\in\text{test}}|\widehat p^{(k_*)}(x)-p(x)|.
-  $$
-
-- 多视角误差：
-  $$
-  E_{\text{multi}} := \max_{x\in\text{test}}|\widehat p_{\rm multi}(x)-p(x)|.
-  $$
-
-对 R 次重复，计算：
-
-- 均值或中位数：
-  $$
-  \overline E_{\text{single}},\quad \overline E_{\text{multi}},
-  $$
-
-- 标准差（衡量稳定性）：
-  $$
-  \mathrm{Std}[E_{\text{single}}],\quad \mathrm{Std}[E_{\text{multi}}].
-  $$
+1. **图 6(a)：真 Hankel 的最小奇异值**
+   - x 轴：视角 $k$ 以及 “joint”；
+   - y 轴：$\gamma^{(k)}$ 与 $\gamma_{\rm joint}$ 的中位数（附误差条）；
+   - 同图加上 Gram 下界 $\gamma_{\rm Gram}$，展示 $\gamma_{\rm joint}$ 始终在下界之上。
+2. **图 6(b)：误差 vs 样本数**
+   - x 轴：$\log N$；
+   - y 轴：$\overline E$ 或 $\overline{\mathrm{TV}}$；
+   - 曲线 1：单视角 baseline；曲线 2：多视角；
+   - 用误差棒表示 trial 间标准差，多视角的棒应更短。
+3. **图 6(c)：缩放误差 vs 样本数（验证 $1/\gamma$）**
+   - x 轴：$\log N$；
+   - y 轴：$\tilde E_{\rm single}(N)$、$\tilde E_{\rm multi}(N)$；
+   - 若两条曲线接近平行甚至接近重合，则说明“误差主要通过 $1/\gamma$ 缩放”的理论是可信的。
+4. **图 6(d)：多视角数量 K 的收益**
+   - 固定 $L,D,N$，横轴为 K，纵轴为：
+     - $\gamma_{\rm joint}/\max_k \gamma^{(k)}$；
+     - $\overline E_{\rm single}/\overline E_{\rm multi}$ 的相对提升；
+   - 展现 K 从 1 到 2,3,4 时的收益是否逐渐递减（典型 “多视角收益到一定数量会趋于饱和” 的现象）。
 
 ------
 
-## 6B.4 指标与预期图像
+## 6.5 实现细节与坑点提醒
 
-**1）谱性质 vs 误差的对应**
-
-先用真 Hankel 对比：
-
-- 单视角 $\gamma^{(k)} = \sigma_r(H^{(k)})$ vs 联合 $\gamma_{\rm joint}=\sigma_r(H_{\rm joint})$，一般可看到：
-  $$
-  \gamma_{\rm joint} \gg \min_k \gamma^{(k)}.
-  $$
-
-再看学习误差：
-
-- 同样 N 下，多视角误差：
-  $$
-  \overline E_{\text{multi}} \ll \overline E_{\text{single}},
-  $$
-  且方差 $\mathrm{Std}[E_{\text{multi}}]$ 更小。
-
-- 把误差乘上 $\gamma$ 后再比，会发现：
-  $$
-  \overline E_{\text{single}} \cdot \gamma^{(k_*)}
-  \quad\text{和}\quad
-  \overline E_{\text{multi}}\cdot \gamma_{\rm joint}
-  $$
-  尺度更加接近，符合「误差放大约 $\propto 1/\gamma$」的理论（11.1/11.4）。
-
-**2）可视化方案**
-
-- 图 6(a)：柱状图/折线图
-  - x 轴：视角 k 及 “joint”；
-  - y 轴：$\sigma_r(H^{(k)})$ 和 $\sigma_r(H_{\rm joint})$。
-     清楚展示联合时最小奇异值抬高。
-- 图 6(b)：误差对比
-  - x 轴：不同设置（single vs multi）；
-  - y 轴：$\overline E$（可以有误差棒表示标准差）。
-     多视角柱子显著低且误差棒短，体现「更稳」。
-
-如果你愿意再精一点，还可以画：
-
-- $\overline E\cdot\gamma$ 的对比，看是否更接近某个共同常数（印证端到端误差界中的 $1/\gamma$ 依赖）。
-
-------
-
-## 论文式总结句示例
-
-可以在 8.3 章或实验部分这样写：
-
-> We construct multiple Hankel “views” of the same underlying QCBM/MPS model by varying the cut position $t_\star$ for a fixed sequence length $L$. Each view yields a Hankel matrix $H^{(k)}$ with rank $r$, and we build a joint Hankel representation $H_{\rm joint}$ by stacking the corresponding observability and controllability embeddings as in Section 8.3. Numerically, we observe that the smallest non-zero singular value $\sigma_r(H_{\rm joint})$ is significantly larger than that of any individual view, in line with Theorem 8.7 and the Gram-based lower bounds.
->
-> We then compare spectral learning with single-view whitening versus joint multi-view whitening. For a fixed sample size $N$, multi-view whitening corresponds to performing a rank-$r$ SVD on a large Hankel matrix constructed from the union of all prefix–suffix sets, and reusing the resulting embeddings across all views. In this setting, the multi-view learner consistently achieves smaller pointwise reconstruction error and reduced variance across repeated trials, especially in the small-sample regime. After normalizing by the respective smallest singular values, the error profiles for single- and multi-view learners become comparable, confirming that the robustness improvement is primarily due to the increase of $\sigma_r(H)$ induced by combining multiple Hankel views.
+1. **索引一致性是重中之重**
+   - 前缀/后缀集合 `P^{(k)},S^{(k)},P_all_list,S_all_list` 的顺序一旦确定，所有构造 Hankel / 嵌入 / 预测的地方都必须使用同一顺序；
+   - 不要在中途对这些列表做排序或重新构造映射，否则很容易出现 Hankel 行/列错位的问题（之前脚本里已经踩到过这个坑）。试验大纲6
+2. **数值稳定性**
+   - SVD 可通过 Gram 矩阵 + 幂迭代实现，但要注意对奇异值很小的方向加入阈值截断；
+   - 预测阶段，对 $\widehat p$ 做非负截断 + 归一化是必要的，否则小的负值会影响 TV 计算。
+3. **运行成本**
+   - 对于较长的 L 和较大的 D，不必枚举全部 $2^L$ 串做评估，可以随机抽取一个足够大的测试集（例如 10^4 个）来估计误差；
+   - Hankel 的规模受 $P,S$ cap 控制，`max_prefixes,max_suffixes` 尽量控制在 128–256 以内，防止矩阵 SVD 成本过高。
